Update from curriculum repo

--- a/module-1/lesson-2/Financial_Econometrics_Module_1_Lesson_2.ipynb
+++ b/module-1/lesson-2/Financial_Econometrics_Module_1_Lesson_2.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "fSOyOygR2fFx",
-   "metadata": {
-    "id": "fSOyOygR2fFx"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "markdown",
    "id": "0281c1e1",
-   "metadata": {
-    "id": "0281c1e1"
-   },
+   "metadata": {},
    "source": [
     "# **CORRELATION AND MULTICOLLINEARITY**\n",
     "\n"
@@ -28,9 +24,7 @@
   {
    "cell_type": "markdown",
    "id": "cTReUiZ-QMtb",
-   "metadata": {
-    "id": "cTReUiZ-QMtb"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "|  |  |\n",
@@ -46,9 +40,7 @@
   {
    "cell_type": "markdown",
    "id": "ba6c541c",
-   "metadata": {
-    "id": "ba6c541c"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we learned the basic steps to use linear regression models to analyze KO’s stock excess return. We first explained the types of variables in the model and the tools to check variable correlation. We then built a linear regression model and tested the fit of the model by using various metrics and plots*. \n",
     "\n",
@@ -60,9 +52,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "FiSIYHmphYHu",
-   "metadata": {
-    "id": "FiSIYHmphYHu"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
@@ -79,9 +69,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59Z0I-G7cA0I",
-   "metadata": {
-    "id": "59Z0I-G7cA0I"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Download the dataset\n",
@@ -91,9 +79,7 @@
   {
    "cell_type": "markdown",
    "id": "OfyHCAaz3Bb6",
-   "metadata": {
-    "id": "OfyHCAaz3Bb6"
-   },
+   "metadata": {},
    "source": [
     "## **1. Expanding Independent Variables to Study Correlation**"
    ]
@@ -101,9 +87,7 @@
   {
    "cell_type": "markdown",
    "id": "p69ex4fM3BOt",
-   "metadata": {
-    "id": "p69ex4fM3BOt"
-   },
+   "metadata": {},
    "source": [
     "We are going to add more exogenous variables (independent variables) into our *KO* stock excess return model. We selected five stocks to add to the regression model in order to improve our model performance. The five stocks are:\n",
     "\n",
@@ -129,9 +113,7 @@
   {
    "cell_type": "markdown",
    "id": "NWcUKKNx3BG4",
-   "metadata": {
-    "id": "NWcUKKNx3BG4"
-   },
+   "metadata": {},
    "source": [
     "## **2. Covariance and Correlation**"
    ]
@@ -139,9 +121,7 @@
   {
    "cell_type": "markdown",
    "id": "-ifQH2mU3BBh",
-   "metadata": {
-    "id": "-ifQH2mU3BBh"
-   },
+   "metadata": {},
    "source": [
     "In finance, we are particularly interested in understanding how two variables interact with each other. One popular question is the following: How do two stock returns move together? An answer to this question is provided by the covariance and correlation between two stock returns. **Covariance** is a metric to measure the amount of movement the two variables exhibit. Here is the covariance formula:\n",
     "\n",
@@ -172,9 +152,7 @@
   {
    "cell_type": "markdown",
    "id": "KbrM--4M3A7Q",
-   "metadata": {
-    "id": "KbrM--4M3A7Q"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Correlation Demonstration Graphs**\n",
     "\n",
@@ -185,9 +163,7 @@
   {
    "cell_type": "markdown",
    "id": "hdeHncaF3V87",
-   "metadata": {
-    "id": "hdeHncaF3V87"
-   },
+   "metadata": {},
    "source": [
     "## **3. Collinear Variables**"
    ]
@@ -195,9 +171,7 @@
   {
    "cell_type": "markdown",
    "id": "C3MAe8mX3V4z",
-   "metadata": {
-    "id": "C3MAe8mX3V4z"
-   },
+   "metadata": {},
    "source": [
     "Most of the financial data we use is collected from various sources and is out of our control in terms of how it is generated. Because we cannot control how financial data is generated, oftentimes, many financial variables move together in systematic ways. Such a problem is called **collinearity** for two variables. We also call the two variables **correlated variables**. If there are more than two variables that are correlated, it is called **multicollinearity**. How can we detect multicollinearity? \n",
     "\n",
@@ -208,10 +182,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "EB7Cnsbk-kmQ",
-   "metadata": {
-    "id": "EB7Cnsbk-kmQ",
-    "outputId": "e67a1bb0-be7e-4373-d000-ae158b59ffc5"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Correlation plot of all the variables\n",
@@ -236,9 +207,7 @@
   {
    "cell_type": "markdown",
    "id": "OwbeqlMN3m8G",
-   "metadata": {
-    "id": "OwbeqlMN3m8G"
-   },
+   "metadata": {},
    "source": [
     "Now let's look at the numbers in the correlation matrix. "
    ]
@@ -246,9 +215,7 @@
   {
    "cell_type": "markdown",
    "id": "Klta4u-E3m3b",
-   "metadata": {
-    "id": "Klta4u-E3m3b"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 Dependent Variable and Independent Variables**"
    ]
@@ -256,9 +223,7 @@
   {
    "cell_type": "markdown",
    "id": "rUgA2zCh3c8T",
-   "metadata": {
-    "id": "rUgA2zCh3c8T"
-   },
+   "metadata": {},
    "source": [
     "As seen in the matrix, let's examine our dependent variable. *KO*'s excess return is fairly positively correlated with three independent variables: *Dow 30* Index excess return, Pepsi excess return, and Google excess return. Therefore, we can see that these three variables are pretty good at explaining *KO*'s excess return variation."
    ]
@@ -266,9 +231,7 @@
   {
    "cell_type": "markdown",
    "id": "Bch13wyN3sci",
-   "metadata": {
-    "id": "Bch13wyN3sci"
-   },
+   "metadata": {},
    "source": [
     "### **3.2 Low-Correlated Independent Variables**"
    ]
@@ -276,9 +239,7 @@
   {
    "cell_type": "markdown",
    "id": "tLyY-gpV3sZy",
-   "metadata": {
-    "id": "tLyY-gpV3sZy"
-   },
+   "metadata": {},
    "source": [
     "Now let's turn our focus just on independent variables. First, we'll first look at *KO*'s revenue growth, Walmart excess return and Starbucks' excess return. They are the 3 variables that have low correlation with other independent variables. However, they also have low correlation with our dependent variable: *KO* excess return."
    ]
@@ -286,9 +247,7 @@
   {
    "cell_type": "markdown",
    "id": "NP3fK0lp3yVQ",
-   "metadata": {
-    "id": "NP3fK0lp3yVQ"
-   },
+   "metadata": {},
    "source": [
     "### **3.3 High-Correlated Independent Variables**"
    ]
@@ -296,9 +255,7 @@
   {
    "cell_type": "markdown",
    "id": "ZDPNvpd73ySS",
-   "metadata": {
-    "id": "ZDPNvpd73ySS"
-   },
+   "metadata": {},
    "source": [
     "In the matrix, the *Dow 30* Index excess return has a high correlation with Google's excess return and Bank of America's excess return. Google's excess return also has a high correlation with Pepsi's excess return. With these four fairly correlated independent variables in our model, will they present any issues to our regression result?"
    ]
@@ -306,9 +263,7 @@
   {
    "cell_type": "markdown",
    "id": "hVepYq2a3yOj",
-   "metadata": {
-    "id": "hVepYq2a3yOj"
-   },
+   "metadata": {},
    "source": [
     "## **4. Impact of Multicollinearity in Regression Model**"
    ]
@@ -316,9 +271,7 @@
   {
    "cell_type": "markdown",
    "id": "kU2I7ckg36Q0",
-   "metadata": {
-    "id": "kU2I7ckg36Q0"
-   },
+   "metadata": {},
    "source": [
     "1. If independent variables are highly correlated, the variances, standard errors and covariances of the coefficients from the regression model may be large. Then, the estimates of the coefficient will be less precise because the confidence intervals for the coefficient estimates will be wide.\n",
     "2. The high standard errors for the coefficient estimates also mean the estimates are less likely to be statistically significant. The $R^2$ and adjusted $R^2$ may be high because the whole model is still good. The collinearity issue makes it hard to separate the individual impact from correlated independent variables in the model.\n",
@@ -328,9 +281,7 @@
   {
    "cell_type": "markdown",
    "id": "Z7DT9g-836NS",
-   "metadata": {
-    "id": "Z7DT9g-836NS"
-   },
+   "metadata": {},
    "source": [
     "Let’s run our expanded model and see how the multicollinearity issue influences the model result."
    ]
@@ -338,9 +289,7 @@
   {
    "cell_type": "markdown",
    "id": "8F0Gwec335-o",
-   "metadata": {
-    "id": "8F0Gwec335-o"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: KO Excess Return Regression Model with Eight Independent Variables**\n"
    ]
@@ -349,10 +298,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc9c2e83-4854-42db-afdd-7fe19ab523dc",
-   "metadata": {
-    "id": "cc9c2e83-4854-42db-afdd-7fe19ab523dc",
-    "outputId": "50d657c1-a152-46cc-98b4-61adb4bac453"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# KO Excess Return Regression Model with Eight Independent Variables\n",
@@ -367,10 +313,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fb46b336-2cf2-4908-a726-53904aa12e87",
-   "metadata": {
-    "id": "fb46b336-2cf2-4908-a726-53904aa12e87",
-    "outputId": "31d77c40-52c2-4a62-e093-2ad68145e8f7"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters with high precision\n",
@@ -380,9 +323,7 @@
   {
    "cell_type": "markdown",
    "id": "2_jWWzBg357s",
-   "metadata": {
-    "id": "2_jWWzBg357s"
-   },
+   "metadata": {},
    "source": [
     "In the above results, we can see no independent variable estimates are significant (*p-values* are all larger than 0.05). Even the *Dow 30* Index excess return is not significant in this model. This variable was significant in the model in Lesson 1. The $R^2$ is higher in this model (0.633) compared to the $R^2$ in Lesson 1’s model (0.604). This is expected since we have added more independent variables to this model. However, the adjusted $R^2$ in this model (0.407) is significantly lower than the adjusted $R^2$ in the last model (0.538)."
    ]
@@ -390,9 +331,7 @@
   {
    "cell_type": "markdown",
    "id": "F8IDOcuD4Hz5",
-   "metadata": {
-    "id": "F8IDOcuD4Hz5"
-   },
+   "metadata": {},
    "source": [
     "## **5. Methods to Address Multicollinearity**"
    ]
@@ -400,9 +339,7 @@
   {
    "cell_type": "markdown",
    "id": "x4NE82214HwL",
-   "metadata": {
-    "id": "x4NE82214HwL"
-   },
+   "metadata": {},
    "source": [
     "**Method 1:**\n",
     "\n",
@@ -418,9 +355,7 @@
   {
    "cell_type": "markdown",
    "id": "4mAJdOqk4Hr6",
-   "metadata": {
-    "id": "4mAJdOqk4Hr6"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: Regression Model to Check Multicollinearity Among Independent Variables**\n"
    ]
@@ -429,10 +364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0599e73-d212-41c8-883b-25ac12ac2546",
-   "metadata": {
-    "id": "b0599e73-d212-41c8-883b-25ac12ac2546",
-    "outputId": "397860e6-a66b-469e-a234-8bc5d0822a2c"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Regression model to check multicollinearity among independent variables\n",
@@ -447,10 +379,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d0df95d6-5110-45e2-a1b0-450737d8e535",
-   "metadata": {
-    "id": "d0df95d6-5110-45e2-a1b0-450737d8e535",
-    "outputId": "66defb2b-3098-4c51-e34d-d587f0ac422c"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters with 6 significant digits\n",
@@ -460,9 +389,7 @@
   {
    "cell_type": "markdown",
    "id": "1WEtH0br4S_Y",
-   "metadata": {
-    "id": "1WEtH0br4S_Y"
-   },
+   "metadata": {},
    "source": [
     "Figure 4 shows the regression result. We can see from Figure 4 that $R^2$ and adjusted $R^2$ are high. It means that the information of Dow 30 Index excess return can be mostly explained by the rest of the independent variables. In statistics, the **variance inflation factor (VIF)** is used to determine if an independent variable has a multicollinearity issue. The VIF formula for each independent variable is as follows: \n",
     "\n",
@@ -481,9 +408,7 @@
   {
    "cell_type": "markdown",
    "id": "sTHiILcn4S8G",
-   "metadata": {
-    "id": "sTHiILcn4S8G"
-   },
+   "metadata": {},
    "source": [
     "Let's show the list of the VIF values of all independent variables.\n",
     "\n"
@@ -493,10 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8ecf234e-b430-4d99-85b2-b52e8ffc5632",
-   "metadata": {
-    "id": "8ecf234e-b430-4d99-85b2-b52e8ffc5632",
-    "outputId": "8fff9e00-6af5-41d3-8ca7-84ca4cf1b5cc"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "labels = [\n",
@@ -520,9 +442,7 @@
   {
    "cell_type": "markdown",
    "id": "vioJiiXF4S5B",
-   "metadata": {
-    "id": "vioJiiXF4S5B"
-   },
+   "metadata": {},
    "source": [
     "We can see *Dow 30* Index has a VIF value larger than $5$. Since this variable has a severe multicollinearity issue, we need to dig further into this variable and maybe drop it from the model.\n",
     "\n"
@@ -531,9 +451,7 @@
   {
    "cell_type": "markdown",
    "id": "MF007FFuC4Tb",
-   "metadata": {
-    "id": "MF007FFuC4Tb"
-   },
+   "metadata": {},
    "source": [
     "**Method 3:**\n",
     "\n",
@@ -543,9 +461,7 @@
   {
    "cell_type": "markdown",
    "id": "hn3h-YLt3A3Y",
-   "metadata": {
-    "id": "hn3h-YLt3A3Y"
-   },
+   "metadata": {},
    "source": [
     "## **6. Conclusion**"
    ]
@@ -553,9 +469,7 @@
   {
    "cell_type": "markdown",
    "id": "734886fa",
-   "metadata": {
-    "id": "734886fa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "\n",
@@ -568,10 +482,7 @@
   {
    "cell_type": "markdown",
    "id": "418c151e",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -600,8 +511,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
