--- a/module-2/lesson-1/Financial_Econometrics_Module_2_Lesson_1.ipynb
+++ b/module-2/lesson-1/Financial_Econometrics_Module_2_Lesson_1.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "kLwXkHyRHNSu",
-   "metadata": {
-    "id": "kLwXkHyRHNSu"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "markdown",
    "id": "c26dca9a",
-   "metadata": {
-    "id": "c26dca9a"
-   },
+   "metadata": {},
    "source": [
     "# **OLS REGRESSION ASSUMPTIONS AND WEIGHTED LEAST SQUARE REGRESSION**\n",
     "\n"
@@ -28,9 +24,7 @@
   {
    "cell_type": "markdown",
    "id": "ZhoRqBrbHJTI",
-   "metadata": {
-    "id": "ZhoRqBrbHJTI"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -45,9 +39,7 @@
   {
    "cell_type": "markdown",
    "id": "df2c20ea",
-   "metadata": {
-    "id": "df2c20ea"
-   },
+   "metadata": {},
    "source": [
     "*In the last module, we discussed the applications of linear regression models and some of their assumptions. We learned how to handle multicollinearity when independent variables are highly correlated. We also went through methods to transform variables when they don’t meet the assumptions in a regression model. In this module, we will dive deeper into and offer variations of regression analysis. We will first review main assumptions for an ordinary least square model. Then, we will focus on the heteroskedasticity of a regression model and introduce the weighted least square model as a way to handle the issue.*\n",
     "\n",
@@ -59,9 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cd2e3a27-4b3c-4b1d-8daa-00ce1fec7112",
-   "metadata": {
-    "id": "cd2e3a27-4b3c-4b1d-8daa-00ce1fec7112"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
@@ -79,9 +69,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e3c989e9-10a4-4d63-9c94-36622612b005",
-   "metadata": {
-    "id": "e3c989e9-10a4-4d63-9c94-36622612b005"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import data\n",
@@ -91,9 +79,7 @@
   {
    "cell_type": "markdown",
    "id": "pyeKxFdZNcqb",
-   "metadata": {
-    "id": "pyeKxFdZNcqb"
-   },
+   "metadata": {},
    "source": [
     "## **1. Assumptions of Ordinary Least Square Regression**"
    ]
@@ -101,9 +87,7 @@
   {
    "cell_type": "markdown",
    "id": "RAsh53LtNclx",
-   "metadata": {
-    "id": "RAsh53LtNclx"
-   },
+   "metadata": {},
    "source": [
     "Ordinary least square (OLS) regression models are based on the following assumptions."
    ]
@@ -111,9 +95,7 @@
   {
    "cell_type": "markdown",
    "id": "QVtavSLqNcUp",
-   "metadata": {
-    "id": "QVtavSLqNcUp"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 Linear Relationship**"
    ]
@@ -121,9 +103,7 @@
   {
    "cell_type": "markdown",
    "id": "s74fjk-LNcP6",
-   "metadata": {
-    "id": "s74fjk-LNcP6"
-   },
+   "metadata": {},
    "source": [
     "The OLS regression model assumes that the dependent variable has a linear relationship with independent variables. If $Y$ is the dependent variable and $X_1$, $X_2$ and $X_3$ are independent variables and $e$ is the error term, we can write an OLS regression model as follows:\n",
     "\n",
@@ -135,9 +115,7 @@
   {
    "cell_type": "markdown",
    "id": "QCNUfjWENcLF",
-   "metadata": {
-    "id": "QCNUfjWENcLF"
-   },
+   "metadata": {},
    "source": [
     "### **1.2 No Multicollinearity**"
    ]
@@ -145,9 +123,7 @@
   {
    "cell_type": "markdown",
    "id": "S0HCGsieNcEB",
-   "metadata": {
-    "id": "S0HCGsieNcEB"
-   },
+   "metadata": {},
    "source": [
     "This assumption states that independent variables should be linearly independent to each other. In reality, many independent variables are correlated to each other. Some might have low correlations and some might have high correlations. We learned from the last module that if independent variables are highly correlated, we can check their correlations or VIFs and drop variables. We can also apply principal component analysis or factor analysis to address the issue."
    ]
@@ -155,9 +131,7 @@
   {
    "cell_type": "markdown",
    "id": "ib72jUfPN9gG",
-   "metadata": {
-    "id": "ib72jUfPN9gG"
-   },
+   "metadata": {},
    "source": [
     "### **1.3 Independent Error Terms**"
    ]
@@ -165,9 +139,7 @@
   {
    "cell_type": "markdown",
    "id": "rj-uVrtXN9cN",
-   "metadata": {
-    "id": "rj-uVrtXN9cN"
-   },
+   "metadata": {},
    "source": [
     "This assumption for OLS means that the error terms from each observation will be independent of each other.\n",
     "\n",
@@ -183,9 +155,7 @@
   {
    "cell_type": "markdown",
    "id": "5Hd3JtRVN9Xk",
-   "metadata": {
-    "id": "5Hd3JtRVN9Xk"
-   },
+   "metadata": {},
    "source": [
     "### **1.4 Error Terms are Normally Distributed**"
    ]
@@ -193,9 +163,7 @@
   {
    "cell_type": "markdown",
    "id": "55xgwfuPN9Si",
-   "metadata": {
-    "id": "55xgwfuPN9Si"
-   },
+   "metadata": {},
    "source": [
     "From our example, this means that $e_{1}$ and $e_{2}$ have to be normally distributed."
    ]
@@ -203,9 +171,7 @@
   {
    "cell_type": "markdown",
    "id": "SknsvKA7OTk2",
-   "metadata": {
-    "id": "SknsvKA7OTk2"
-   },
+   "metadata": {},
    "source": [
     "### **1.5 Expected Values of Error Terms are 0**"
    ]
@@ -213,9 +179,7 @@
   {
    "cell_type": "markdown",
    "id": "H9qxwbULOTgh",
-   "metadata": {
-    "id": "H9qxwbULOTgh"
-   },
+   "metadata": {},
    "source": [
     "From our example, the expected values of $e_{1}$ and $e_{2}$ have to be $0$."
    ]
@@ -223,9 +187,7 @@
   {
    "cell_type": "markdown",
    "id": "LNaIx-SSOTbU",
-   "metadata": {
-    "id": "LNaIx-SSOTbU"
-   },
+   "metadata": {},
    "source": [
     "### **1.6 Error Terms Have the Same Variance (Homoscedasticity)**"
    ]
@@ -233,9 +195,7 @@
   {
    "cell_type": "markdown",
    "id": "lCR679DgOTWi",
-   "metadata": {
-    "id": "lCR679DgOTWi"
-   },
+   "metadata": {},
    "source": [
     "When the variances of error terms are constant, we call the error terms **homoscedastic.** If the error terms are not constant, we call them **heteroskedastic.**\n",
     "\n",
@@ -277,9 +237,7 @@
   {
    "cell_type": "markdown",
    "id": "jM81xOnMOTRu",
-   "metadata": {
-    "id": "jM81xOnMOTRu"
-   },
+   "metadata": {},
    "source": [
     "## **2. Weighted Least Square Regression**"
    ]
@@ -287,9 +245,7 @@
   {
    "cell_type": "markdown",
    "id": "orulCuxNPQiB",
-   "metadata": {
-    "id": "orulCuxNPQiB"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 How to Detect Heteroskedasticity**"
    ]
@@ -297,9 +253,7 @@
   {
    "cell_type": "markdown",
    "id": "gDNNRa2_PQdN",
-   "metadata": {
-    "id": "gDNNRa2_PQdN"
-   },
+   "metadata": {},
    "source": [
     "As we mentioned in the last section, heteroskedasticity occurs when error terms in a regression analysis are not constant among observations. After running an OLS regression model, we can draw a scatter plot between predicted values vs. residuals to check for homoscedasticity (or heteroskedasticity). **Residuals** are the differences between measured values of the dependent variables and predicted values of dependent variables from the OLS regression model. "
    ]
@@ -307,9 +261,7 @@
   {
    "cell_type": "markdown",
    "id": "sGidDeLhPQZC",
-   "metadata": {
-    "id": "sGidDeLhPQZC"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Homoscedasticity vs. Heteroskedasticity**\n",
     "\n",
@@ -321,9 +273,7 @@
   {
    "cell_type": "markdown",
    "id": "wkqoneAnPd4y",
-   "metadata": {
-    "id": "wkqoneAnPd4y"
-   },
+   "metadata": {},
    "source": [
     "From Figure 1, we can see the residuals scatter around the $0$ line evenly in the homoscedasticity graph on the left. It means the variance for residuals is very constant along the $0$ line. However, in the heteroskedasticity graph on the right, the residuals are more concentrated when the predicted values are small, and the residuals are more spread out when the predicted values are large. The data shows a cone or a megaphone pattern in the graph. It implies that as the predicted values increase, the variances increase too. The variances are not constant. \n",
     "\n",
@@ -341,9 +291,7 @@
   {
    "cell_type": "markdown",
    "id": "bFcPgmbAPd0L",
-   "metadata": {
-    "id": "bFcPgmbAPd0L"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Basics of Weighted Least Square Regression**"
    ]
@@ -351,9 +299,7 @@
   {
    "cell_type": "markdown",
    "id": "YaBVAS8XPdvy",
-   "metadata": {
-    "id": "YaBVAS8XPdvy"
-   },
+   "metadata": {},
    "source": [
     "When the error term variances are not constant, the covariance matrix for $n$ observations will be like the following:\n",
     "\n",
@@ -391,9 +337,7 @@
   {
    "cell_type": "markdown",
    "id": "BzHPVMiJPdgI",
-   "metadata": {
-    "id": "BzHPVMiJPdgI"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Impact of Data Weighting on Regression Lines**\n",
     "\n",
@@ -405,9 +349,7 @@
   {
    "cell_type": "markdown",
    "id": "Il6dvt2sPdb3",
-   "metadata": {
-    "id": "Il6dvt2sPdb3"
-   },
+   "metadata": {},
    "source": [
     "From Figure 2, $Y$ is the dependent variable and $X$ is the independent variable of a regression. Figure 2 shows the scatterplot of the two variables. From the graph, we can see the data is not homoscedastic because there is more variation of $Y$ when $X$ increases. If we do not apply weights to the data and run an OLS regression model, then the regression line will try to treat all data points equally. The result line will be like the green line. The green line is higher and steeper towards the data point on the top of the graph because OLS treats every point equally. However, if we apply weights to all the data points, we will reduce the impact of those points that are further away from where most of the points cluster together. The weighted least square (WLS) regression line will be like the blue line. WLS focuses more on the data points that are close to each other and gives lower weight to points that are farther away. Hence, WLS is also a good method to handle **outliers**. When there is an outlier in the dataset, by the method of WLS, it will give less weight so this outlier will have less impact on the result of the WLS regression model.\n",
     "\n",
@@ -417,9 +359,7 @@
   {
    "cell_type": "markdown",
    "id": "4iLLsNszPdYM",
-   "metadata": {
-    "id": "4iLLsNszPdYM"
-   },
+   "metadata": {},
    "source": [
     "### **2.3 How Do We Estimate Weights?**"
    ]
@@ -427,9 +367,7 @@
   {
    "cell_type": "markdown",
    "id": "WoIZp13yYTxL",
-   "metadata": {
-    "id": "WoIZp13yYTxL"
-   },
+   "metadata": {},
    "source": [
     "We don’t always know the numbers of the weight. What should we do when the weights are unknown? In the last section, we learned that the weight is proportionally inverse to the variance of each error term. \n",
     "\n",
@@ -463,9 +401,7 @@
   {
    "cell_type": "markdown",
    "id": "m0iqFGPzYTsa",
-   "metadata": {
-    "id": "m0iqFGPzYTsa"
-   },
+   "metadata": {},
    "source": [
     "## **3. Foreign Exchange Market Analysis Using Weighted Least Square Regression**"
    ]
@@ -473,9 +409,7 @@
   {
    "cell_type": "markdown",
    "id": "Gbh3B88BYTaB",
-   "metadata": {
-    "id": "Gbh3B88BYTaB"
-   },
+   "metadata": {},
    "source": [
     "Now, let’s look at an example to learn how to run weighted least square regression.\n",
     "\n",
@@ -490,9 +424,7 @@
   {
    "cell_type": "markdown",
    "id": "8a0om21jYTVO",
-   "metadata": {
-    "id": "8a0om21jYTVO"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: U.S. Dollar Index Daily Return and 10-Year Treasury Bond Yield Daily Return Scatter Plot**\n"
    ]
@@ -501,10 +433,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "221d6081-7078-4f43-af17-e9a6e4543cb6",
-   "metadata": {
-    "id": "221d6081-7078-4f43-af17-e9a6e4543cb6",
-    "outputId": "80179c68-9578-4322-e6fa-0bdb45967a8c"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create scatter plot\n",
@@ -516,9 +445,7 @@
   {
    "cell_type": "markdown",
    "id": "XPUFYU01YTQR",
-   "metadata": {
-    "id": "XPUFYU01YTQR"
-   },
+   "metadata": {},
    "source": [
     "From Figure 3, we can see two interesting patterns. First, they seem to have a positive relationship. We can see as *DXY* increases, *X10Y_TBY* increases too. Secondly, as *DXY* increases, the data points spread out more. It forms a cone or megaphone shape. It indicates that there might be a heteroskedasticity issue.\n",
     "\n",
@@ -528,9 +455,7 @@
   {
    "cell_type": "markdown",
    "id": "49pxHG1iYTLi",
-   "metadata": {
-    "id": "49pxHG1iYTLi"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: OLS Regression Result**\n"
    ]
@@ -539,10 +464,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "298181a4-8d5d-4320-854e-87d623f63e1a",
-   "metadata": {
-    "id": "298181a4-8d5d-4320-854e-87d623f63e1a",
-    "outputId": "14fd3654-1ac6-4f28-b596-f4f3c8ec71b8"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# OLS model\n",
@@ -554,10 +476,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "874e911b-e74f-4d06-aee5-09b0e9ebb596",
-   "metadata": {
-    "id": "874e911b-e74f-4d06-aee5-09b0e9ebb596",
-    "outputId": "37bcfbd6-314b-4f2b-bdc0-b5613c0ecfd2"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters with high precision\n",
@@ -567,9 +486,7 @@
   {
    "cell_type": "markdown",
    "id": "c5Lte0yeaNxP",
-   "metadata": {
-    "id": "c5Lte0yeaNxP"
-   },
+   "metadata": {},
    "source": [
     "From Figure 4, we can see that *DXY* and *X10Y_TBY* have a positive coefficient, which is consistent with what we saw in the scatter plot. The coefficient is also significant. The $R^2$ is not very good for this simple regression model. Now, let’s check the scatter plot for residuals and fitted values of this OLS model to see if there is a heteroskedasticity issue."
    ]
@@ -577,9 +494,7 @@
   {
    "cell_type": "markdown",
    "id": "Ask9_ArYaNsu",
-   "metadata": {
-    "id": "Ask9_ArYaNsu"
-   },
+   "metadata": {},
    "source": [
     "**Figure 5: Scatter Plot for OLS Fitted Values and OLS Residuals**\n"
    ]
@@ -608,9 +523,7 @@
   {
    "cell_type": "markdown",
    "id": "yJTl5mzCaNl_",
-   "metadata": {
-    "id": "yJTl5mzCaNl_"
-   },
+   "metadata": {},
    "source": [
     "Figure 5 shows that there is more variation in residuals when fitted values are negative than when fitted values are positive, especially when fitted values are below -0.002. The scatter plot indicates there might be a heteroskedasticity issue. Let’s run a Breusch-Pagan test to double-check the hypothesis."
    ]
@@ -618,9 +531,7 @@
   {
    "cell_type": "markdown",
    "id": "ekbrRlTvaNhD",
-   "metadata": {
-    "id": "ekbrRlTvaNhD"
-   },
+   "metadata": {},
    "source": [
     "**Figure 6: Breusch-Pagan Test Result**\n"
    ]
@@ -629,10 +540,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0beb9843-7661-478c-940a-1faa7ff196db",
-   "metadata": {
-    "id": "0beb9843-7661-478c-940a-1faa7ff196db",
-    "outputId": "97b8912d-acea-4ac7-9723-7056ee9c2a28"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Breusch-Pagan Test\n",
@@ -644,9 +552,7 @@
   {
    "cell_type": "markdown",
    "id": "nw2JW1NDaNb5",
-   "metadata": {
-    "id": "nw2JW1NDaNb5"
-   },
+   "metadata": {},
    "source": [
     "The test result from Figure 6 also confirms the existence of heteroskedasticity because the $p$-value is less than 0.05. Based on the above information, we will run the model with weighted least square, with the weight generated from the formula from the last section."
    ]
@@ -654,9 +560,7 @@
   {
    "cell_type": "markdown",
    "id": "7yiW8IYwtfcS",
-   "metadata": {
-    "id": "7yiW8IYwtfcS"
-   },
+   "metadata": {},
    "source": [
     "**Figure 7: WLS Result**\n"
    ]
@@ -665,9 +569,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4780c465-1461-4a1c-b7f1-3cc9d112b13e",
-   "metadata": {
-    "id": "4780c465-1461-4a1c-b7f1-3cc9d112b13e"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# WLS regression result\n",
@@ -696,9 +598,7 @@
   {
    "cell_type": "markdown",
    "id": "lH35AIM_tfW1",
-   "metadata": {
-    "id": "lH35AIM_tfW1"
-   },
+   "metadata": {},
    "source": [
     "From Figure 7, we can see *X10Y_TBY* still has a positive coefficient and the coefficient is still significant. The $R^2$ also improves a lot from 0.03 to 0.10. Now, let’s look at the residuals and fitted values from WLS to see if we can correct the heteroskedasticity issue."
    ]
@@ -706,9 +606,7 @@
   {
    "cell_type": "markdown",
    "id": "nKyCydTkPM2q",
-   "metadata": {
-    "id": "nKyCydTkPM2q"
-   },
+   "metadata": {},
    "source": [
     "**Figure 8: WLS Standardized Residuals and Fitted Values Scatter Plot**\n"
    ]
@@ -717,10 +615,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b49eaf33-9e67-4a8e-bf5f-8d8a286e4211",
-   "metadata": {
-    "id": "b49eaf33-9e67-4a8e-bf5f-8d8a286e4211",
-    "outputId": "cee71200-a1ad-4aac-bb5c-b8c5f7e08a37"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# WLS fitted values and standardized residuals\n",
@@ -738,9 +633,7 @@
   {
    "cell_type": "markdown",
    "id": "1TjtwcPste_m",
-   "metadata": {
-    "id": "1TjtwcPste_m"
-   },
+   "metadata": {},
    "source": [
     "## **4. Derivation of Coefficients for Weighted Least Square Regression**"
    ]
@@ -748,9 +641,7 @@
   {
    "cell_type": "markdown",
    "id": "b7904db4",
-   "metadata": {
-    "id": "b7904db4"
-   },
+   "metadata": {},
    "source": [
     "We first use a single regression model to derive coefficients for weighted least square regression.\n",
     "\n",
@@ -818,9 +709,7 @@
   {
    "cell_type": "markdown",
    "id": "5f29b50d",
-   "metadata": {
-    "id": "5f29b50d"
-   },
+   "metadata": {},
    "source": [
     "## **5. Conclusion**\n",
     "\n",
@@ -833,10 +722,7 @@
   {
    "cell_type": "markdown",
    "id": "994930ab-13c3-4a0c-99cd-766e819c087a",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -864,8 +750,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
