--- a/module-2/lesson-2/Financial_Econometrics_Module_2_Lesson_2.ipynb
+++ b/module-2/lesson-2/Financial_Econometrics_Module_2_Lesson_2.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "wlWgQpSzJ3w7",
-   "metadata": {
-    "id": "wlWgQpSzJ3w7"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "markdown",
    "id": "e28dce36",
-   "metadata": {
-    "id": "e28dce36"
-   },
+   "metadata": {},
    "source": [
     "# **ROBUST REGRESSION**\n",
     "\n"
@@ -28,9 +24,7 @@
   {
    "cell_type": "markdown",
    "id": "ebtyjC92J-UT",
-   "metadata": {
-    "id": "ebtyjC92J-UT"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -45,9 +39,7 @@
   {
    "cell_type": "markdown",
    "id": "151c44d3",
-   "metadata": {
-    "id": "151c44d3"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we discussed how to use weights to handle unequal error terms from observations (heteroskedasticity) in a regression model. We also briefly mentioned that using weights can deal with outlier issues as well. In this lesson, we will dive deeper into how outliers can influence OLS regression model results. We will then propose an adjusted regression method to handle outliers: robust regression. There are several methods for robust regression. We will focus on two types: M-estimation and L1 regression.*\n",
     "\n"
@@ -57,9 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2349a852-654c-4ceb-aba3-409c7950d8d8",
-   "metadata": {
-    "id": "2349a852-654c-4ceb-aba3-409c7950d8d8"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
@@ -77,9 +67,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "266cdff7-bc25-4120-b74e-78350efaab03",
-   "metadata": {
-    "id": "266cdff7-bc25-4120-b74e-78350efaab03"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import data\n",
@@ -89,9 +77,7 @@
   {
    "cell_type": "markdown",
    "id": "4pgyRwFQRKje",
-   "metadata": {
-    "id": "4pgyRwFQRKje"
-   },
+   "metadata": {},
    "source": [
     "## **1. Problems of Extreme Points for Ordinary Least Square (OLS) Regression**"
    ]
@@ -99,9 +85,7 @@
   {
    "cell_type": "markdown",
    "id": "wK0qKfc_RKZm",
-   "metadata": {
-    "id": "wK0qKfc_RKZm"
-   },
+   "metadata": {},
    "source": [
     "In many financial problems, it is common to have extreme points in the dataset for analysis. These can come from measurement error by the person who records the measurements, incorrect data input, or simply an outlier. Not all extreme points are bad data points. In asset return analysis, abnormal returns show up every now and again. These abnormal returns are actually an interesting topic for a lot of researchers. Assume that, after cleaning up the dataset and removing all the bad data points, you still find extreme points in your dataset. What should you do?\n",
     "\n",
@@ -111,9 +95,7 @@
   {
    "cell_type": "markdown",
    "id": "HHYos68ARKMB",
-   "metadata": {
-    "id": "HHYos68ARKMB"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Impact of Outliers and Leverage Points on OLS Regression**\n",
     "\n",
@@ -123,9 +105,7 @@
   {
    "cell_type": "markdown",
    "id": "3l7Du9WCRKH9",
-   "metadata": {
-    "id": "3l7Du9WCRKH9"
-   },
+   "metadata": {},
    "source": [
     "From Figure 1, we can see an outlier in the dataset; this outlier will pull the regression line closer to the outlier because the outlier has the largest distance from the regression line compared to other data points. We know from the required reading from Module 1, Lesson 1 that OLS regression minimizes the squared sum of the residuals (the distance between the data points and the regression line) to obtain coefficient estimates. Since the distance between the outlier and the regression line is the largest, the minimization mechanism will naturally pull the line closer to the outlier in order to get the smallest sum of all distances from data points to the line. \n",
     "\n",
@@ -137,9 +117,7 @@
   {
    "cell_type": "markdown",
    "id": "rhrDqaIeRKDo",
-   "metadata": {
-    "id": "rhrDqaIeRKDo"
-   },
+   "metadata": {},
    "source": [
     "## **2. Robust Regression**"
    ]
@@ -147,9 +125,7 @@
   {
    "cell_type": "markdown",
    "id": "hN9tYt_TRf6Z",
-   "metadata": {
-    "id": "hN9tYt_TRf6Z"
-   },
+   "metadata": {},
    "source": [
     "In the last lesson, we learned that a weighted least square regression model applies weight to its objective function in order to reduce the impact of extreme points. In robust regression, different objective functions are applied to reduce the impact of extreme points. There are several methods for choosing an objective function using robust regression. In this lesson, we will focus on M-estimation and will briefly talk about other methods later on in this lesson."
    ]
@@ -157,9 +133,7 @@
   {
    "cell_type": "markdown",
    "id": "69BWC392Rf1H",
-   "metadata": {
-    "id": "69BWC392Rf1H"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 M-Estimation**"
    ]
@@ -167,9 +141,7 @@
   {
    "cell_type": "markdown",
    "id": "yk80zeB0Rffe",
-   "metadata": {
-    "id": "yk80zeB0Rffe"
-   },
+   "metadata": {},
    "source": [
     "#### **2.1.1 Basics of M-Estimation**"
    ]
@@ -177,9 +149,7 @@
   {
    "cell_type": "markdown",
    "id": "C3GSO4jpRfXu",
-   "metadata": {
-    "id": "C3GSO4jpRfXu"
-   },
+   "metadata": {},
    "source": [
     "We introduced the concept of objective function in the last lesson. An **objective function** is a function we would like to maximize or minimize. In a simple OLS regression, we minimize the following objective function:\n",
     "\n",
@@ -234,9 +204,7 @@
   {
    "cell_type": "markdown",
    "id": "aDdxj75nRfSt",
-   "metadata": {
-    "id": "aDdxj75nRfSt"
-   },
+   "metadata": {},
    "source": [
     "#### **2.1.2 $\\rho()$ Functions: Huber Method and Bisquare Method**"
    ]
@@ -244,9 +212,7 @@
   {
    "cell_type": "markdown",
    "id": "J3upYI0vRfNP",
-   "metadata": {
-    "id": "J3upYI0vRfNP"
-   },
+   "metadata": {},
    "source": [
     "After setting out the steps to run an M-estimation using IRLS in the last section, we now need to find weights. How should we find weights? From the last section, we know weight functions can be derived from $\\rho $ functions. In this section, we are going to introduce two commonly used $\\rho $ functions: the Huber method and bisquare method. We will use them to derive weight functions.\n",
     "\n",
@@ -276,9 +242,7 @@
   {
    "cell_type": "markdown",
    "id": "wMTNhkcCRJ9W",
-   "metadata": {
-    "id": "wMTNhkcCRJ9W"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Huber Method Weight Function Chart**\n",
     "\n",
@@ -288,9 +252,7 @@
   {
    "cell_type": "markdown",
    "id": "nr5BjeHbhGy2",
-   "metadata": {
-    "id": "nr5BjeHbhGy2"
-   },
+   "metadata": {},
    "source": [
     "From Figure 2, we can see that the weights for data points are the same when their errors are within (-1.345, 1.345). Once the error passes the band, the value of the weight starts to drop quickly, which will give less weight to outliers.\n",
     "\n",
@@ -318,9 +280,7 @@
   {
    "cell_type": "markdown",
    "id": "ptuAtrg1hGvf",
-   "metadata": {
-    "id": "ptuAtrg1hGvf"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: Bisquare Method Weight Function Chart**\n",
     "\n",
@@ -330,9 +290,7 @@
   {
    "cell_type": "markdown",
    "id": "749e0seihGrF",
-   "metadata": {
-    "id": "749e0seihGrF"
-   },
+   "metadata": {},
    "source": [
     "We can see from Figure 3 that the bisquare method de-emphasizes outliers faster than the Huber method. The bisquare method starts to decrease the weight when error begins to show up. \n",
     "\n",
@@ -356,9 +314,7 @@
   {
    "cell_type": "markdown",
    "id": "p1dr-MxwhGm2",
-   "metadata": {
-    "id": "p1dr-MxwhGm2"
-   },
+   "metadata": {},
    "source": [
     "#### **2.1.3 Pros and Cons of M-Estimators**"
    ]
@@ -366,9 +322,7 @@
   {
    "cell_type": "markdown",
    "id": "_KPacEpKwHTf",
-   "metadata": {
-    "id": "_KPacEpKwHTf"
-   },
+   "metadata": {},
    "source": [
     "Both the Huber method and bisquare method are better regression methods than classic OLS regression because the Huber method and bisquare method assign less weight to outliers. \n",
     "\n",
@@ -382,9 +336,7 @@
   {
    "cell_type": "markdown",
    "id": "corfaLENwHP1",
-   "metadata": {
-    "id": "corfaLENwHP1"
-   },
+   "metadata": {},
    "source": [
     "## **3. Foreign Exchange Market Analysis Using Robust Regression**"
    ]
@@ -392,9 +344,7 @@
   {
    "cell_type": "markdown",
    "id": "Pq6QeJQLwHLv",
-   "metadata": {
-    "id": "Pq6QeJQLwHLv"
-   },
+   "metadata": {},
    "source": [
     "We will continue our example from the last lesson. In the last lesson, we used WLS regression to understand how U.S. 10-year treasury bond yield would influence the U.S. Dollar Index. In this lesson, we are going run robust regression on the same example. We will use the Huber method and bisquare method respectively and compare the results. I will also reproduce the WLS result here to compare with the Huber method and bisquare method.\n"
    ]
@@ -402,9 +352,7 @@
   {
    "cell_type": "markdown",
    "id": "DEgTgiEiwHHz",
-   "metadata": {
-    "id": "DEgTgiEiwHHz"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: Huber Method - U.S. Dollar Index Daily Return On 10-Year Treasury Bond Yield**\n"
    ]
@@ -413,10 +361,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bfe27239-a4c7-4349-918d-5ac33cb95494",
-   "metadata": {
-    "id": "bfe27239-a4c7-4349-918d-5ac33cb95494",
-    "outputId": "4b36b19c-07f5-4700-8b73-5034086b6869"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Robust Regression model\n",
@@ -430,9 +375,7 @@
   {
    "cell_type": "markdown",
    "id": "ErjQqMFfwj2T",
-   "metadata": {
-    "id": "ErjQqMFfwj2T"
-   },
+   "metadata": {},
    "source": [
     "**Figure 5: Bisquare Method - U.S. Dollar Index Daily Return On 10-Year Treasury Bond Yield**\n"
    ]
@@ -441,10 +384,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7224f745-8380-43cf-a1e7-dd88edd06636",
-   "metadata": {
-    "id": "7224f745-8380-43cf-a1e7-dd88edd06636",
-    "outputId": "44b5a46b-6a26-4b55-e7ae-4b9770e8f8da"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Bisquare Method model\n",
@@ -460,9 +400,7 @@
   {
    "cell_type": "markdown",
    "id": "gqVGgyImwjyF",
-   "metadata": {
-    "id": "gqVGgyImwjyF"
-   },
+   "metadata": {},
    "source": [
     "**Figure 6: WLS - U.S. Dollar Index Daily Return On 10 Year Treasury Bond Yield**\n"
    ]
@@ -471,10 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1efd7cca-c2ca-40df-91eb-5b1c87304eb9",
-   "metadata": {
-    "id": "1efd7cca-c2ca-40df-91eb-5b1c87304eb9",
-    "outputId": "64d3cc12-88ec-471f-fb26-ca7bbe25f76f"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# WLS model\n",
@@ -504,9 +439,7 @@
   {
    "cell_type": "markdown",
    "id": "ZKXK7m8fwjto",
-   "metadata": {
-    "id": "ZKXK7m8fwjto"
-   },
+   "metadata": {},
    "source": [
     "Let’s compare the coefficients of *x10Y_TBY* from the three methods. We can see that WLS and bisquare method have similar coefficients for *x10Y_TBY* (WLS: 0.0516; Bisquare: 0.0515). It is easy to understand because both WLS and bisquare method give different weights to all data points whereas Huber gives different weights only after a residual is big enough. \n",
     "\n",
@@ -516,9 +449,7 @@
   {
    "cell_type": "markdown",
    "id": "z2jnapVvwjoh",
-   "metadata": {
-    "id": "z2jnapVvwjoh"
-   },
+   "metadata": {},
    "source": [
     "**Figure 7: Scatter Plot of U.S. Dollar Index Daily Return and 10-Year Treasury Bond Yield Daily Return with Different Regression Lines**\n"
    ]
@@ -527,10 +458,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7d8c30e-d591-43f7-bdb3-bb4151b0e462",
-   "metadata": {
-    "id": "c7d8c30e-d591-43f7-bdb3-bb4151b0e462",
-    "outputId": "41d125b3-e40f-4191-b4be-a58afc5821b0"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Scatter Plot of U.S. Dollar Index Daily Return and 10-Year Treasury Bond Yield Daily Return with Different Regression Lines\n",
@@ -551,9 +479,7 @@
   {
    "cell_type": "markdown",
    "id": "GXUloUVQw4Uj",
-   "metadata": {
-    "id": "GXUloUVQw4Uj"
-   },
+   "metadata": {},
    "source": [
     "From Figure 7, we can see that the WLS regression line and the bisquare regression line almost overlap. These two lines are also furthest away from outliers at the upper left of the scatter plot. The OLS regression line and Huber regression line are flatter and are pulled closer to the outliers at the upper left. The plot shows evidence again that WLS and the bisquare method apply weights to de-emphasize any data point that has a non-zero residual. OLS applies the weight of $1$, and the Huber method applies weight after data points whose residuals are larger than $k$. Different weight schemes would lead to different regression results. After studying the above results, either WLS or the bisquare method is a better result than OLS or the Huber method.\n"
    ]
@@ -561,9 +487,7 @@
   {
    "cell_type": "markdown",
    "id": "134685f6",
-   "metadata": {
-    "id": "134685f6"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**\n",
     "\n",
@@ -574,10 +498,7 @@
   {
    "cell_type": "markdown",
    "id": "a6d787b5-40f5-4f6e-8635-4014bd99845a",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -606,8 +527,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
