--- a/module-2/lesson-3/Financial_Econometrics_Module_2_Lesson_3.ipynb
+++ b/module-2/lesson-3/Financial_Econometrics_Module_2_Lesson_3.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "uMwEUaHuPWt3",
-   "metadata": {
-    "id": "uMwEUaHuPWt3"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "markdown",
    "id": "e236d4e8",
-   "metadata": {
-    "id": "e236d4e8"
-   },
+   "metadata": {},
    "source": [
     "# **PENALIZED REGRESSION**\n",
     "\n"
@@ -28,9 +24,7 @@
   {
    "cell_type": "markdown",
    "id": "e02zqa0vPgOm",
-   "metadata": {
-    "id": "e02zqa0vPgOm"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -45,9 +39,7 @@
   {
    "cell_type": "markdown",
    "id": "6f91a2d5",
-   "metadata": {
-    "id": "6f91a2d5"
-   },
+   "metadata": {},
    "source": [
     "*In the last two lessons, we talked about how to use weighted least regression and robust regression to handle unequal variance and outlier problems. In this lesson, we are going to study ridge regression and lasso regression. These two methods are usually used to tackle high dimensional data and overfitting issues. These issues in general happen due to too many variables or when many variables are correlated. We will first discuss these data issues and then introduce ridge regression and lasso regression. We will later use the dollar index example to run ridge regression and lasso regression.*\n",
     "\n"
@@ -57,9 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d468dee-5e6b-472b-b477-38e52b51f077",
-   "metadata": {
-    "id": "4d468dee-5e6b-472b-b477-38e52b51f077"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
@@ -73,9 +63,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8a3c7d9c-576b-4f0c-9dd9-61a38d77537e",
-   "metadata": {
-    "id": "8a3c7d9c-576b-4f0c-9dd9-61a38d77537e"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import data\n",
@@ -85,9 +73,7 @@
   {
    "cell_type": "markdown",
    "id": "6y9zDZuzxtcU",
-   "metadata": {
-    "id": "6y9zDZuzxtcU"
-   },
+   "metadata": {},
    "source": [
     "## **1. High Dimensional Data and Overfitting**"
    ]
@@ -95,9 +81,7 @@
   {
    "cell_type": "markdown",
    "id": "tF_NlJ-lxtYd",
-   "metadata": {
-    "id": "tF_NlJ-lxtYd"
-   },
+   "metadata": {},
    "source": [
     "In the field of finance, a researcher can sometimes have a large number of independent variables at hand to analyze the dependent variable. For example, in risk management, one can have 300 or 400 potential variables to run a stress test for a bank. With this large number of independent variables, it is also likely that the number of variables would exceed the number of observations. **High dimensional data** is a dataset in which the number of variables is larger than the number of observations. If a dataset has $p$ variables and $n$ observations and $p > n$, then this dataset is high dimensional data. In machine learning literature, independent variables are also called **predictors,** **covariates**, **attributes** or **features**. In this course, we will refer to them as independent variables. \n",
     "\n",
@@ -107,9 +91,7 @@
   {
    "cell_type": "markdown",
    "id": "y8UU2ajaxtU-",
-   "metadata": {
-    "id": "y8UU2ajaxtU-"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Simple Model vs Complicated Model**\n",
     "\n",
@@ -119,9 +101,7 @@
   {
    "cell_type": "markdown",
    "id": "3pQXdvuaxtRA",
-   "metadata": {
-    "id": "3pQXdvuaxtRA"
-   },
+   "metadata": {},
    "source": [
     "From Figure 1, you can see there are two models to model the same data points. The model on the left is a very simple model and only has one independent variable. The model on the right is complicated and has four independent variables. This model almost perfectly fits all data points. This model not only describes the overall trend but also captures the noise. As such, the model on the right presents an **overfitting** issue. An **overfitted** model is a model not only trying to find a relationship between the dependent variable and the independent variables but also trying to model the random error. When overfitting happens, usually the coefficients of the model are far away from $0$. \n",
     "\n",
@@ -133,9 +113,7 @@
   {
    "cell_type": "markdown",
    "id": "8ul3l6suxtNb",
-   "metadata": {
-    "id": "8ul3l6suxtNb"
-   },
+   "metadata": {},
    "source": [
     "## **2. Penalized Regression**"
    ]
@@ -143,9 +121,7 @@
   {
    "cell_type": "markdown",
    "id": "of99E2-jxtI_",
-   "metadata": {
-    "id": "of99E2-jxtI_"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 How Do We Tackle the Issue of Too Many Variables?**"
    ]
@@ -153,9 +129,7 @@
   {
    "cell_type": "markdown",
    "id": "fEnQ1VnYxtEo",
-   "metadata": {
-    "id": "fEnQ1VnYxtEo"
-   },
+   "metadata": {},
    "source": [
     "We talked about the problem of having too many variables or high dimensional data for regression analysis in the last section. What can we do about this issue?\n",
     "\n",
@@ -167,9 +141,7 @@
   {
    "cell_type": "markdown",
    "id": "hiHzcsvHyOIH",
-   "metadata": {
-    "id": "hiHzcsvHyOIH"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Basics of Penalized Regression**"
    ]
@@ -177,9 +149,7 @@
   {
    "cell_type": "markdown",
    "id": "SAORHphPyOCS",
-   "metadata": {
-    "id": "SAORHphPyOCS"
-   },
+   "metadata": {},
    "source": [
     "When we have too many variables and use all of them to build a linear regression model, we run the risk of overfitting the model. In an OLS regression model, we try to minimize the following objective function:\n",
     "\n",
@@ -193,9 +163,7 @@
   {
    "cell_type": "markdown",
    "id": "BGokuEpbyN6j",
-   "metadata": {
-    "id": "BGokuEpbyN6j"
-   },
+   "metadata": {},
    "source": [
     "#### **2.2.1 Penalty Function**"
    ]
@@ -203,9 +171,7 @@
   {
    "cell_type": "markdown",
    "id": "wzytdIbqyNzD",
-   "metadata": {
-    "id": "wzytdIbqyNzD"
-   },
+   "metadata": {},
    "source": [
     "$f() $ is called a **regularization function** or **penalty function**. A **penalty function** will try to pull the value of a coefficient close to $0$ if the value is too large. The function basically tries to reduce the impact of an independent variable in the model if the coefficient of this independent variable is too large. It is a function that penalizes the existence of an independent variable in a model by suppressing the value of its coefficient. In an extreme case, this function may pull the coefficient to $0$. When the coefficient is $0$, it means the independent variable is removed from the model. The action of pulling a coefficient value towards $0$ or to a certain preset value is called **shrinkage**, in that you shrink a coefficient.\n",
     "\n",
@@ -215,9 +181,7 @@
   {
    "cell_type": "markdown",
    "id": "X4V9tnMxyNuF",
-   "metadata": {
-    "id": "X4V9tnMxyNuF"
-   },
+   "metadata": {},
    "source": [
     "#### **2.2.2 Regularization Parameter**"
    ]
@@ -225,9 +189,7 @@
   {
    "cell_type": "markdown",
    "id": "jPbL07W9yNp3",
-   "metadata": {
-    "id": "jPbL07W9yNp3"
-   },
+   "metadata": {},
    "source": [
     "What is $\\lambda$? $\\lambda$ is a **regularization parameter**. It controls the **trade-off of variance and bias** for coefficients. What does this mean? In an ideal model, we would like to achieve an accuracy for the estimated coefficients that is as high as possible and as low as possible for standard errors of such estimated coefficients.\n",
     "\n",
@@ -241,9 +203,7 @@
   {
    "cell_type": "markdown",
    "id": "9HyPQkRTyNlB",
-   "metadata": {
-    "id": "9HyPQkRTyNlB"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Trade-Off Graph between Variance and Bias in Penalized Regression**\n",
     "\n",
@@ -253,9 +213,7 @@
   {
    "cell_type": "markdown",
    "id": "4vfwFvDzyNhQ",
-   "metadata": {
-    "id": "4vfwFvDzyNhQ"
-   },
+   "metadata": {},
    "source": [
     "From Figure 2, we can see that as $\\lambda$ goes to $0$, the error from variance gets larger and the error from bias gets smaller and vice versa. We would like to find the middle point of $\\lambda$ that will give us the lowest total error. So how can we find the optimal $\\lambda$?\n"
    ]
@@ -263,9 +221,7 @@
   {
    "cell_type": "markdown",
    "id": "rLVfk2AYz1_L",
-   "metadata": {
-    "id": "rLVfk2AYz1_L"
-   },
+   "metadata": {},
    "source": [
     "#### **2.2.3 Standardize Independent Variables**"
    ]
@@ -273,9 +229,7 @@
   {
    "cell_type": "markdown",
    "id": "LQY9zvkiz13N",
-   "metadata": {
-    "id": "LQY9zvkiz13N"
-   },
+   "metadata": {},
    "source": [
     "Before moving on to discuss how to find the optimal $\\lambda$, there are steps we need to take to prepare the dataset before we model. The first thing is that the penalty function shouldn’t include the intercept, $\\beta_{0}$. In general, we don’t penalize $\\beta_{0}$.\n",
     "\n",
@@ -287,9 +241,7 @@
   {
    "cell_type": "markdown",
    "id": "QIl49BG1z1vi",
-   "metadata": {
-    "id": "QIl49BG1z1vi"
-   },
+   "metadata": {},
    "source": [
     "#### **2.2.4 K-Fold Cross Validation to Find Optimal $\\lambda$**"
    ]
@@ -297,9 +249,7 @@
   {
    "cell_type": "markdown",
    "id": "yFmep8apz1rg",
-   "metadata": {
-    "id": "yFmep8apz1rg"
-   },
+   "metadata": {},
    "source": [
     "How can we find the optimal $\\lambda$? We can use a method called **k-fold cross validation**. You can choose any number for $k$. Usually, 5 and 10 are popular numbers for $k$. Let’s use 5-fold cross validation as an example to explain how it works.\n",
     "\n",
@@ -337,9 +287,7 @@
   {
    "cell_type": "markdown",
    "id": "uGuwJkV9z1mw",
-   "metadata": {
-    "id": "uGuwJkV9z1mw"
-   },
+   "metadata": {},
    "source": [
     "## **3. Ridge Regression**"
    ]
@@ -347,9 +295,7 @@
   {
    "cell_type": "markdown",
    "id": "ymS-C3tr1hZe",
-   "metadata": {
-    "id": "ymS-C3tr1hZe"
-   },
+   "metadata": {},
    "source": [
     "In the last section, we talked about the basics of penalized regressions. We discussed regularization parameters, steps to process data, and k-fold cross validation. Now, we are going to look at various functions for a penalized regression objective function. We will start with ridge regression.\n",
     "\n",
@@ -372,9 +318,7 @@
   {
    "cell_type": "markdown",
    "id": "ZPOxcQln1hV4",
-   "metadata": {
-    "id": "ZPOxcQln1hV4"
-   },
+   "metadata": {},
    "source": [
     "## **4. Lasso Regression**"
    ]
@@ -382,9 +326,7 @@
   {
    "cell_type": "markdown",
    "id": "JUNPZoSi1hHJ",
-   "metadata": {
-    "id": "JUNPZoSi1hHJ"
-   },
+   "metadata": {},
    "source": [
     "**Lasso regression** is short for **least absolute shrinkage and selection operator**. Lasso regression has the following penalty function:\n",
     "\n",
@@ -402,9 +344,7 @@
   {
    "cell_type": "markdown",
    "id": "Tj6Wkqp81hDm",
-   "metadata": {
-    "id": "Tj6Wkqp81hDm"
-   },
+   "metadata": {},
    "source": [
     "## **5. An Example: Foreign Exchange Market and Penalized Regression**"
    ]
@@ -412,9 +352,7 @@
   {
    "cell_type": "markdown",
    "id": "Zn5J_-W91g-2",
-   "metadata": {
-    "id": "Zn5J_-W91g-2"
-   },
+   "metadata": {},
    "source": [
     "We've talked a lot about ridge regression and lasso regression in the previous sections. Let’s apply these two regression methods to our foreign exchange market example and see how they perform. In order to have a solid comparison for different regression methods, we’ll also run an OLS regression as the base result and compare results from OLS, ridge regression and lasso regression.\n",
     "\n",
@@ -445,9 +383,7 @@
   {
    "cell_type": "markdown",
    "id": "vIcT2gIm1g5P",
-   "metadata": {
-    "id": "vIcT2gIm1g5P"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: Model Comparison from OLS, Ridge Regression, and Lasso Regression**\n"
    ]
@@ -455,9 +391,7 @@
   {
    "cell_type": "markdown",
    "id": "e3ff9972-5e9c-482b-bfc6-46eea69c52c1",
-   "metadata": {
-    "id": "e3ff9972-5e9c-482b-bfc6-46eea69c52c1"
-   },
+   "metadata": {},
    "source": [
     "**Data preparation**"
    ]
@@ -466,10 +400,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0923819c-bf2e-4ee6-be85-7fc85aa91c6b",
-   "metadata": {
-    "id": "0923819c-bf2e-4ee6-be85-7fc85aa91c6b",
-    "outputId": "215de60d-97e5-4bee-b67e-37c8ce0b755e"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Training Dataset and Testing Dataset\n",
@@ -497,9 +428,7 @@
   {
    "cell_type": "markdown",
    "id": "2ac56861-fc38-4bed-9bbd-342133581982",
-   "metadata": {
-    "id": "2ac56861-fc38-4bed-9bbd-342133581982"
-   },
+   "metadata": {},
    "source": [
     "**OLS Regression**"
    ]
@@ -508,10 +437,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7883198c-802d-4b7a-9c00-879e35d29eb2",
-   "metadata": {
-    "id": "7883198c-802d-4b7a-9c00-879e35d29eb2",
-    "outputId": "16b5fb39-903a-44ab-e82f-3b38895d6b56"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# OLS Regression\n",
@@ -535,9 +461,7 @@
   {
    "cell_type": "markdown",
    "id": "97426f6e-a8fe-4ec0-9f7c-e68d64a6b1f9",
-   "metadata": {
-    "id": "97426f6e-a8fe-4ec0-9f7c-e68d64a6b1f9"
-   },
+   "metadata": {},
    "source": [
     "**Ridge Regression**"
    ]
@@ -546,10 +470,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ac136f8d-701c-47fe-93a3-0a81ceed0c72",
-   "metadata": {
-    "id": "ac136f8d-701c-47fe-93a3-0a81ceed0c72",
-    "outputId": "e161e1a1-5b22-4b25-d1a1-334c855ef39f"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Ridge Regression\n",
@@ -595,9 +516,7 @@
   {
    "cell_type": "markdown",
    "id": "7e4ba69d-17e5-487a-bf71-9c03ca249a92",
-   "metadata": {
-    "id": "7e4ba69d-17e5-487a-bf71-9c03ca249a92"
-   },
+   "metadata": {},
    "source": [
     "**LASSO Regression**"
    ]
@@ -606,10 +525,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fa63ef67-84d4-4755-afc5-9b53a2b5dec8",
-   "metadata": {
-    "id": "fa63ef67-84d4-4755-afc5-9b53a2b5dec8",
-    "outputId": "c6cda27c-95a5-4570-b95b-80d3d6d0febf"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# LASSO Regression\n",
@@ -654,9 +570,7 @@
   {
    "cell_type": "markdown",
    "id": "5c99d8c5-2c8d-43f0-be48-77d723194561",
-   "metadata": {
-    "id": "5c99d8c5-2c8d-43f0-be48-77d723194561"
-   },
+   "metadata": {},
    "source": [
     "**All of the results in one table**"
    ]
@@ -665,10 +579,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8ecfc6bf-6850-474b-9afb-954bc767d8e8",
-   "metadata": {
-    "id": "8ecfc6bf-6850-474b-9afb-954bc767d8e8",
-    "outputId": "ed51c0a5-232e-4667-ab05-519ba7117844"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# All of the results in one table\n",
@@ -708,9 +619,7 @@
   {
    "cell_type": "markdown",
    "id": "28d13475",
-   "metadata": {
-    "id": "28d13475"
-   },
+   "metadata": {},
    "source": [
     "Figure 3 shows the model results from our three methods. The table includes coefficients, test $R^2$ and test mean squared error for OLS, ridge and lasso regressions. From Figure 3, we can see lasso has the best $R^2$ for the testing dataset, followed by ridge with OLS being the worst. We also notice that there is only one independent variable, *METALS*, which has a non-0 coefficient. Lasso only selects *METALS* for the regression model. Lasso makes the model very simple, yet it has the best fit for testing data. \n",
     "\n"
@@ -719,9 +628,7 @@
   {
    "cell_type": "markdown",
    "id": "e5f199f1",
-   "metadata": {
-    "id": "e5f199f1"
-   },
+   "metadata": {},
    "source": [
     "## **6. Conclusion**\n",
     "\n",
@@ -732,10 +639,7 @@
   {
    "cell_type": "markdown",
    "id": "d4e35bea-7b04-4b0f-8013-8fb5f24d3713",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -763,8 +667,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
