--- a/module-3/lesson-2/Financial_Econometrics_Module_3_Lesson_2.ipynb
+++ b/module-3/lesson-2/Financial_Econometrics_Module_3_Lesson_2.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **SKEW NORMAL DISTRIBUTION AND SKEW-T DISTRIBUTION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oPAiP8d__z7Z"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we visited the concepts of random variables and reviewed the basics of some common probability distributions. The most utilized distribution in many applications is the normal distribution. The normal distribution has a symmetric shape and properties that are easy to use for data analysis. However, in the real world, the observed data does not always have a bell-shaped distribution. The data may cluster on the right or the left of the whole data range. We usually call this kind of data distribution skewed to the right or to the left. In this lesson, we will look at the skewed data and learn how to measure the skewness. Apart from skewness, we will also learn what is a heavy tail or a light tail of a data distribution and how to measure it. Then, we will introduce skew normal distribution and its families. This is a distribution for observed data that exhibits some properties of a normal distribution but does not have the symmetric shape or similar tail pattern. Throughout this lesson, we will use the U.S. 10-Year Treasury Bond Yield daily return and the Dow Jones Industrial Index daily return for each technique we cover.*"
    ]
@@ -75,27 +67,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "POu_i7YX_z5H"
-   },
+   "metadata": {},
    "source": [
     "## **1. Skewness**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "mSU_bTzs_z2z"
-   },
+   "metadata": {},
    "source": [
     "A skew distribution means that the probability distribution is not symmetric. We usually draw a histogram from a dataset to inspect for skewness. In figure 1 below, the graph contains three histograms. The one in the middle is a histogram for a dataset sampled from a normal distribution. Normal distributions are symmetric distributions. We notice that the peak is located at the center of the distribution. The histogram on the lower left of the figure exhibits a right-skewed distribution. A right-skewed distribution has a longer tail, which extends to the right of the plot. The peak of a right-skewed distribution is located on the left region of the distribution. Finally, the histogram on the lower right of the figure is that of a left-skewed distribution. A left-skewed distribution has a longer tail, which extends to the left of the plot. The peak of a left-skewed distribution is found in the right region of the distribution. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9QpRV4bU_z0V"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Histograms of Normal Distribution, Right-Skew Distribution, and Left-Skew Distribution**\n"
    ]
@@ -107,6 +93,7 @@
    "outputs": [],
    "source": [
     "# Histograms of Normal Distribution, Right-Skew and Left-Skew Distributions\n",
+    "\n",
     "\n",
     "# Helper HistogramPlot function\n",
     "def HistogPlot(a, label):\n",
@@ -131,9 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "q6z44k1O_zwM"
-   },
+   "metadata": {},
    "source": [
     "One quick way to check if the data is skewed is to check the order of the mean, median, and mode of the data. The **mean** is the average of the data. The **median** is the value of the data point(s) at the 50th percentile of the data ordered from smallest to largest. The **mode** is the value of the data that shows up most frequently in the dataset. Figure 2 below shows different relationships among these three metrics for symmetric, right-skew and left-skew distributions.\n"
    ]
@@ -152,6 +137,7 @@
    "outputs": [],
    "source": [
     "# Mean, Median, and Mode Relationships for Symmetric, Right-Skew and Left-Skew Distributions\n",
+    "\n",
     "\n",
     "# Helper HistogramPlot function\n",
     "def HistogPlot(a, label):\n",
@@ -190,9 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sh_QMY5J_znw"
-   },
+   "metadata": {},
    "source": [
     "As we just saw, we can visually assess the skewness of a dataset via histograms. Alternatively, we can also use the relationship among the mean, median, and mode to decide if the data is skewed. However, is there a measurement to tell us if a dataset is skewed? Yes, there are measurements that can tell us if a dataset is skewed. Here's a popular one from many textbooks.\n",
     "\n",
@@ -213,18 +197,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "jl-HxrmN_zk7"
-   },
+   "metadata": {},
    "source": [
     "## **2. Kurtosis**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "AkRnY1FPBNEG"
-   },
+   "metadata": {},
    "source": [
     "Kurtosis is another measure used to decide the shape of the distribution of a dataset. Kurtosis allows us to decide if the tails of a distribution are heavier or lighter than the tails of a normal distribution. What does it mean to have a heavy tail? In general, a distribution that has a fatter tail or a longer tail than a normal distribution will be called a distribution with a heavy tail. In figure 3, below, we will show three different distributions with different tail shapes.\n"
    ]
@@ -259,9 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Hs8qxScnBfv-"
-   },
+   "metadata": {},
    "source": [
     "From figure 3, the red curve is a normal distribution. We can see all three distributions are symmetric distributions centered around 30. However, compared to the normal distribution, the blue-curve distribution exhibits a higher peak around 30. This means that the blue-curve assigns a higher probability than normal distribution around 30. However, the blue-curve distribution assigns less probability than a normal distribution in the region of (20, 26) and (34, 40). Also, the blue-curve distribution has higher probability than the normal distribution on both ends of the curve. **Higher peak, skinnier body, and longer tails than normal distribution make the blue-curve distribution a heavy tail distribution**. On the other hand, the black-curve distribution has a lower peak than normal distribution around 30. The black-curve distribution has higher probability than normal distribution in the region of (16, 26) and (34, 44) and has lower probability and shorter tails on both ends of the curve compared to normal distribution. **Lower peak, fatter body, and shorter tails than normal distribution makes the black-curve distribution a light tail distribution**.\n",
     "\n",
@@ -278,36 +256,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uM2AztcaBfrI"
-   },
+   "metadata": {},
    "source": [
     "## **3. Skew-Normal Distribution and Skew-t Distribution**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gXNHMlxWBfn-"
-   },
+   "metadata": {},
    "source": [
     "In the previous sections, we talked about skew data and heavy tail data. We learned from Module 1 that we can transform non-normally distributed data into normally distributed data for regression analysis. However, there are times we do not want to transform the data and want to keep its original scale for analysis. In this case, we need to find a method that we can use to directly analyze a non-normal dataset. As Azzalini and Capitanio summarized in [their book The Skew-Normal and Related Families](), skew-normal distribution and skew-t distribution are used to handle skew and/or heavy tail data. Specifically, normal distribution is a special case for skew-normal distribution. In this section, we are going to give an overview of the skew-normal distribution and skew-t distribution. Then, we will present an example to show how we can apply these distributions to regression analysis.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XuqXW6UYBfj9"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 The Basics of Skew-Normal Distribution**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "X1UZ8I5RBfgw"
-   },
+   "metadata": {},
    "source": [
     "A **skew-normal distribution** is a distribution that is not a symmetric distribution but has the shape of a normal distribution. When you check your data and it exhibits the above characteristics, you can try to use skew-normal distribution. Normal distribution is actually a special case for skew-normal distribution. We will talk about that later. \n"
    ]
@@ -330,25 +300,35 @@
     "x = np.linspace(0, 60, 100)\n",
     "\n",
     "alpha = 5\n",
-    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
-    "         c=\"g\", label=\"alpha= {:.2f}\".format(alpha))\n",
+    "plt.plot(\n",
+    "    x,\n",
+    "    stats.skewnorm.pdf(x, alpha, loc=30, scale=7),\n",
+    "    c=\"g\",\n",
+    "    label=\"alpha= {:.2f}\".format(alpha),\n",
+    ")\n",
     "\n",
     "alpha = 0\n",
-    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
-    "         c=\"r\", label=\"alpha= {:.2f}\".format(alpha))\n",
+    "plt.plot(\n",
+    "    x,\n",
+    "    stats.skewnorm.pdf(x, alpha, loc=30, scale=7),\n",
+    "    c=\"r\",\n",
+    "    label=\"alpha= {:.2f}\".format(alpha),\n",
+    ")\n",
     "\n",
     "alpha = -5\n",
-    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
-    "         c=\"k\", label=\"alpha={:.2f}\".format(alpha))\n",
+    "plt.plot(\n",
+    "    x,\n",
+    "    stats.skewnorm.pdf(x, alpha, loc=30, scale=7),\n",
+    "    c=\"k\",\n",
+    "    label=\"alpha={:.2f}\".format(alpha),\n",
+    ")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "evQ5vDd__zih"
-   },
+   "metadata": {},
    "source": [
     "According to Azzalini and Capitanio, if $X$ is a continuous random variable, its skew-normal density function is as follows:\n",
     "\n",
@@ -617,28 +597,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FWetvGbE7UgT"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wI6PBRbg7UPt"
-   },
+   "metadata": {},
    "source": [
     "- Azzalini, Adelchi, and Antonella Capitanio. The Skew-Normal and Related Families. Cambridge University Press, IMS Monographs Series, 2014.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -668,8 +641,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
