--- a/module-3/lesson-3/Financial_Econometrics_Module_3_Lesson_3.ipynb
+++ b/module-3/lesson-3/Financial_Econometrics_Module_3_Lesson_3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **CORRELATION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qlf3krGqOM_X"
-   },
+   "metadata": {},
    "source": [
     "*In the last section, we discussed random variables and their probability distributions in a univariate setting. In this section, we are going to introduce some measurements to describe bivariate relationships (relationships for two random variables). Specifically, we are going to look into measures of correlation. The basics of correlation were covered in Module 1. In this lesson, we will go deeper and introduce various measures of correlation and explain why we use them.*\n"
    ]
@@ -50,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "3e352232-4c7a-4a55-9b69-698540e83aa1"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
@@ -66,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "e8e2801c-8db1-4cea-9a0c-bb2dbccf7003"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Download the dataset\n",
@@ -77,18 +65,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "O9m2Zm3WOM8F"
-   },
+   "metadata": {},
    "source": [
     "## **1. Pearson Correlation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SR6zPyMkOM5N"
-   },
+   "metadata": {},
    "source": [
     "The Pearson correlation is the most used correlation measure. The formula for Pearson Correlation is:\n",
     "\n",
@@ -108,9 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DBOApIrqOM1l"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Pearson Correlation with Outlier and without Outlier**\n",
     "\n",
@@ -119,36 +101,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "K60uG1U-OMy9"
-   },
+   "metadata": {},
    "source": [
     "From figure 1, you can see that the Pearson Correlation changes significantly if there is an outlier in the dataset. The Pearson Correlation is not resistant to outliers. Due to this issue, we need to find more robust measures to calculate the correlation of two random variables when there are outliers in the dataset. In the following sections, we will introduce the Spearman correlation and Kendall correlation to handle the issue of outliers in calculating correlation.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "a13LRxIFOMk_"
-   },
+   "metadata": {},
    "source": [
     "## **2. Spearman Correlation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "04aj27vHOMir"
-   },
+   "metadata": {},
    "source": [
     "The Spearman correlation $\\rho$ is also a measure of the relationship between two random variables. However, instead of using the data values to calculate correlation, the Spearman correlation is a non-parametric method that uses ranks to measure correlation. Let’s use the following example to demonstrate how the Spearman correlation is calculated.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pC30MJNx1Xfs"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Data Example for Calculating Spearman Correlation**\n",
     "\n",
@@ -170,18 +144,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "EYa6YEjlOMeS"
-   },
+   "metadata": {},
    "source": [
     "In figure 2, we have paired data from 15 students about how many days they study a subject and the test grade they received. To calculate the Pearson correlation, we use the \"Hours of Study\" column and \"Test Grade\" column. However, to calculate the Spearman correlation, we first need to rank each random variable. For the \"Hours of Study\" random variable, we rank the observations by giving 1 to the highest \"Hours of Study\" and 2 to the next highest \"Hours of Study.\" Then, we do the same for the \"Test Grade\" random variable. From figure 2, we can see the two columns on the right are ranked \"Hours of Study\" and \"Test Grade.\" We then apply these two columns to the Pearson correlation formula to get the Spearman correlation. Hence, we can say that the Spearman correlation is the ranked version of the Pearson correlation. Figure 3 shows the Spearman correlation and the graph.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tCjWaYfJOMcS"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: Graph Example of Spearman Correlation and Pearson Correlation**\n",
     "\n",
@@ -190,18 +160,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NKocdp9COMah"
-   },
+   "metadata": {},
    "source": [
     "In figure 3, we've included the values for both the Spearman correlation and Pearson Correlation. Their numbers are the same in this example. However, if we add one outlier to the dataset, the result will change.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2hKrG-xbOMXQ"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: Spearman Correlation and Pearson Correlation with Outlier**\n",
     "\n",
@@ -210,9 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eUNPxihYOMBw"
-   },
+   "metadata": {},
    "source": [
     "From figure 4, we can see that by adding one outlier, both the Spearman correlation and the Pearson correlation change. However, the Spearman correlation is less sensitive to outliers. This is because the Spearman correlation is calculated on ranked values of the data, not actual values of the data.\n",
     "\n",
@@ -236,9 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-NS4Ms3eOL_I"
-   },
+   "metadata": {},
    "source": [
     "**Figure 5: Monotonic Relationship**\n",
     "\n",
@@ -247,9 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Cx7I5FygSVNu"
-   },
+   "metadata": {},
    "source": [
     "A monotonic function $y= f(x)$ states that when $x$ random variable moves in one direction, $y$ random variable can only move in one direction as well (either the same or the opposite direction) and does not change its direction. For example, in figure 5, the left plot shows when $x$ is increasing, $y$ also is increasing or flat but never is decreasing. The middle plot shows that when $x$ is increasing, $y$ is decreasing all the time and is never increasing. However, the right plot shows that when $x$ is increasing, there are times that $y$ is increasing but also times that $y$ is decreasing. Hence, the plot on the right is not a monotonic relationship.\n",
     "\n",
@@ -260,9 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "V1g52FU_SVKD"
-   },
+   "metadata": {},
    "source": [
     "**Figure 6: X-Y Quadratic Relationship Example**\n",
     "\n",
@@ -271,27 +229,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "OeiXb0DpSVG4"
-   },
+   "metadata": {},
    "source": [
     "## **3. Kendall Correlation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4VSocn_6SVD3"
-   },
+   "metadata": {},
    "source": [
     "Kendall Correlation or Kendall’s tau Correlation $\\tau$ is another non-parametric rank-based correlation. To calculate Kendall’s tau Correlation, we first need to determine concordant numbers and discordant numbers. Concordant observations mean the values of two variables are moving in the same direction. Discordant observations mean the values of two variables are moving in the opposite direction. It is best to use an example to illustrate how to get the numbers.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FM9iqx8_3tKM"
-   },
+   "metadata": {},
    "source": [
     "**Figure 7: Kendall’s tau Correlation Data Example**\n",
     "\n",
@@ -315,9 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "mYv9dnqWSU9M"
-   },
+   "metadata": {},
    "source": [
     "In figure 7, we show the same example of a student’s study hours and their test grades. We first ordered the table with the student who has the highest \"Hours of Study\" on top and the least on the bottom. Then, we added a few more columns. For \"Ranked Hours,\" we use 1 for the student who has the highest \"Hours of Study\" and 2 for the second highest \"Hours of Study.\" We repeat this process with the \"Ranked Grade\" column. Because the table is ordered by \"Hours of Study,\" you can see \"Ranked Hours\" has a starting value of 1 and an ending value of 12.\n",
     "\n",
@@ -349,36 +299,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "biN1I8JeSU6A"
-   },
+   "metadata": {},
    "source": [
     "## **4. Concordant Correlation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6ib67wumSU22"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going to introduce a correlation metric to evaluate agreement. The correlation metrics we have discussed so far all focus on correlation. But what is the difference between correlation and agreement? We will talk about the difference in this section and then introduce concordant correlation when looking for agreement as the research goal.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "p6G3VuwvSU0L"
-   },
+   "metadata": {},
    "source": [
     "### **4.1 Correlation vs. Agreement**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eKT_q0dUSUxM"
-   },
+   "metadata": {},
    "source": [
     "To determine correlation is to measure the strength of association between two variables. These two variables do not need to be the same subjects or on the same scale. For example, we would like to know the association between a student’s study hours and their test grades. These are two different variables with different measurement units. \n",
     "\n",
@@ -387,18 +329,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gBT6bn3YSUs3"
-   },
+   "metadata": {},
    "source": [
     "### **4.2 Basics of Concordance Correlation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "v2excJGFSUp7"
-   },
+   "metadata": {},
    "source": [
     "Lawrence Lin proposes how to use the concordance correlation coefficient. Let’s see how it works. If we have two random variables $x$ and $y$, here is the formula for concordance correlation:\n",
     "\n",
@@ -427,27 +365,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gEFdeNE9Xjs-"
-   },
+   "metadata": {},
    "source": [
     "## **5. Asset Returns and Correlations**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0fOrEu0TXjqV"
-   },
+   "metadata": {},
    "source": [
     "Now let’s apply the correlation methods we discussed in this lesson to the U.S. 10-Year Treasury Bond Yield daily return and Dow Jones Industrial Average daily return.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xreb9DkeFeIp"
-   },
+   "metadata": {},
    "source": [
     "**Figure 8: Scatter Plot for U.S. 10-Year Treasury Bond Yield Daily Return and Dow Jones Industrial Average Daily Return**\n"
    ]
@@ -455,10 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "9fefe3b0-032d-4356-9c18-4d771d4a79ff",
-    "outputId": "a5e7b79a-729e-4f59-ee72-ee090b8118b7"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Scatter plot for DWJ and 10Y_TBY\n",
@@ -482,55 +411,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6ZdMM7twXjlQ"
-   },
+   "metadata": {},
    "source": [
     "From figure 8 and the above correlation results, we can see that there are outliers in the dataset. Hence, the Pearson Correlation is probably not the best choice. As expected, the Spearman correlation has a larger value than Kendall’s tau. However, since the correlation is just around 0.3 depending on whether you're using the Spearman correlation or Kendall’s tau, the two variables have low correlation."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6f62pDs3Xjii"
-   },
+   "metadata": {},
    "source": [
     "## **6. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ppW2wi6lOL85"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced three commonly used correlation measures: Pearson correlation, Spearman correlation, and Kendall’s tau correlation. We also introduced the concept of robust measure: a measurement that is resistant to outliers. We also discussed the difference between correlation and agreement. Lastly, we introduced concordance correlation to evaluate the agreement of two variables. So far in this module, we have been looking at one or two random variables. In the next lesson, we are going to expand to a multivariate space (more than two variables) and discuss both joint probability and marginal probability.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nnqjarr47pWz"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vKdyBIB57o3p"
-   },
+   "metadata": {},
    "source": [
     "- Lin, Lawrence I-Kuei. \"A Concordance Correlation Coefficient to Evaluate Reproducibility.\" Biometrics, vol. 45, no. 1, 1989, pp. 255–268, https://www.jstor.org/stable/2532051.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -561,8 +477,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
