--- a/module-4/lesson-1/Financial_Econometrics_Module_4_Lesson_1.ipynb
+++ b/module-4/lesson-1/Financial_Econometrics_Module_4_Lesson_1.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **TIME SERIES AND AUTOCORRELATION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4Qm55rOTKzsu"
-   },
+   "metadata": {},
    "source": [
     "*In this module, we are going to talk about data points with a time stamp. A lot of our examples in the previous modules actually used this type of data. We call them time series. Time series analysis is a very important area of statistical analysis in finance, and there are unique challenges when attempting to perform statistical inference. Hence, several analytical methods have been developed that focus on time series data. In the next few modules, we will be going through different topics in time series analysis. In this lesson, we will introduce what time series data is and some challenges we may encounter when handling time series data. We will use Google’s stock price, the U.S. Dollar Index daily return, and U.S. 10-year Treasury bond yield from the beginning of 2016 to the end of 2021 as examples to demonstrate various concepts.*"
    ]
@@ -50,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "1649a513-78de-4d06-9184-19f35132be01"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load packages\n",
@@ -66,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "46fec928-4e65-46ce-a020-93de2ee5b6c7"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Download datasets\n",
@@ -87,36 +75,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "w_5fLx62Kzq_"
-   },
+   "metadata": {},
    "source": [
     "## **1. Time Series Data Overview**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NaayCJhMKzpT"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 Time Series Data Examples and Some Characteristics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pp3xI7_vKznc"
-   },
+   "metadata": {},
    "source": [
     "Time series data is a series of data points with date or time stamps attached to them. Let’s look at some time series data examples in the following graphs and then we will formally define time series.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nwsyF85ONs7K"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Dollar Index Daily Return Time Series Daily Chart**\n"
    ]
@@ -124,10 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "9c21d1f8-787f-4730-9f7e-54ae7592f139",
-    "outputId": "98eb7bf4-2f43-471c-cc41-677d18d0b8a1"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot Dollar index time series chart\n",
@@ -145,18 +122,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1vRaP1E1KzgU"
-   },
+   "metadata": {},
    "source": [
     "In figure 1, we can see the dollar index daily return moves around $0$. It is common that a stock return usually oscillates around $0$. On the other hand, the volatility of the return changes in different time periods. The year 2016 on average seems to have higher volatility than other years in the graph. The high volatility in 2020 appeared around the start of the COVID-19 pandemic. We can see that there are different volatility clusters in different years. 2016 has high volatility while the beginning of 2020 before COVID-19 witnessed a period of low volatility.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tQb5qT03N8d1"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Google Stock Price Daily Close Time Series Daily Chart**\n"
    ]
@@ -164,10 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "f851db4f-69a7-4bf8-8ed6-f852a228b0db",
-    "outputId": "2e7b8238-7f89-422b-a7c2-c206816fb168"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot Google price time series chart\n",
@@ -185,18 +155,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pdx9eRuWKzZF"
-   },
+   "metadata": {},
    "source": [
     "In figure 2, the graph of Google’s stock price shows how the stock price has been moving during the period. Although the trend is up, we can also see there is a regular cyclic movement along the uptrend. We will learn how to analyze this type of time series data later.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LrRJNA8HOHSY"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: U.S. 10-Year Treasury Bond Yield Time Series Daily Chart**\n"
    ]
@@ -204,10 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "75071f79-7d42-4fe8-9256-94201c52e5e4",
-    "outputId": "6f8e016f-f053-425f-c721-5f88b1e4e3ce"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot UST10Y time series chart\n",
@@ -225,9 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Gj0FictLKzSX"
-   },
+   "metadata": {},
    "source": [
     "In figure 3, there doesn’t seem to be a clear pattern for the U.S. 10-year Treasury Bond yield. However, we can see that if the yield in one day is going down, it would keep going down the next day. It looks like the yield movement from the previous few days can predict where the yield would go today.\n",
     "\n",
@@ -247,18 +208,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NfHNs504MgOX"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Time Series Definition**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nYcss8YdMgME"
-   },
+   "metadata": {},
    "source": [
     "The data series $ \\{ x_1, x_2,\\cdots ,x_{t-1}, x_t \\}$ is called a time series if \n",
     "\n",
@@ -270,9 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-J7dB5rjON88"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: Time Series Definition Example**\n",
     "\n",
@@ -287,9 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MU1sryoiMgGh"
-   },
+   "metadata": {},
    "source": [
     "In figure 4, we assume this is the price data for Stock A for five days. We have the time series of Stock A’s price for five days $\\{ x_1, x_2, x_3, x_4, x_5 \\}$. The price $x_1$ is from a random variable $X_1$ and the price $x_2$ is from another random variable $X_2$. Each price value at time $t$ is a realization from its random variable at time $t$. In this course, we will limit $t$ to be discrete numbers and $X_t$ to be a continuous random variable.\n",
     "\n",
@@ -310,9 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cTaue8unPGKo"
-   },
+   "metadata": {},
    "source": [
     "**Figure 5: Lag Expressions for Time Series**\n",
     "\n",
@@ -325,9 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "35X4t0-9MgBM"
-   },
+   "metadata": {},
    "source": [
     "We can see from figure 5, $\\{ X_4 \\}$ is lag 1 of $\\{ X_5 \\}$ and $\\{ X_3 \\}$ is lag 2 of $\\{ X_5 \\}$. \n",
     "\n",
@@ -336,9 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uC1zEAR_SUyy"
-   },
+   "metadata": {},
    "source": [
     "**Figure 6: Time Series Difference Calculation Example**\n",
     "\n",
@@ -351,45 +298,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6vQQr-TGMf7d"
-   },
+   "metadata": {},
    "source": [
     "In figure 6, it shows the calculation of one difference and two differences for time series $\\{ X_{5} \\}$. One difference means the current time series minus the lag 1 time series. Two difference means the current time series minus the lag 2 time series. We notice that when we conduct one difference calculation for time series, we will lose one observation as indicated in the above table. We will lose 2 observations when we conduct two differences calculation. We will use this calculation a lot going forward.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RQIHm5W1Mf47"
-   },
+   "metadata": {},
    "source": [
     "## **3. Autocorrelation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LRV8i9q_Mf1u"
-   },
+   "metadata": {},
    "source": [
     "In Module 2 Lesson 1, we discussed how one of the assumptions for OLS regression is that each observation should be independent of each other. If the data violates this assumption, this data series has **autocorrelation**. In our last section, we saw U.S. 10-Year Treasury bond yields have an autocorrelation issue because today’s bond yield is likely to go down if the yields over the past few days have been inclining. The issue of correlated observations is one challenge in analyzing time series data. We cannot apply time series data to OLS properly without addressing the issue of autocorrelation. So how do we analyze the autocorrelation for a time series? We will introduce the autocorrelation function as a measure in this section. Before getting into autocorrelation function, we would like to introduce some concepts here.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_uuUXrklPUX2"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 The Mean Function of Time Series**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7QZ4AYtpPUVK"
-   },
+   "metadata": {},
    "source": [
     "First, let's look at the mean function for time series:\n",
     "\n",
@@ -402,18 +339,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2lp3YYrIPUSs"
-   },
+   "metadata": {},
    "source": [
     "### **3.2 Autocovariance Function**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GRDLCWQpPUQB"
-   },
+   "metadata": {},
    "source": [
     "The first metric we can use to study the strength of the relationship between two observations in a time series is **autocovariance function**. Autocovariance function measures the linear dependence of two observations. Autocovariance function plays a similar role to covariance for two data series, except that autocovariance function assesses the relationship among observations in one data series.\n",
     "\n",
@@ -436,18 +369,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Ynn4UGm2PUM4"
-   },
+   "metadata": {},
    "source": [
     "### **3.3 Autocorrelation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cpUrtidjPUKM"
-   },
+   "metadata": {},
    "source": [
     "Now we can introduce the autocorrelation function (ACF). Its definition is:\n",
     "\n",
@@ -463,18 +392,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RofsKsNHPUH0"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conditional Probability**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hTcuvSWGPUFH"
-   },
+   "metadata": {},
    "source": [
     "Before we move to the next time series topic, let's review the concept of conditional probability. Conditional probability is an important concept incorporated in the topic we will discuss next. \n",
     "\n",
@@ -483,9 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "foAhtEcHUDPX"
-   },
+   "metadata": {},
    "source": [
     "**Figure 7. Cookie Distribution by Ingredients**\n",
     "\n",
@@ -497,9 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pu6zDUbKPUAM"
-   },
+   "metadata": {},
    "source": [
     "Now, given that we get a cookie with dark chocolate, what is the probability that this cookie contains nuts? This is a conditional probability question. In mathematic form, we can write $P(\\text{cookie has nuts} \\ | \\ \\text{cookie has dark chocolate})$. The \"|\" stands for \"given.\" Instead of trying to get the answer by checking all 20 cookies, we only need to focus on nine cookies with dark chocolate now. Among these nine cookies, there are six cookies that have nuts. Hence, $P(\\text{cookie has nuts} \\ | \\ \\text{cookie has dark chocolate}) = 6 / 9$. We can see the above math operation reduces the sample space from 20 cookies to nine cookies for conditional probability.\n",
     "\n",
@@ -512,18 +433,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Gyrlxvj0PT9s"
-   },
+   "metadata": {},
    "source": [
     "## **5. Partial Autocorrelation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "z5IsZ1vZPT7S"
-   },
+   "metadata": {},
    "source": [
     "In the previous section, we talked about using autocorrelation to evaluate the relationship of two observations in a time series. Say if we have $x_{t}$ and $x_{t-3}$ from a time series, we can write their autocorrelation as follows:\n",
     "\n",
@@ -542,18 +459,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "96Y95VkuPT4y"
-   },
+   "metadata": {},
    "source": [
     "## **6. Stationarity**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XDN4aozgPT17"
-   },
+   "metadata": {},
    "source": [
     "We introduced time series and discussed the mean and autocorrelation of time series. We have not yet discussed what kinds of behaviors or assumptions about time series make it possible to model them. In this section, we are going to introduce a concept call **stationarity**.\n",
     "\n",
@@ -591,27 +504,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ef0VIrTSPTzl"
-   },
+   "metadata": {},
    "source": [
     "## **7. Plots of ACF and PACF**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7wUjkKqnPTxV"
-   },
+   "metadata": {},
    "source": [
     "We introduced ACF and PACF in the last section. It is usually easier to use a plot to visualize information from ACF and PACF. Let’s use our Google stock price, U.S. 10-year Treasury bond yield, and dollar index daily return as examples to show ACF and PACF plots.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "p13wPMycVaEe"
-   },
+   "metadata": {},
    "source": [
     "**Figure 8: ACF Plots for Google Stock Price, U.S. Treasury 10-Year Bond Yield and U.S. Dollar Index Daily Return**\n"
    ]
@@ -619,10 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "384f119b-0cd8-4e34-8b1a-2d4908b684ea",
-    "outputId": "ed29a9c7-9467-4243-c64f-06182a37bfa8"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ACF Plots for GOOGLE, U.S. UST10Y and DXY_R\n",
@@ -639,9 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cXifYsoiKzPE"
-   },
+   "metadata": {},
    "source": [
     "An ACF plot is a plot that shows a bar as the autocorrelation of a time series with different lags. You have 0 lag starting on the left end of the plot. Since autocorrelation with 0 lag is just correlation to itself, the number is 1. Then, you have autocorrelation with lag 1, lag 2, and so on and so forth. In the plot, we also have 95% confidence intervals as shaded area around $0$. If a bar is over the confidence interval, it means this autocorrelation is statistically significant.\n",
     "\n",
@@ -654,9 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "OAvQOO4wV9Ek"
-   },
+   "metadata": {},
    "source": [
     "**Figure 9: PACF Plots for Google Stock Price, U.S. Treasury 10-Year Bond Yield, and U.S. Dollar Index Daily Return**\n"
    ]
@@ -664,10 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "17336dcc-ff9d-4e98-ad41-22daf789da43",
-    "outputId": "d94fa791-55c9-40ad-84f5-2cfe1723281a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# PACF plots for GOOGLE, U.S. UST10Y and DXY_R\n",
@@ -684,9 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "s9JsoBrkXGYm"
-   },
+   "metadata": {},
    "source": [
     "You read PACF plots as you read ACF plots except the bar now represents PACF. From figure 9, we see that for Google stock PACF lag18 is positive and significant. For U.S. Treasury 10-year bond yield, PACF lag8 and lag19 are significant. PACF lag 19 has a negative PACF. For U.S. dollar index daily return, PACF lag 16 is negative and significant. PACF lag 26 is positive and significant. \n",
     "\n",
@@ -695,28 +590,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "OYDAKpFIXGSz"
-   },
+   "metadata": {},
    "source": [
     "## **8. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eVZFeeNsXGNG"
-   },
+   "metadata": {},
    "source": [
     "The module introduced time series analysis. In this lesson, we started by observing a few time series graphs to give an idea of what time series are about. We then formally defined time series and showed some math operations on time series. Then, we introduced autocorrelation and partial autocorrelation of time series. Finally, we discussed what it means for a time series to be stationary. We completed the lesson with ACF and PACF plots and how to read the plots. In the next lesson, we will start to learn some basic time series statistical models.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -746,8 +634,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
