--- a/module-4/lesson-3/Financial_Econometrics_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/Financial_Econometrics_Module_4_Lesson_3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **AUTOREGRESSIVE MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kU9pt-dZqaOn"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we discussed white noise, random walk, and moving average (MA) time series models. In this lesson, we will continue to explore more time series models. Specifically, we will talk about the autoregressive model (AR model). We will go over the definition and properties of the AR model. We will also compare the autoregressive model with the moving average model. We will end the lesson with one application.*"
    ]
@@ -86,18 +78,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DybaydUYqaJ-"
-   },
+   "metadata": {},
    "source": [
     "## **1. Ordinary Least Square Regression for Time Series Analysis**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JlIUf4wLqaFk"
-   },
+   "metadata": {},
    "source": [
     "From previous lessons, we know that often observations in a time series are correlated with each other. If we want to use the past observations to predict today’s observations, the first thing that comes to mind is to use OLS (ordinary least square regression). In regular OLS, we have a dependent variable $Y$ and an independent variable $X$. We can write a linear regression as follows:\n",
     "\n",
@@ -116,18 +104,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1N7-LXwbqaBu"
-   },
+   "metadata": {},
    "source": [
     "## **2. Autoregressive (AR) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zzi9Q9lLqZ-V"
-   },
+   "metadata": {},
    "source": [
     "An autoregressive model is a regression model to predict a time series using a linear combination of its pass values as independent variables, like what we demonstrated in the last section for time series $X_t$. We set up a regression model to predict $X_t$ using its lag 1 variable $X_{t-1}$ as the independent variable. Because there is only one lag 1 variable on the right side of the equation, we also denote this autoregressive model as AR(1). \n",
     "\n",
@@ -136,18 +120,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QnysVfkQqZ65"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 Definition of Autoregressive Model AR($p$)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wjmLe1aJqZ3Q"
-   },
+   "metadata": {},
    "source": [
     "The formula for an autoregressive model with the order of $p$, denoted as AR($p$), is as follows:\n",
     "\n",
@@ -186,18 +166,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "EoxXaiOEqZz3"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Mean, Variance, ACF, and PACF for AR(1)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SUT3cnABqZwO"
-   },
+   "metadata": {},
    "source": [
     "AR(1) model can be written as follows:\n",
     "\n",
@@ -235,9 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QwI4i6P9qZtW"
-   },
+   "metadata": {},
    "source": [
     "### **2.3 AR(1) and AR(2) Examples**"
    ]
@@ -283,9 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ZUeK5qxoqZlh"
-   },
+   "metadata": {},
    "source": [
     "Figure 1 gives us two AR(1) graph examples. They both move around the mean = $0$ and within a horizontal band. The AR(1) with negative $\\alpha$ is choppier than AR(1) with positive $\\alpha$. We know the correlation of two observations next to each other is autocorrelation $\\rho(1)$. For AR(1) model, $\\rho(1)$ is $\\alpha$. Hence, when $\\alpha$ is positive, the two observations next to each other move in the same direction while when $\\alpha$ is negative, the two observations next to each other move in the opposite direction. That is why we see the plot on the left is smoother than the plot on the right.\n"
    ]
@@ -312,9 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zomv08udqZeA"
-   },
+   "metadata": {},
    "source": [
     "Figure 2 shows the ACF and PACF plots for AR(1) with $\\alpha = 0.4$.  From both plots, we see ACF and PACF for lag 1 are all significant and their values are between 0.5 and 0.6. Since the example is simulated data from AR(1) with $\\alpha = 0.4$, they are random sample data, and ACF and PACF usually are not exactly the same as 0.4. \n",
     "\n",
@@ -361,27 +331,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9oxkefz7qZW8"
-   },
+   "metadata": {},
    "source": [
     "Let’s focus on the ACF and PACF plots for AR(2) in figure 3. In the ACF plot, we can see the ACF decreases gradually. On the other hand, the PACF in the plot drops to almost $0$ after lag 2. This interesting PACF behavior for AR(2) process will help us decide what time series model we will use. We will discuss more about model selection later in this module. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HlbzS0njqZTz"
-   },
+   "metadata": {},
    "source": [
     "### **2.4 Use AR to represent MA**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uvLG2zouqZQO"
-   },
+   "metadata": {},
    "source": [
     "One interesting feature about AR process or AR model is that we can represent an MA process using an infinite AR process. Let’s use MA(1) as an example.\n",
     "\n",
@@ -443,18 +407,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6pSB_Q1AqZMl"
-   },
+   "metadata": {},
    "source": [
     "### **2.5 ACF and PACF Plots for AR and MA Processes**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hlzGA3BB0Fl0"
-   },
+   "metadata": {},
    "source": [
     "We briefly talked about the special features ACF and PACF plots exhibit for the AR process earlier. In this section, we are going to compare ACF and PACF plots for both the AR process and MA process together. We are going to use an AR(2) process and an MA(2) process as examples here.\n"
    ]
@@ -502,9 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "O-RRxtba0Fal"
-   },
+   "metadata": {},
    "source": [
     "In figure 4 above, the top two plots are ACF and PACF plots for an AR(2) process. The bottom two plots are ACF and PACF plots for an MA(2) process. In an ACF plot, the farthest left bar shows autocorrelation is $1$ when $h = 0$, which means it’s the correlation for the observation itself. In the PACF plot, it starts with $h =1$, which means the farthest left bar is for PACF lag 1. \n",
     "\n",
@@ -525,36 +483,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gNPpVNNj0FRq"
-   },
+   "metadata": {},
    "source": [
     "### **2.6 Estimation of AR Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kAQ3YnX90FNB"
-   },
+   "metadata": {},
    "source": [
     "We have introduced what an AR process model is. We discussed its property and how to select the number of lags $p$ for an AR($p$) model. Now we need to estimate the coefficients of the model. There are a few methods to estimate the model. We saw in section 1 that we can use ordinary least square (OLS) method to estimate the model. In this section, we will go over two other methods here: **method of moments** and **maximum likelihood method**.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gdENNSMQ0FHx"
-   },
+   "metadata": {},
    "source": [
     "#### **2.6.1. Method of Moments (MOM)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_WH766Yb0FDR"
-   },
+   "metadata": {},
    "source": [
     "Before talking about method of moments, let’s briefly review what **moments** are. Moments are statistical parameters used to describe the distribution of a random variable. \n",
     "\n",
@@ -601,18 +551,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4wmhQ7_I0E-3"
-   },
+   "metadata": {},
    "source": [
     "#### **2.6.2 Yule-Walker Estimators for AR Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MQ4FY4Xa0E5o"
-   },
+   "metadata": {},
    "source": [
     "We introduced MOM in the last section to estimate an AR(1) model. We can generalize the method we used in the last section to solve for a higher order AR($p$) model. The method we used above is a very simple case of Yule-Walker estimation. The **Yule-Walker estimation method** connects the coefficients of an AR($p$) model to the autocovariances of the time series by using a system of equations called **Yule-Walker equations**. \n",
     "\n",
@@ -638,18 +584,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FwSKzNUD0E03"
-   },
+   "metadata": {},
    "source": [
     "#### **2.6.3 Maximum Likelihood Method (Box-Jenkins Method)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "f_XHb42B0Ews"
-   },
+   "metadata": {},
    "source": [
     "The next estimation method we will introduce is the **maximum likelihood method (MLE)**. The maximum likelihood method is used to maximize the joint probability of the observed data points with respect to the model parameters. The joint probability is called a **likelihood function**. The likelihood function will usually take the log form so that the function will be easier to handle. Please read the required reading to learn the general definition and properties of the maximum likelihood estimation method. \n",
     "\n",
@@ -672,18 +614,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "E8XwvBdN0Eru"
-   },
+   "metadata": {},
    "source": [
     "#### **2.6.4 Comparison with Yule-Walker Estimators and Maximum Likelihood Estimators**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-xZTpN5Q0EmW"
-   },
+   "metadata": {},
    "source": [
     "Now we know how Yule-Walker estimation and maximum likelihood estimation work for an AR model. However, what are the differences between the two methods? \n",
     "\n",
@@ -698,18 +636,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DlwCD3lq0EiT"
-   },
+   "metadata": {},
    "source": [
     "## **3. Application of Autoregressive Models**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bf-LFf8k0Ed2"
-   },
+   "metadata": {},
    "source": [
     "In this section, we will try to apply an AR model to simulated time series data. We've simulated an AR(2) time series for demonstration because we can do comparison of the actual parameters and estimated parameters. The analytical process is the same for real-world time series data as the simulated time series data. Figure 6 shows the simulated AR(2) time series plot and its actual parameters.\n"
    ]
@@ -771,9 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "h-1lswbx0EN-"
-   },
+   "metadata": {},
    "source": [
     "From figure 7, ACF decreases gradually while PACF drops suddenly. This indicates we should use the AR(2) model, which fits the actual time series process. \n",
     "\n",
@@ -800,9 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qnLBYNAw5OT6"
-   },
+   "metadata": {},
    "source": [
     "From figure 8, we can see both coefficient estimations are close to the actual values and their $p$-values are all significant. Now, let’s check the residuals to see if the residuals follow normal white noise.\n"
    ]
@@ -830,9 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xEgI-3Mc5OJi"
-   },
+   "metadata": {},
    "source": [
     "From figure 9, we can see standardized residuals oscillate around $0$ and move within a flat channel. It indicates the residuals are stationary.\n",
     "\n",
@@ -860,9 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "23Qezlps5N_0"
-   },
+   "metadata": {},
    "source": [
     "From figure 10, we can see that residuals are normally distributed. Hence, we can confirm that the residuals are normal white noise. Lastly, let’s draw a plot to show simulated time series vs. fitted time series.\n"
    ]
@@ -893,37 +819,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PRq08JHP5N1y"
-   },
+   "metadata": {},
    "source": [
     "In figure 11, the black line is the simulated time series, and the orange line is the fitted time series. From the plot, we can see that the fitted line captures the general trend of the simulated time series but not the variation in the simulated time series. The differences are covered by the residuals.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TXSKxlBr5Nui"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bnK4sd7J5Nnu"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we went through the autoregressive model. We first give a brief description of what an AR model is. We then provided the formal definition of an AR model, provided some examples of AR processes, and gave the moments of an AR model. We then moved to discuss how to use ACF and PACF plots to identify an MA model or an AR model. We also explained why and when we can use an infinite AR process to represent an MA model. Then, we talked about two estimation methods for an AR model: the Yule-Walker method and maximum likelihood method. We ended the lesson with a simulated application to show how to model an AR model and conduct post model diagnostics. In the next lesson, we will introduce one comprehensive model and steps to run the model.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -953,8 +870,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
