--- a/module-4/lesson-4/Financial_Econometrics_Module_4_Lesson_4.ipynb
+++ b/module-4/lesson-4/Financial_Econometrics_Module_4_Lesson_4.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **ARIMA MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "D1HXOFIz6DdE"
-   },
+   "metadata": {},
    "source": [
     "*In previous lessons, we learned about the basics of time series, moving average models, and autoregressive models. In this lesson, we are going to use all the time series knowledge we have learned and apply it to this lesson. We are going to introduce the ARIMA model. The ARIMA model combines the AR model and MA model as one model for time series analysis. The Box-Jenkins method provides all the modeling steps for the ARIMA model so the Box-Jenkins method and ARIMA model can be used interchangeably. We will talk about what the ARIMA model is and how to apply it to analyze a time series. Before talking about the ARIMA model, let’s start with the ARMA model.*"
    ]
@@ -85,36 +77,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MELAzOoI6DYu"
-   },
+   "metadata": {},
    "source": [
     "## **1. ARMA Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YZ9slro06DVl"
-   },
+   "metadata": {},
    "source": [
     "ARMA stands for **autoregressive moving average model**. An ARMA model combines an autoregressive model (AR model) and a moving average model (MA model) to model stationary time series. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0wCPucjx6DRa"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 Definition of ARMA($p,q$) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sJf9KmfI6DN8"
-   },
+   "metadata": {},
    "source": [
     "We can define an ARMA($p,q$) model as follows:\n",
     "\n",
@@ -129,18 +113,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NIi5ZRa36DJ2"
-   },
+   "metadata": {},
    "source": [
     "### **1.2 Properties of ARMA($p,q$)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "N57kRjNC6DGa"
-   },
+   "metadata": {},
    "source": [
     "ARMA($p$, $q$) can also be written as follows:\n",
     "\n",
@@ -182,18 +162,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_TXVp4FX6DCg"
-   },
+   "metadata": {},
    "source": [
     "## **2. ARIMA Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "De8NVDIq6C_N"
-   },
+   "metadata": {},
    "source": [
     "ARIMA Model stands for autoregressive integrated moving average model. Why do we add \"integrated\" into the name of the ARIMA model? \"Integrated\" in the ARIMA model means to include the differencing method to remove trend or seasonality in a time series. We learned from the last section that an ARMA model only handles stationary time series. It is different for an ARIMA model. An ARIMA model can handle non-stationary time series. \n",
     "\n",
@@ -232,18 +208,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eb3hwu9v6C3Q"
-   },
+   "metadata": {},
    "source": [
     "## **3. Model Selection Criteria: AIC and BIC**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hBGgRIDz6Czg"
-   },
+   "metadata": {},
    "source": [
     "Before going into Box-Jenkins method, we would like to go over some metrics used to select the best time series model among several choices. \n",
     "\n",
@@ -256,18 +228,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "B2yr16GU6Cv1"
-   },
+   "metadata": {},
    "source": [
     "## **4. Box-Jenkins Methodology**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "VmHDkWD66Cr8"
-   },
+   "metadata": {},
    "source": [
     "The Box-Jenkins method was first introduced by George Box and Gwilym Jenkins. The Box-Jenkins method offers a methodology to derive models for time series data. The steps in Box-Jenkins method consist of \n",
     "\n",
@@ -280,90 +248,70 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "i_Hg_yRw6CoN"
-   },
+   "metadata": {},
    "source": [
     "### **4.1 Model Identification**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9Mb9FWX-6Ckg"
-   },
+   "metadata": {},
    "source": [
     "We will use time series plot, ACF plot, and PACF plot and other information to select the order of AR($p$), order of differencing ($d$), or order of MA($q$) for a ARIMA model. Many times the plots or information at hand do not give us clear information to identify ($p,d,q$). For example, if both $p$ and $q$ are greater than $0$, both ACF and PACF plots will decline geometrically. In that case, we can create a list of possible ARIMA models with various $p,d,q$ combinations. We will then run each ARIMA model and record their AICs and BICs. Then, we choose the model with the smallest AIC and BIC values.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hsTfh-y86Cgj"
-   },
+   "metadata": {},
    "source": [
     "### **4.2 Model Estimation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Bi2EVWN-6Cc9"
-   },
+   "metadata": {},
    "source": [
     "The Box-Jenkins method uses a maximum likelihood method and back-testing to estimate an ARIMA model.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ixaibM996CZC"
-   },
+   "metadata": {},
    "source": [
     "### **4.3 Model Diagnostics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sla21_376CVn"
-   },
+   "metadata": {},
    "source": [
     "After the model is built, we will use a residual plot, a residual QQ plot, ACF of residuals, and the Ljung-Box test to check the goodness-of-fit of the model. We use a residual plot to see if there is any pattern that shows up. We are looking for a random pattern if the model is constructed accurately. For a residual QQ plot, we are looking for the normality of residuals. ACF of residuals will give us an idea if there is autocorrelation among error terms from the model. The Ljung-Box test is to check if there is any overall autocorrelation in the residuals. Then, we will show you how to conduct the forecast once the model is finalized.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "j8yuoc6u6CR1"
-   },
+   "metadata": {},
    "source": [
     "## **5. ARIMA Application: Google Stock Price**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "X_l8bz956COJ"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going to demonstrate how to apply ARIMA to build a model for financial assets. We will use Google's stock price as an example. We will follow the Box-Jenkins methodology to build this model.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tVvAnjkP6CKe"
-   },
+   "metadata": {},
    "source": [
     "### **5.1 Model Identification and Model Estimation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kLz8fKd76CGm"
-   },
+   "metadata": {},
    "source": [
     "Model identification has always been a trial-and-error process. We usually try different model candidates until we get a satisfactory one. During the process of searching for a fit model, we will of course estimate a model candidate. Hence, in this section, we will combine model identification and model estimation together.\n",
     "\n",
@@ -400,9 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6Yur0FWw6B_Y"
-   },
+   "metadata": {},
    "source": [
     "We can see from the time series plot in figure 1 that there is an upward trend for Google stock price from 2016 to 2021. The ACF plot also shows a slow decreasing trend, which indicates a trend in the time series. \n",
     "\n",
@@ -430,9 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Cfb6pzHS6B4Q"
-   },
+   "metadata": {},
    "source": [
     "From figure 3, we can see that now the differenced time series oscillates around $0$, but the recent movements are more volatile. This indicates that the variance is not constant. It is very common for the financial time series data to have non-constant variance. One way to adjust the time series with non-constant variance is to take the log of the time series. Let’s take the log of Google's stock price and do the first differencing. The first difference of the logged Google stock price is very close to Google stock price return, if the return is relatively small. Therefore, in many finance research field, the above method is a way to get the return for a financial asset. Figure 4 shows the result.\n"
    ]
@@ -458,9 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hoLwxCXML7GF"
-   },
+   "metadata": {},
    "source": [
     "From figure 4, we can see the new time series has a more stable variance even though the second half of the investigated period still has higher variation. We will introduce another time series model to model non-constant variance in the next module. For now, let’s check ACF and PACF plots for the first difference of logged Google stock price.\n"
    ]
@@ -497,9 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fW4S21D-L69s"
-   },
+   "metadata": {},
    "source": [
     "From figure 5, it seems that we can try $p=1$ and/or $q=1$ or any other combinations. Fortunately, the statistical software, can automatically test several models and report back the best model with the lowest AIC. The following report shows various ARIMA models and their corresponding AICs.\n"
    ]
@@ -534,9 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BcA0R4g5L61a"
-   },
+   "metadata": {},
    "source": [
     "In figure 6, we can see the software ran a couple of ARIMA models and reported their AICs.\n",
     "\n",
@@ -565,18 +503,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xaJy9LhVL6si"
-   },
+   "metadata": {},
    "source": [
     "### **5.2 Model Diagnostics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QdCrdekML6nu"
-   },
+   "metadata": {},
    "source": [
     "Now we have identified the ARIMA model to model Google stock price and have built and estimated the model. Let’s check our model diagnostics to see if there are some potential structural patterns in Google stock price time series that our ARIMA model does not capture.\n"
    ]
@@ -621,9 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sB6p9Q1qL6eJ"
-   },
+   "metadata": {},
    "source": [
     "In figure 8, we produce a number of graphs for model diagnostics. The first one is the standardized residuals graph. We can see from the residuals graph that there is a period where the variation is higher than other periods. In the next module, we will introduce a method to model non-constant variance for time series data. In the ACF plot for the residuals, the ACFs below lag 5 are not significant. However, lag 6 to lag 9 are still significant. There might be seasonality activity that the model does not capture. From the QQ plot for the residuals, we can see the residuals are not normally distributed since the plot shows fat tails on both ends. The last graph is the Ljung-Box test. What is the Ljung-Box test?\n",
     "\n",
@@ -647,18 +579,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "yBpn0acoL6Zq"
-   },
+   "metadata": {},
    "source": [
     "### **5.3 Forecast of ARIMA(0,1,1)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wIQlXewjL6VS"
-   },
+   "metadata": {},
    "source": [
     "Next, once we are satisfied with our model result, we will start to forecast where Google's stock price will be. In figure 9, we forecast Google stock prices for the next 100 days with 80% confidence interval and 95% confidence interval.\n"
    ]
@@ -711,9 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0qqthPXVL6N6"
-   },
+   "metadata": {},
    "source": [
     "From figure 9, we can see that there is a 80% chance (darker blue shade) that Google's stock price will move within 2400 and 3600 for the next 100 days. \n"
    ]
@@ -735,46 +661,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-sDWxWsuL6KP"
-   },
+   "metadata": {},
    "source": [
     "## **7. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7QG8txNzL6Ga"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced the ARMA model and ARIMA model. We first went through the definitions and properties of ARMA and ARIMA models. We then introduced the Box-Jenkins method to build an ARIMA model. We used the example of Google's stock price to demonstrate the model identification, estimation, and model diagnostics steps to build an ARIMA model. We also showed the model’s forecast result. This lesson concludes the introductory module on time series analysis. So far, we have assumed that variation in a time series is constant. However, in financial data, this is not always the case. In the next module, we will learn how to model time series with non-constant variance. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ve4P_zkO8lRt"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "M5MNagwg8lA_"
-   },
+   "metadata": {},
    "source": [
     "- Box, George, and Gwilym Jenkins. Time Series Analysis: Forecasting and Control. Holden-Day, 1970\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -804,8 +719,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
