--- a/module-5/lesson-1/Financial_Econometrics_Module_5_Lesson_1.ipynb
+++ b/module-5/lesson-1/Financial_Econometrics_Module_5_Lesson_1.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **ARCH MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8FUdfIQ9OKxZ"
-   },
+   "metadata": {},
    "source": [
     "*In the last module, we used the ARIMA model to analyze Google stock price. One key issue we observed was that Google stock price does not exhibit constant variance throughout our modeling time period. This issue does not just happen to Google's stock price. It is very common among many financial asset returns. In this module, we are going to address this phenomenon and find a model to analyze it. We will introduce the ARCH model and GARCH model to handle this issue. They are popular methods in finance to model volatility for many asset returns. In this lesson, we will start with learning the ARCH model and its properties. We will simulate the ARCH process to give a visual example and learn how to use ACF and PACF plots to identify the ARCH process.*"
    ]
@@ -79,36 +71,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lV9AVfieOKt5"
-   },
+   "metadata": {},
    "source": [
     "## **1. Common Features of Financial Asset Returns**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hPRn3g5sOKpv"
-   },
+   "metadata": {},
    "source": [
     "There are several special features from financial asset returns. The existence of these features motivates us to use ARCH and GARCH models to analyze financial asset returns. In this section, we are going to go through these features first so that you will have a better understanding of why we need to learn the ARCH and GARCH models. The first feature we'll talk about is the reason to use asset returns to conduct a research project instead of asset prices. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RAA15aC5OKmP"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 Asset Return Time Series Data is More Stable Than Asset Price Time Series Data**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "42nS-l7ROKin"
-   },
+   "metadata": {},
    "source": [
     "In a lot of financial research, we usually use asset returns instead of asset prices to conduct analysis for a financial asset. Here are some reasons to use asset returns:\n",
     "\n",
@@ -146,9 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "asocZivKOKbw"
-   },
+   "metadata": {},
    "source": [
     "In figure 1, the upper chart is Google’s daily stock price chart. The bottom chart is Google’s stock daily return chart. We can see that Google's price plot has an upward trend whereas Google's return plot oscillates around $0$ and is stable. We can say the return on average is $0$.\n",
     "\n",
@@ -159,36 +141,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3hMISImWOKYb"
-   },
+   "metadata": {},
    "source": [
     "### **1.2 The Volatility of Asset Returns Can Vary During Different Time Periods**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pDV-sOIZOKUr"
-   },
+   "metadata": {},
    "source": [
     "In portfolio management and risk management, managers control risk by monitoring the volatility of the underlying assets. Variance and standard deviations are common metrics to measure volatility. We can see from figure 1 that the local variance of Google stock returns changes substantially across the time period. This time series data exhibits heteroskedasticity. In the return plot, we can see there are pockets of time in the whole period where the movement of returns are more volatile than others. These high volatility pockets do not spread randomly during the whole time period. We call these **volatility clustering**. We notice that there is autocorrelation of asset returns. A highly volatile return one day would be followed by another highly volatile return the next day. It means that the past volatilities will still have an impact on today’s volatility. The highly volatile periods tend to group together. This is a key property that later we would like to model. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GbDRG77tOKRr"
-   },
+   "metadata": {},
    "source": [
     "### **1.3 Asset Return Distribution Has Heavier Tails Than Normal Distribution**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Smb3U7ydOKML"
-   },
+   "metadata": {},
    "source": [
     "We have discussed many times in the previous lessons that financial asset returns often show a distribution with heavier tails than normal distribution. Let’s take a look at Google's stock return distribution to see if the same feature shows up. \n"
    ]
@@ -225,27 +199,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FkCC6tYBOKEj"
-   },
+   "metadata": {},
    "source": [
     "In figure 2, we show Google's stock return histogram and QQ plot. Both plots demonstrate that Google's stock return exhibits fat tail characteristic as well. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vJAA7A28OJ_H"
-   },
+   "metadata": {},
    "source": [
     "## **2. Conditional Means and Conditional Variances**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6jP36wVHOJ8g"
-   },
+   "metadata": {},
    "source": [
     "We have talked about special features for financial asset returns time series. Before we dive into models to formally analyze those features, let’s start by learning some concepts that will prepare us for explaining the models later.\n",
     "\n",
@@ -286,18 +254,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "p5CemogmOJ5O"
-   },
+   "metadata": {},
    "source": [
     "## **3. ARCH(1) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1ohHbJv7OJ09"
-   },
+   "metadata": {},
    "source": [
     "Now let’s formally introduce our first conditional variance model, ARCH(1) model. ARCH stands for autoregressive conditional heteroskedasticity. If we have a stationary asset return time series $r_{t}$, we can define ARCH(1) model for $r_{t}$ as follows:\n",
     "\n",
@@ -316,18 +280,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xiiWpDv_OJxj"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 ARCH(1) is Strictly Stationary**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ew7nCCv2OJt-"
-   },
+   "metadata": {},
    "source": [
     "From $r_{t} = \\sigma_{t} e_{t}$ and $\\sigma^{2}_{t} = \\alpha_{0} + \\alpha_{1} r^{2}_{t-1}$, we know\n",
     "\n",
@@ -342,18 +302,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "O1vLgj8IOJqF"
-   },
+   "metadata": {},
    "source": [
     "### **3.2 $r_{t}$ is Conditionally Normally Distributed**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8Hp5h5tJOJma"
-   },
+   "metadata": {},
    "source": [
     "The conditional mean of $r_{t}$ is given by:\n",
     "\n",
@@ -370,18 +326,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-oi4vdbkOJiz"
-   },
+   "metadata": {},
    "source": [
     "### **3.3 $r_{t}$ is White Noise**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "IDUNdOQMOJe_"
-   },
+   "metadata": {},
    "source": [
     "The unconditional mean of $r_{t}$ is as follows:\n",
     "\n",
@@ -416,18 +368,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UF1Sjz_NOJbo"
-   },
+   "metadata": {},
    "source": [
     "### **3.4 $r_{t}$ Is Not i.i.d.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eZJ3cuaqOJX-"
-   },
+   "metadata": {},
    "source": [
     "Although $r_{t}$ has $0$ covariance to its past values, $r^{2}_{t}$ does depend on the squared past returns. It can be shown as follows:\n",
     "\n",
@@ -441,18 +389,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XAN6nBPuOJTi"
-   },
+   "metadata": {},
    "source": [
     "### **3.5 $r_{t}^{2}$ IS An AR(1) Process**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "v9voJBZuOJQA"
-   },
+   "metadata": {},
    "source": [
     "From the ARCH(1) definition, we can take the square of $r_{t}$ and rewrite the equations as follows:\n",
     "\n",
@@ -481,36 +425,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XQrllwXxOJMp"
-   },
+   "metadata": {},
    "source": [
     "### **3.6 $r_{t}$ Has Heavier Tails Than Standard Normal Distribution If $\\alpha_{1}<\\frac{1}{3}$**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ha0ueqpIZHF4"
-   },
+   "metadata": {},
    "source": [
     "When $3\\alpha_{1}<1$ and $E(r_{t}^{4})<\\infty $, we can show that kurtosis of $r_{t}$ is greater than 3. It means that $r_{t}$ has heavier tails than standard normal distribution. It is similar to our empirical observations that asset return usually has more outliers than a time series generated from normal distribution."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cWEzFxvIOJJx"
-   },
+   "metadata": {},
    "source": [
     "### **3.7 ARCH($m$) Process**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TP12NepvZG8L"
-   },
+   "metadata": {},
    "source": [
     "We have introduced ARCH(1) process in previous sections. We can extend the process to include return values from several pass time periods to form an ARCH($m$) process. An ARCH($m$) process is the process to predict current variance with squared asset return values going back to $m$ time periods. Here is the formal definition for ARCH($m$) process:\n",
     "\n",
@@ -525,9 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "d18qQREgZGvy"
-   },
+   "metadata": {},
    "source": [
     "## **4. ARCH(1) Simulation**"
    ]
@@ -564,9 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9j8a0PRbZGi6"
-   },
+   "metadata": {},
    "source": [
     "Figure 3 shows a simulated ARCH(1) process. From the graph, we can see the time series oscillates around $0$ with occasional bursts of volatility. We can also see there are clusters of high volatility during the whole time period, like around $t = 600$. These features are all in agreement with the common features of financial asset returns we discussed earlier.\n"
    ]
@@ -598,9 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "K0i0yjnMZGYy"
-   },
+   "metadata": {},
    "source": [
     "The ACF and PACF plots in figure 4 shows that the simulated time series do not exhibit any correlations and behave quite like white noise.\n",
     "\n",
@@ -628,37 +558,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nIwMQxS0ZGOn"
-   },
+   "metadata": {},
    "source": [
     "However, in figure 5, the PACF plot of squared simulated time series shows a drop after lag 1. The ACF shows a gradual decline. The two graphs suggest the properties of the AR(1) process for the squared simulated time series.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bK3tuBgNZGJv"
-   },
+   "metadata": {},
    "source": [
     "## **5. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tIqk46VmZGE1"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we went through the definition and properties of an ARCH(1) model and introduced a more general ARCH($m$) process too. In the next lesson, we will introduce another general form of the ARCH process—the GARCH process. The GARCH process is widely used in finance research. We will go through the basics and demonstrate how to apply the GARCH model to a real finance problem.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -688,8 +609,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
