--- a/module-5/lesson-2/Financial_Econometrics_Module_5_Lesson_2.ipynb
+++ b/module-5/lesson-2/Financial_Econometrics_Module_5_Lesson_2.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **GARCH MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7cxW8ig2agTq"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we discussed using the ARCH process to model non-constant variances in financial asset returns. We talked about the common features of financial asset returns, especially the existence of time-varying volatility in the data. We introduced the ARCH process to model non-constant variance specifically. We went through the key properties of the ARCH process. In this lesson, we are going to continue our journey of modeling non-constant variance. We are going to expand ARCH(1) model and introduce a general model: GARCH. We will go through the basics of GARCH and apply GARCH to Google stock returns.*"
    ]
@@ -82,27 +74,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QH61yZzFagP0"
-   },
+   "metadata": {},
    "source": [
     "## **1. GARCH Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zPRRNycFagMp"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 GARCH(1,1) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nnloYIWAagIw"
-   },
+   "metadata": {},
    "source": [
     "GARCH stands for generalized autoregressive conditional heteroskedasticity, and it is an extension of the ARCH model. In the variance function of the ARCH model, a lagged variance term is added to the right of the equation to become a GARCH model. We can formally define GARCH(1,1) as follows:\n",
     "\n",
@@ -133,36 +119,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zhFZUufQagFr"
-   },
+   "metadata": {},
    "source": [
     "### **1.2 Properties of GARCH(1,1) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tP5-X8bTagBn"
-   },
+   "metadata": {},
    "source": [
     "Most of the properties for the GARCH(1,1) model are similar to the ARCH(1,1) model. In this section, we will highlight the key properties for GARCH(1,1).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "R7UZtLOJaf-V"
-   },
+   "metadata": {},
    "source": [
     "#### **1.2.1 $r_{t}$ is Conditionally Normally Distributed**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cfFb68iNaf6Z"
-   },
+   "metadata": {},
    "source": [
     "The above statement follows the same proof as we describe in ARCH(1) model. We can summarize it in the following formula:\n",
     "\n",
@@ -171,18 +149,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3Dk_yZfTaf2n"
-   },
+   "metadata": {},
    "source": [
     "#### **1.2.2 $r_{t}^{2}$ is An ARMA(1,1) Process**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7q7mLy7Wafzb"
-   },
+   "metadata": {},
    "source": [
     "We know that GARCH(1,1) is defined as follows:\n",
     "\n",
@@ -205,18 +179,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2eem5Rp7afwy"
-   },
+   "metadata": {},
    "source": [
     "#### **1.2.3 $r_{t}$ is White Noise**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YeAjpPTUafus"
-   },
+   "metadata": {},
    "source": [
     "Using the same calculation from the ARCH model, we can show that GARCH(1,1) is white noise. We can write unconditional $r_{t}$ distribution as follows:\n",
     "\n",
@@ -229,18 +199,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6zXTT8SXafsm"
-   },
+   "metadata": {},
    "source": [
     "#### **1.2.4 GARCH(1,1) Has Infinite Memory**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vsjJrbmPafo6"
-   },
+   "metadata": {},
    "source": [
     "By iterating the variance equation from GARCH(1,1), we can write the equation as follows:\n",
     "\n",
@@ -256,18 +222,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HRd9077oafl9"
-   },
+   "metadata": {},
    "source": [
     "### **1.3 GARCH($p, q$) Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Hc9GFJ7fafi2"
-   },
+   "metadata": {},
    "source": [
     "As with other time series models we have talked about so far, we can easily extend GARCH(1,1) model to GARCH($p,q$) model. \n",
     "\n",
@@ -298,171 +260,133 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "aWtLDinOaffr"
-   },
+   "metadata": {},
    "source": [
     "## **2. Model Diagnostics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xxaPNPgTafcl"
-   },
+   "metadata": {},
    "source": [
     "There are a number of tests that are usually used to check for ARCH and GARCH models. We will cover some of them in this section.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gkjnSFrEafV9"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 Ljung-Box Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ayLleKBQafSo"
-   },
+   "metadata": {},
    "source": [
     "We introduced this test in last module. The Ljung-Box test is used to see if there is serial correlation in a time series. We use this test if there is an overall correlation in the residuals or squared residuals from a time series model, including ARCH and GARCH models. The null hypothesis ($H_0$) is there is no serial correlation in the time series. Hence, if the $p$-value $< 0.05$, we will reject the null hypothesis, and the time series has a serial correlation issue.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gzVeeWumafOd"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Information Criteria**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "CRvFy0uCafKe"
-   },
+   "metadata": {},
    "source": [
     "In the last module, we also introduced Akaike Information Criterion (AIC) and Bayesian Information Criterion (BIC). These are the metrics used to evaluate overall model specifications. The lower the numbers of AIC and/or BIC, the better the model specifications. There are other information criteria, but we usually focus on AIC or BIC. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2EGDCMK_afGF"
-   },
+   "metadata": {},
    "source": [
     "### **2.3 Log Likelihood Number**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "g9eB_UksafA8"
-   },
+   "metadata": {},
    "source": [
     "We also use the log likelihood number to evaluate the goodness-of-fit of a model if it is fitted with the maximum likelihood method. The lower the log likelihood number, the better the model fit.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "M7HrKiiaae9M"
-   },
+   "metadata": {},
    "source": [
     "### **2.4 Engle's ARCH Lagrange Multiplier (LM) Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JKNr_tgiae5u"
-   },
+   "metadata": {},
    "source": [
     "Engle's ARCH LM test, or Engle's ARCH test, determines if there is a serial correlation (autocorrelation) issue in the squared residuals of a time series model. The null hypothesis ($H_0$) is that there is no serial correlation in the squared residuals.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8ZTaxP2mae3H"
-   },
+   "metadata": {},
    "source": [
     "### **2.5 Nyblom Stability Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ZF7cdqzJaezr"
-   },
+   "metadata": {},
    "source": [
     "This is the test to check if there is a regime change for the time series over time. The test checks if there is any structural change among variables or if coefficients are stable with no variation overtime. The null hypothesis ($H_0$) is that there is no regime change and the variances for coefficients are $0$.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "elipr_eCaewC"
-   },
+   "metadata": {},
    "source": [
     "### **2.6 Sign Bias Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "iWz9PNK68Rx4"
-   },
+   "metadata": {},
    "source": [
     "This is the test to check if shocks not modeled by the model have an impact on volatilities. The sign bias test is used to determine the impact of large and small shocks on volatility. The negative sign bias test is to check if negative shocks not modeled by the model have an impact on volatility. The positive sign bias test is to check if positive shocks not modeled by the model have an impact on volatility. The null hypothesis ($H_0$) is that there is no impact from shocks not modeled by the model. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QHQ49unb8Rrd"
-   },
+   "metadata": {},
    "source": [
     "### **2.7 Adjusted Pearson Goodness-of-Fit Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qpsHLYpw8RiW"
-   },
+   "metadata": {},
    "source": [
     "This test compares the empirical distribution of standard residuals with the selected theoretical distribution. It is a chi-squared test. The null hypothesis ($H_0$) is that the empirical distribution of the standard residuals is equal to theoretical distribution.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "EJQ5rmVZ8Rdy"
-   },
+   "metadata": {},
    "source": [
     "## **3. GARCH Application: Google Stock Return**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "la_bXB3V8RZV"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going to use Google stock return data from 2016 to 2021 to run a GARCH model. We’ll start by looking into the data first before building the model.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0wk3xPO78RRn"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 Data Exploration**"
    ]
@@ -489,9 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4n9ozswT8RBO"
-   },
+   "metadata": {},
    "source": [
     "In figure 1, we can see Google stock returns are oscillating around $0$. We can see there are periods of time when the volatilities of returns are higher than other times. This pattern of volatility in Google stock return data is the phenomenon that the GARCH model tries to capture.\n"
    ]
@@ -525,9 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "b7JbZ8QZ8Q0S"
-   },
+   "metadata": {},
    "source": [
     "Figure 2 shows the histogram of Google’s stock returns and a normal distribution curve overlaid on it. We can see Google’s stock return distribution has a higher peak and fatter tail than normal distribution.\n"
    ]
@@ -554,9 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HyxPyfRY8Qq2"
-   },
+   "metadata": {},
    "source": [
     "In figure 3, we can clearly see that Google stock returns have a fat-tailed distribution compared to normal distribution.\n"
    ]
@@ -583,9 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SrZAi2Ld8Qha"
-   },
+   "metadata": {},
    "source": [
     "From figure 4, we can see there are serial correlations to the squared return for Google stock. The high returns are usually followed by more volatilities.\n"
    ]
@@ -626,18 +542,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "sMEDMHXY8QYY"
-   },
+   "metadata": {},
    "source": [
     "In figure 5, ACF and PACF plots for Google stock returns and squared returns all show patterns like the ARMA model. Hence, we can start with the GARCH(1,1) model for model specifications.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "IdtLwAcN8QTv"
-   },
+   "metadata": {},
    "source": [
     "### **3.2 Model Estimation and Diagnostics**"
    ]
@@ -694,9 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lceCgNpj-aKg"
-   },
+   "metadata": {},
    "source": [
     "Figure 6 shows the GARCH(1,1) model with normal white noise. Everything looks good from the model results except that we can see one of the coefficient estimates is not significant. Now let's look on some diagnostic plots. \n"
    ]
@@ -794,9 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GXVd3V40-aBJ"
-   },
+   "metadata": {},
    "source": [
     "From figure 7, we can see that normal QQ plot for residuals is still showing fat-tailed distribution. With this piece of information, let’s try a GARCH(1,1) model with Student's t-distribution to see if we can improve the model.\n"
    ]
@@ -851,9 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MBuUvDO5-ZlI"
-   },
+   "metadata": {},
    "source": [
     "In figure 8, now all the coefficient estimates are significant. Let’s check the model diagnostic plots.\n"
    ]
@@ -952,18 +858,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lu9QIZs7_hQc"
-   },
+   "metadata": {},
    "source": [
     "From figure 9, we can see the StudentsT QQ plot shows the model is a good fit. Hence, GARCH(1,1) with Student's t white noise fits the model pretty well.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ojZk_Lm-_hGT"
-   },
+   "metadata": {},
    "source": [
     "### **3.3 Model Forecast**"
    ]
@@ -1027,37 +929,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0266p3pH_gxq"
-   },
+   "metadata": {},
    "source": [
     "In figure 10, we plot the 20 steps ahead forecast for Google stock return data based on the GARCH(1,1) with Student's t white noise. As the forecast goes farther out, we can see that the 1-sigma bands get wider.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DB-Lfa0g_gtN"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dj0ToXda_gk6"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced the GARCH model. We first gave the definition of GARCH(1,1) model. We then went through the properties of the GARCH(1,1) model. We also briefly expanded the GARCH model to a higher order GARCH($p,q$) model. Next, we talked about estimation of the GARCH model and the tests for model diagnostics. We finished the lesson with a GARCH application to Google stock returns. In the next lesson, we will go over some details about estimation methods for the GARCH model.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -1087,8 +980,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
