--- a/module-5/lesson-3/Financial_Econometrics_Module_5_Lesson_3.ipynb
+++ b/module-5/lesson-3/Financial_Econometrics_Module_5_Lesson_3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **BAYESIAN ESTIMATION FOR GARCH MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HD2KxkEZAF1N"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we mentioned the most commonly used estimation method for GARCH model is maximum likelihood estimation (MLE). In this lesson, we are going to introduce an alternative estimation method: Bayesian estimation. Bayesian estimation or Bayesian statistics is a branch in the field of statistics. It has a different approach from what we have learned so far to apply probability to data analysis. We will first introduce what Bayesian statistics is, how it works, and then we will discuss the differences between the Bayesian statistics and the statistical method we have been using. Then we will demonstrate how to use the Bayesian method to estimate the GARCH model. Bayesian statistics is a rich field in statistical analysis. In this lesson, we will only touch upon the surface of Bayesian statistics that should be enough for you to get through estimating a GARCH model. Apart from use in time series analysis, Bayesian statistics has gained a lot of interests in many areas that this is a subject worth diving into. We encourage interested students to seek more information about Bayesian statistics beyond this course.*"
    ]
@@ -79,63 +71,49 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UKZpl-BmAFwv"
-   },
+   "metadata": {},
    "source": [
     "## **1. Bayesian Statistics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ZeZvQQogAFsj"
-   },
+   "metadata": {},
    "source": [
     "### **1.1 What is Bayesian Statistics?**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xe1-53b4AFoe"
-   },
+   "metadata": {},
    "source": [
     "**Bayesian statistics** uses Bayes’ theorem as the foundation to apply probabilities to data analysis. From the method we have been learning so far, we assume parameters like mean, variance, and standard deviations are unknown but fixed parameters. This method is called **frequentist statistics**. Maximum likelihood estimation belongs to frequentist statistics. On the other hand, in Bayesian statistics, mean, variance and standard deviations are random variables with probability distributions. This is the main difference between frequentist statistics and Bayesian statistics. To run Bayesian statistics, a researcher has to either use experience or other techniques to assume a parameter’s probability distribution before running the analysis. We call these probability distributions **prior probability distributions** or **priors**. We then combine the information from data to derive **posterior probability distributions for parameters** or **posteriors**. The required readings in this lesson will provide definitions and applications of these concepts in more detail. It is good that now the parameters are not unknown fixed values but rather random variables. This change can make analysis more flexible. However, this method sometimes is criticized for subjective parameter probability distribution choice by the researcher before running the data analysis. There is a lot of debate about advantages and disadvantages of frequentist statistics vs. Bayesian statistics. For students who are interested in knowing more detail, there is a lot of material online.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ueS9X6rqAFkU"
-   },
+   "metadata": {},
    "source": [
     "### **1.2 Basics of Bayesian Updating, Prior Probability Distributions, Posterior Probability Distributions, and Likelihood Function**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lvuSXH4GAFgx"
-   },
+   "metadata": {},
    "source": [
     "Before continuing this lesson, please read the required readings for this lesson. The required readings will cover the concept of Bayesian updating, prior probability distributions (priors), posterior probability distributions (posteriors), and likelihood functions in detail. In the following sections of this lesson, we will use these concepts extensively so it is important that you are familiar with these concepts before proceeding to the next section.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ArjezsBvAFcH"
-   },
+   "metadata": {},
    "source": [
     "### **1.3 Sampling from Posterior Probability Distribution**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UwYb6i6fAFYZ"
-   },
+   "metadata": {},
    "source": [
     "We learned in the last section how to derive posterior probability distributions for parameters we are interested in analyzing. We know a posterior distribution is the multiplication of the likelihood function and the prior distribution. Oftentimes, a posterior distribution formula is too complicated to manipulate or is in high dimension. Hence, we have to conduct sampling to obtain a series of sample data points from the posterior distribution to investigate its marginal distribution density, mean, and other parameters. \n",
     "\n",
@@ -146,18 +124,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "A0byFtfdAFU2"
-   },
+   "metadata": {},
    "source": [
     "## **2. Bayesian Estimation on GARCH Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "yyLaa66YAFRD"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going to go over the steps to use Bayesian method to fit a GARCH model. Specifically, we will focus on a GARCH model with Student's t innovations (errors). From the last lesson, we see that one common feature of financial asset returns is their heavy tail distribution. Hence, it is reasonable to use Student's t-distribution to model asset returns. \n",
     "\n",
@@ -186,18 +160,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "axQqfnJtAFMh"
-   },
+   "metadata": {},
    "source": [
     "## **3. Application: Google Stock Return**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RbZJaMf8AFH7"
-   },
+   "metadata": {},
    "source": [
     "In this section, we will use Google stock return to fit a GARCH model by using the Bayesian estimation method. We will use Python package: PyMC3 to run this model. The PyMC3 package has inbuilt GARCH(1,1) distribution that will make the code easier to implement. We should bear in mind that the inbuilt GARCH distribution is with Normal innovations. However, from the Ardia and Hoogerheide (2006) we can learn that the priors for Bayesian GARCH(1,1) with Normal innovations remain the same. Hence, we provide this example for demonstration purposes.\n",
     "\n",
@@ -294,9 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3uQ-njJEAFAK"
-   },
+   "metadata": {},
    "source": [
     "On the right of figure 1 are the plots called trace plots for parameters. Let’s focus on the trace plot of *alpha0* for now to learn how to read the plot. There are two series on the trace plot. One is blue and the other is orange. They represent the two chains sampled from MCMC. Let’s focus on the blue one first. The trace plot lays out the way that the first sampled data is on the leftmost side of the plot, and the second sampled data follows it to the right and so on and so forth. We can see that the first 300 samples start with very volatile movement. As more and more sampled data is collected, the series starts to converge to a value of around $0.12$. However, there is some volatility between the 500th sample and 100th sample. The orange chain in general demonstrates a pattern similar to the blue chain. Let’s run the summary test to see how well the MCMC sample converges.\n"
    ]
@@ -320,9 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XSZHvipBAEwT"
-   },
+   "metadata": {},
    "source": [
     "Last column in Figure 2 for *r_hat* represents the Gelman-Rubin statistic. It tests for lack of convergence by comparing the variance between multiple chains to the variance within each chain. If convergence has been achieved, the between-chain and within-chain variances should be identical. If *r_hat* < 1.2 for all model parameters, we can have some confidence that convergence has been reached.\n",
     "\n",
@@ -424,9 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dQP_1_nPAEoX"
-   },
+   "metadata": {},
    "source": [
     "In figure 3, we can see that after adding starting values to the code, the trace plot for all priors converges better in this round of MCMC. Let’s check the Gelman-Rubin convergence test and other parameter estimations.\n"
    ]
@@ -450,9 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rpxEAHWAAEgF"
-   },
+   "metadata": {},
    "source": [
     "We can see from figure 4 that all the parameters have converged pretty well after adding starting values to the code and *r_hat* improved.\n",
     "\n",
@@ -502,9 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "yrMbGJdaAEYV"
-   },
+   "metadata": {},
    "source": [
     "From figure 5, we can see we only have one series in each plot now as we have combined chain 1 and chain 2. The trace plots all seem to oscillate within a range and show no trends. On the left, we can see that the marginal densities of *alpha0* and *alpha1* seem to skew to the right while the marginal density for beta skew to the left. Let’s check the final parameter estimates.\n"
    ]
@@ -528,9 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8C_z45vxAEQH"
-   },
+   "metadata": {},
    "source": [
     "In figure 6, we can see that all estimated coefficients are well behaved and confined in the restrictions to meet stationarity and positive and finite variance requirements. In figure 7 below, we can compare the estimated coefficients from MLE and Bayesian estimations. We can see the estimated coefficients are similar. We achieved this comparable result partly because we used MLE estimates as our starting values for MCMC sampling. By carefully selecting starting values for MCMC, we can control the behavior of the estimated coefficients.\n"
    ]
@@ -550,36 +508,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PsriZUTNAEKR"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DeRAFSnAAEHX"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we first introduced Bayesian statistics. We discussed Bayesian statistics and the main difference between the frequentist and Bayesian methods. Then, we looked at Bayesian updating, prior distributions, likelihood functions, and posterior distributions. Next, we described how MCMC can sample data from posterior distribution for analysis. Finally, we use the Google stock return to run a GARCH model and described the steps required to run Bayesian estimation for this GARCH model. Bayesian statistics is a powerful tool to learn apart from the frequentist method we are already very familiar with. Bayesian statistics will also play an important role in machine learning, which you will learn in the following course.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eT7rt0d49F-G"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zWJR0s-39FuO"
-   },
+   "metadata": {},
    "source": [
     "- Ardia, David, \"Bayesian Estimation of the GARCH(1,1) Model with Normal Innovations\", Munich Personal RePEc Archive, September 2006\n",
     "\n",
@@ -588,10 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -624,8 +571,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
