--- a/module-6/lesson-1/Financial_Econometrics_Module_6_Lesson_1.ipynb
+++ b/module-6/lesson-1/Financial_Econometrics_Module_6_Lesson_1.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **UNIT ROOT TESTS**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "R7mzodYHWq3v"
-   },
+   "metadata": {},
    "source": [
     "*In the last two modules, we learned that stationarity is a key property for time series. For example, ARMA models require the time series to be stationary before modeling. We provided conditions to ensure a time series is stationary in previous lessons. In this lesson, we will introduce some formal tests to check if a time series is stationary. We will first briefly review the definitions of strict and weak stationarities. Then, we will introduce three types of stationarity tests: Dickey-Fuller test, augmented Dickey-Fuller test, and the Kwiatkowski-Phillips-Schmidt-Shin (KPSS) test. We will finish the lesson with some examples applying these tests.*"
    ]
@@ -77,18 +69,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "j_shpFT7WqxJ"
-   },
+   "metadata": {},
    "source": [
     "## **1. Weak and Strict Stationarity**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vuk2oNgjWqrY"
-   },
+   "metadata": {},
    "source": [
     "In Lesson 1 of  Module 4, we introduced the notions of weak stationarity and strict stationarity for time series. If a time series is weak stationary, the mean is constant and independent of time location; the autocorrelation of any two data points in the time series will only depend on the time difference but not on the time locations of the data points. For strict stationarity, the joint probability of the time series data points is the same when time shifts. \n",
     "\n",
@@ -103,36 +91,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "z8CaNFM2Wqmt"
-   },
+   "metadata": {},
    "source": [
     "## **2. Unit Root Tests**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "M8mfmEO8Wqhi"
-   },
+   "metadata": {},
    "source": [
     "A **unit root test** is the most popular testing method to test for stationarity for a time series. There are several methods that belong to unit root tests. In this section, we will introduce three unit root testing methods. First, let’s talk about what a unit root is.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "g9aewPVQWqcf"
-   },
+   "metadata": {},
    "source": [
     "### **2.1 What are Unit Roots?**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zc1fAWGuWqW_"
-   },
+   "metadata": {},
    "source": [
     "If a time series has a unit root, the time series is not stationary. But does it have a unit root? Assume $x_t$ follows an AR(1) process:\n",
     "\n",
@@ -163,18 +143,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tl1oKW5vWqSd"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Dickey Fuller Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hH9ks3N7WqM-"
-   },
+   "metadata": {},
    "source": [
     "The first unit root test we'll discuss is the Dickey Fuller test. The Dickey Fuller test determines if unit roots exist in a time series. The Dickey Fuller test is the base of the augmented Dickey Fuller test, which we will discuss in the next section. The Dickey Fuller test can be described as follows.\n",
     "\n",
@@ -258,18 +234,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PB5E4byoWqIF"
-   },
+   "metadata": {},
    "source": [
     "### **2.3 Augmented Dickey Fuller Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6AbqTNMPWqCt"
-   },
+   "metadata": {},
    "source": [
     "The augmented Dickey Fuller test (ADF) is the most popular unit root test to use in research. Compared to the Dickey Fuller test, the ADF test includes the lag difference terms of the time series in the equation. The reason the ADF test includes lag difference terms is to control the serial correlation in the time series of interest. We can write the three versions of ADF equations and tests as follows (we will omit $H_1$ here as they are the same as in the last section):\n",
     "\n",
@@ -294,18 +266,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ZJr9edxAWp-T"
-   },
+   "metadata": {},
    "source": [
     "### **2.4 Kwiatkowski-Phillips-Schmidt-Shin (KPSS) Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0DLt8VAOWp5-"
-   },
+   "metadata": {},
    "source": [
     "The KPSS test is a popular stationary test. It is usually used as a complement to unit root tests. The KPSS test determines whether there is a time trend (or deterministic trend) in the time series. In the beginning of the lesson, we learned a time series with only a time trend and white noise is trend stationary. Hence, KPSS can be described as a test if a time series is trend stationary. The KPSS test can be stated as follows:\n",
     "\n",
@@ -323,36 +291,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "CJTyG-nSWp1w"
-   },
+   "metadata": {},
    "source": [
     "### **2.5 After Unit Root Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LjnkzWK_WpxN"
-   },
+   "metadata": {},
    "source": [
     "Once we conclude that a time series is non-stationary after a unit root test or a stationary test, we can take the necessary steps to make it stationary. If a time series has unit roots, we can take the first difference of the time series and then check the new time series again with a unit root test. It is an iterative process until the time series has no unit root and is stationary. Also, if there is a time trend, we can implement the regression method to remove the trend. Once we are sure the time series is stationary, we can move on to build an ARMA model or conduct the next analysis.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "u_MDcjqIWpsu"
-   },
+   "metadata": {},
    "source": [
     "## **3. Unit Root Test Application: Google Stock Price**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "l3-1PydYWpog"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going to look into Google's stock price and run both ADF and KPSS tests on it. The time range of the time series is from 2016 to 2021. Let’s look at the plot of Google's stock price first.\n"
    ]
@@ -382,9 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pL-4feNFWpft"
-   },
+   "metadata": {},
    "source": [
     "From the above Google price chart, we can see that Google's stock price grows at an exponential rate. Let’s do three versions of the ADF and KPSS tests and see the results.\n"
    ]
@@ -410,9 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YpNnFPUoWpXH"
-   },
+   "metadata": {},
    "source": [
     "From figure 2, we see that the ADF test's statistic is 3.048. The 5% critical value is -1.94. Hence, we cannot reject $H_0$. The conclusion is that there is a unit root in Google's stock price. \n",
     "\n",
@@ -440,9 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JTR6_tqTWpOf"
-   },
+   "metadata": {},
    "source": [
     "From figure 3, we can see the ADF test statistic is 1.546, and the 5% critical value is -2.86. Hence, we cannot reject $H_0$ that there is a unit root. The conclusion is that we have a unit root and a drift in Google's stock price. \n",
     "\n",
@@ -470,9 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-wIaPdi6WpF-"
-   },
+   "metadata": {},
    "source": [
     "Figure 4 shows the ADF test results for a model with drift and trend. We see that we cannot reject $H_0$ at a 5% critical value level for all three models. This means that the time trend should not be included in the model. Let’s run a KPSS test to see if we get the same result.\n"
    ]
@@ -497,9 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2Ktmlfp1Wo9v"
-   },
+   "metadata": {},
    "source": [
     "In figure 5, we can see the test results show that the $p$-value is smaller than 5%. It is a clear sign to reject $H_0$. The conclusion is Google's stock price is not trend stationary and has a unit root. \n",
     "\n",
@@ -534,9 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LEh0TRbWWo3B"
-   },
+   "metadata": {},
    "source": [
     "Now let’s run the three versions of an ADF test for the logged difference of Google's stock price and see the results. We are only going to focus on the ADF test statistics and 5% critical values for the three models. The following table only provides the information necessary from the model results to make a decision.\n",
     "\n"
@@ -571,9 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ozviuwfN2wnG"
-   },
+   "metadata": {},
    "source": [
     "From figure 7, we can see that there is no unit root for the logged difference of Google's stock price. Let’s run a KPSS test for the logged difference of Google's stock price as well.\n"
    ]
@@ -598,55 +544,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hQTYoETS2wbf"
-   },
+   "metadata": {},
    "source": [
     "From figure 8, we can see that the KPSS test cannot reject $H_0$, and we can conclude that there is no unit root. From the ADF and KPSS tests, we can say that the logged difference of Google's stock price is stationary. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ESGg2Aqr2wS3"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "l19zAjxuWozY"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced a unit root test to test for stationarity of a time series. We first described what a unit root is. We then introduced the first unit root test: the Dickey Fuller Test. We went through the basic theory and the three versions of the test. Although we do not use Dickey Fuller test as much now, it serves as a good base test to understand the next test: the augmented Dickey Fuller test. ADF is the most popular unit root test nowadays. We also went through its theory and the three versions of the test. We then discussed the KPSS test. This is another unit root test that can be used to compliment the ADF test. Finally, we used Google's stock price as an example to run through the ADF test and KPSS test. We showed how to read the results from the tests and draw conclusions. This lesson concludes our study of analysis of univariate time series or one time series. In the next few lessons, we will start to study two or more time series and analyze their interactions. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "U5EpjKm69qIf"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3gYchMuQ9p2x"
-   },
+   "metadata": {},
    "source": [
     "- Dickey, David A., and Wayne A. Fuller. \"Distribution of the Estimator for Autoregressive Time Series with a Unit Root.\" Journal of the American Statistical Association, vol. 74, no. 366, 1979, pp. 427–431.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -677,8 +610,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
