--- a/module-6/lesson-2/Financial_Econometrics_Module_6_Lesson_2.ipynb
+++ b/module-6/lesson-2/Financial_Econometrics_Module_6_Lesson_2.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **ERGODICITY AND VECTOR AUTOREGRESSIVE MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_zj6DAjnGX8s"
-   },
+   "metadata": {},
    "source": [
     "*So far, we have been learning how to analyze single time series or univariate time series. Starting from this lesson, we are going to expand our analysis to two time series or bivariate time series. The theory can easily extend to multiple time series. The first multivariate time series model we are going to look into is the vector autoregressive model (VAR). Then, we will present an example of how to apply the VAR model to forecast financial asset performance. Before talking about the VAR model, we will cover a desired property we would like to have for a time series: ergodicity.*"
    ]
@@ -75,9 +67,7 @@
     "\n",
     "# Convert date variable to date format and set index\n",
     "m6_data[\"Date2\"] = pd.to_datetime(m6_data[\"Date\"], format=\"%m/%d/%Y\")\n",
-    "data_set = m6_data.loc[\n",
-    "    :,\n",
-    "].set_index(\"Date2\")\n",
+    "data_set = m6_data.loc[:,].set_index(\"Date2\")\n",
     "\n",
     "# Selecting GOOGLE, EURUSD, UST10Y\n",
     "goog = data_set.GOOGLE\n",
@@ -87,9 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Mr6lVNkgGX0e"
-   },
+   "metadata": {},
    "source": [
     "## **1. Ergodicity**"
    ]
@@ -114,9 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "m0tLvaiTGXng"
-   },
+   "metadata": {},
    "source": [
     "From table 1, we see the Stock A price data points as $\\{ x_1, x_2, x_3, x_4, x_5 \\}$. In time series analysis, we say these data points are one data realization from a series of random variables $\\{ X_1, X_2, X_3, X_4, X_5 \\}$ in five days. Given this setup, Stock A price data points can have another realization, say  $\\{ x'_1, x'_2, x'_3, x'_4, x'_5 \\}$, from the series of random variables over a series of equally distanced time points. We call the system of these series of random variables a **stochastic process**. AR, MA, or ARIMA models are all examples of stochastic processes. The time series data we actually obtain is just one data realization from the stochastic process. We can treat the time series data as just one sample from the stochastic process. If we do another sampling, we will get another collection of data points. In the real world, we only get one realization of data points though.\n",
     "\n",
@@ -133,18 +119,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RQ54FGzTGXi-"
-   },
+   "metadata": {},
    "source": [
     "## **2. Vector Autoregressive Model (VAR)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "okHII-I2GXd_"
-   },
+   "metadata": {},
    "source": [
     "Vector Autoregressive Model (VAR) is a time series model that is used to forecast two or more time series. VAR model can also be used to understand the joint dynamic interaction among time series. VAR is a multiple variables version of an AR model. Let’s use a VAR model to explain how it works.\n",
     "\n",
@@ -179,18 +161,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "AGi4v0wDGXZF"
-   },
+   "metadata": {},
    "source": [
     "## **3. VAR Model Application: Google Stock Price, EUR/USD Forex Rate and U.S. 10-Year Treasury Yield**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YlUNVLKlGXUd"
-   },
+   "metadata": {},
    "source": [
     "In this section, we are going use data from Google Stock Price, EUR/USD Forex Rate, and the U.S. 10-year Treasury yield to build a VAR model. First, let’s draw time plots for the three time series.\n"
    ]
@@ -242,9 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BlRhPDy7GXLG"
-   },
+   "metadata": {},
    "source": [
     "From figure 1, we can see that Google's stock price has a long-term trend and the other two assets have short trends during the period. Let’s ADF test to check for their stationarity.\n"
    ]
@@ -282,9 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "iWgjem6-GXBM"
-   },
+   "metadata": {},
    "source": [
     "From figure 2, we can see that none of the financial assets has an ADF test statistic lower than 5% critical value. Hence, we cannot reject $H_0$ hypothesis and there are unit roots in three time series. Let’s take the first difference and check the differenced time series again.\n"
    ]
@@ -339,9 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tYh4VpgNGW3q"
-   },
+   "metadata": {},
    "source": [
     "From figure 3, we can see that the three differenced time series are all moving around $0$ now. Let’s check their ADF tests.\n"
    ]
@@ -379,9 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "agzk-myjGWus"
-   },
+   "metadata": {},
    "source": [
     "From figure 4, we can see the ADF test statistics for three time series are all lower than the 5% critical value. Therefore, we can conclude that we can reject $H_0$ hypothesis and state that the three differenced time series do not have unit roots.\n",
     "\n",
@@ -414,9 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NGdn1E3HGWlL"
-   },
+   "metadata": {},
    "source": [
     "From figure 5, we can see different information criteria gives different results. One lag and nine lags are the two options from the results. We can run one set of a VAR model with one lag and one set of a VAR model with nine lags and then compare the model results and select the optimal one. In this case, we are going to select only one lag for the purpose of demonstration.\n",
     "\n",
@@ -463,9 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xPxPB_HfGV1_"
-   },
+   "metadata": {},
    "source": [
     "Figure 6 lists out the coefficient estimates for three equations. For the Google equation, Google lag 1 and 10-year treasury yield lag 1 are significant. For EUR/USD Forex rate, 10-year Treasury yield lag 1 is significant. For 10-year Treasury yield, Google lag 1 is significant. Now, let’s check out the forecast plots from the model. \n"
    ]
@@ -541,27 +507,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "r2VakgyyLaCZ"
-   },
+   "metadata": {},
    "source": [
     "In figure 7, we can see the forecast plots for differenced time series. The forecast for the three time series stays flat. In figure 8, we converted the difference forecast to level forecast. Google stock seems to stay flat in the level forecast. EUR/USD forecast is slightly up and the U.S. 10-year Treasury yield is slightly up.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0O2J6C8JLZ9r"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "d34pRzipLZ5j"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we started by introducing the concept of ergodicity. Ergodicity is a time series property, which states that the values of a time series move around the mean of the process and as the number of data points increase, the more likely that these data points will cover all the possible values of the distribution of the process. We provided a counterexample to demonstrate the idea of ergodicity. We then gave an intuitive definition of ergodicity. We finished this topic by briefly discussing its importance for time series analysis.\n",
     "\n",
@@ -570,10 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -603,8 +560,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
