--- a/module-6/lesson-3/Financial_Econometrics_Module_6_Lesson_3.ipynb
+++ b/module-6/lesson-3/Financial_Econometrics_Module_6_Lesson_3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **COINTEGRATION AND ERROR CORRELATION MODEL**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "y0My9j1kL0Hz"
-   },
+   "metadata": {},
    "source": [
     "*In this lesson, we are going to investigate the issue of using non-stationary time series to run a regression model. We will first point out the problem if both dependent time series and independent time series are non-stationary. Then, we will elaborate that, under certain circumstances, we can still use non-stationary time series to run a regression. That is when different time series are cointegrated in one model. Then, we will introduce a revised regression model for cointegrated time series. In this lesson, we will focus on only two time series. In the next lesson, we will extend the analysis to more than two time series.*"
    ]
@@ -80,18 +72,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "O5uzEMfCL0C5"
-   },
+   "metadata": {},
    "source": [
     "## **1. Spurious Regression**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ORzyKhfTLz-R"
-   },
+   "metadata": {},
    "source": [
     "**Spurious regression** means one random walk time series runs an ordinary least squares regression on another random walk time series and the regression result will show a significant relationship even if the two random walk time series are independent. Granger and Newbold (1974) show that the regression result will likely show a non-existing relationship. \n",
     "\n",
@@ -135,27 +123,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dviJZAerLz5t"
-   },
+   "metadata": {},
    "source": [
     "## **2. Cointegration**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_A33KBoFLz05"
-   },
+   "metadata": {},
    "source": [
     "### **2.1. The Basics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NlmgxLF1Lzwp"
-   },
+   "metadata": {},
    "source": [
     "Time series $x_t$ and $y_t$ are cointegrated if they have the following properties:\n",
     "\n",
@@ -191,9 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SBFqrOm0LzoE"
-   },
+   "metadata": {},
    "source": [
     "Figure 1 shows the time plot for both AUDUSD and NZDUSD. From the plot, we can see the two forex rates move in tandem from 2016 to 2021. In figure 2, we show the difference between AUDUSD and NZDUSD. From the plot, the difference seems to be moving in a broad channel.\n"
    ]
@@ -220,18 +200,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nMWiG1h2Lzft"
-   },
+   "metadata": {},
    "source": [
     "### **2.2 Engle-Granger Two-Step Procedure (EG Test) to Test for Cointegration**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Ehs4CWLFLzad"
-   },
+   "metadata": {},
    "source": [
     "In the last section, we talked about the definition of two time series cointegrating with each other. In this section, we are going to introduce methods to test for two time series to see if they are cointegrated. First, we will introduce the **Engle-Granger two-step procedure**. We’ll call it the EG test for short in this lesson. This is a popular method to test for cointegration. In the next lesson, we will introduce another method.\n",
     "\n",
@@ -259,18 +235,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9YCbOkLqLzVu"
-   },
+   "metadata": {},
    "source": [
     "### **2.3 EG Test for Cointegration Example: AUDUSD vs NZDUSD**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JhrQRTreLzQy"
-   },
+   "metadata": {},
    "source": [
     "After describing how to use the EG test to check for cointegration of two time series, let’s apply it to AUDUSD and NZDUSD historical forex rates.\n",
     "\n",
@@ -308,9 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "w75xme01LzHi"
-   },
+   "metadata": {},
    "source": [
     "Figure 3 shows the result of the ADF tests on levels of AUDUSD and NZDUSD. We can see that we cannot reject $H_0$ that there is a unit root for both cases. Now let’s check the difference of AUDUSD and NZDUSD.\n"
    ]
@@ -348,9 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "G0xvAdjTLy-0"
-   },
+   "metadata": {},
    "source": [
     "Figure 4 shows the ADF test results for the first difference of AUDUSD and NZDUSD. In both cases, we can easily reject $H_0$ that a unit root exists. Hence, we can claim that both AUDUSD and NZDUSD are $I(1)$.\n",
     "\n",
@@ -381,27 +349,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lGTlic7ILy2l"
-   },
+   "metadata": {},
    "source": [
     "From figure 5, we can see the $p$-value is less than 0.05 critical value. Hence, we can reject $H_0$ and claim that AUDUSD and NZDUSD are cointegrated. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "l7dV1SRULyya"
-   },
+   "metadata": {},
    "source": [
     "## **3. Error Correction Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "AH0S5ob7LytY"
-   },
+   "metadata": {},
    "source": [
     "In section 1, we talked about the fact that if we run a regression on non-stationary time series, we might run into a spurious regression issue. In section 2, we went through the situation when two time series are cointegrated, the residuals of their regression will be stationary. We also discussed the fact that when time series are cointegrated, there exists a long-term equilibrium among them. We have already seen many different financial data moving in different directions in short term but in the long run they display a consistent relationship. How can we use what we have learned about cointegration to build a financial model and analyze the behavior of cointegrated non-stationary time series? The error correction model provides an answer for us. \n",
     "\n",
@@ -459,18 +421,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0phAPfFALyoh"
-   },
+   "metadata": {},
    "source": [
     "## **4. ECM Model Example: AUDUSD vs NZDUSD**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HUUeN-aXLyj8"
-   },
+   "metadata": {},
    "source": [
     "In this section, let’s run an ECM model on AUDUSD and NZDUSD. AUDUSD will be the dependent variable and NZDUSD will be the independent variable. In the last section, we have already checked that both AUDUSD and NZDUSD are $I(1)$ and they are cointegrated. Hence, we can run an ECM on them. Figure 6 shows the model results.\n"
    ]
@@ -501,9 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cMSzCz39Lybe"
-   },
+   "metadata": {},
    "source": [
     "Figure 6 shows the ECM results for AUSDUSD and NZDUSD. From the results, we can see all coefficient estimates are significant. $\\lambda$ is AUDUSD.L1 = -0.0157, which meets our criteria to be between $0$ and $-1$. It means if the AUDUSD exchange rate deviates 1 point from the long-term equilibrium with NZDUSD at time $t-1$, AUDUSD will drop 0.0157 point at time $t$ to bring it back to long-term equilibrium. \n",
     "\n",
@@ -529,27 +485,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "THiRLDM2LyUB"
-   },
+   "metadata": {},
    "source": [
     "From figure 7, we can see the residuals are serially uncorrelated, which is the ECM model required for the residuals. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oGiiilW-LyPy"
-   },
+   "metadata": {},
    "source": [
     "## **5. ECM Proof**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bqfIsTRXLyK6"
-   },
+   "metadata": {},
    "source": [
     "Assume we have two cointegrated $I(1)$ time series $x_t$ and $y_t$. We can write the long-term equilibrium as follows:\n",
     "\n",
@@ -600,36 +550,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "J7UYLR43LyFY"
-   },
+   "metadata": {},
    "source": [
     "## **6. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vsyf9oA0lSnP"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we looked into when we may have to run a regression on non-stationary time series. We discussed the issue of spurious regression. We then introduced the concept of cointegration among two non-stationary time series. If the two time series are cointegrated, we can run an OLS regression without issue. Lastly, we introduced the error correction model, which can model both the short-term activity and long-term equilibrium of two cointegrated time series. In next lesson, we will extend our analysis to multiple time series.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Bp4rsrPSlVMW"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "46Em_l46ldTQ"
-   },
+   "metadata": {},
    "source": [
     "- Engle, Robert F., and C. W. J. Granger. \"Cointegration and Error Correction: Representation, Estimation and Testing.\" Econometrica, vol. 55, no. 2, 1987, pp. 251–276.\n",
     "\n",
@@ -640,10 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -673,8 +612,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
