--- a/module-6/lesson-4/Financial_Econometrics_Module_6_Lesson_4.ipynb
+++ b/module-6/lesson-4/Financial_Econometrics_Module_6_Lesson_4.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **VECTOR ERROR CORRECTION MODEL AND JOHANSEN TEST FOR COINTEGRATION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "46Bl0HOclpkD"
-   },
+   "metadata": {},
    "source": [
     "*In last lesson, we discussed the cointegration test for two time series. We also introduced Error Correction Model (ECM). In this lesson, we will look into a cointegration test for more than two time series. First, we will review the cointegration concept with more than two time series. Then, we will introduce the vector error correction model (VECM) as this is the model structure used for multivariate cointegration analysis. Next, we will introduce Johansen cointegration test for more than two time series.*"
    ]
@@ -79,18 +71,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "WbdEajz0lpfo"
-   },
+   "metadata": {},
    "source": [
     "## **1. Cointegration with More Than Two Time Series**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vkaGrLuplpbS"
-   },
+   "metadata": {},
    "source": [
     "First, let’s review the concept of cointegration in the case of multiple time series. An integrated time series of order $d$ can be written as $I(d)$. When we take the difference $d$ times, this series will turn into a stationary, $I(0), $ series. In this lesson, we will only deal with integrated time series of $I(1)$.\n",
     "\n",
@@ -105,18 +93,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "djiPkr8ZlpW5"
-   },
+   "metadata": {},
    "source": [
     "## **2. Vector Error Correction Model (VECM)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "mTXacBc1lpTD"
-   },
+   "metadata": {},
    "source": [
     "Vector error correlation models are related to vector autoregressive models (VARs) introduced in Module 6, Lesson 2. If we have three time series, $x_t$, $y_t$ and $z_t$, we can write the VAR(1) model with these three time series as follows:\n",
     "\n",
@@ -217,27 +201,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tMZ9kNLclpPc"
-   },
+   "metadata": {},
    "source": [
     "## **3. Johansen Cointegration Test**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9YBegzK4lpKQ"
-   },
+   "metadata": {},
    "source": [
     "There are two types of sequential tests proposed by Johansen to test cointegration for multiple time series: trace test and maximum eigenvalue test. They are both likelihood-ratio tests. Both tests run a series of tests on the rank of $\\Pi$ we discussed in the last section to decide the number of cointegration relationships in a time series vector.  These two tests have the same null hypothesis. The difference is the alternative hypothesis. Let’s use the following example to explain how the two tests work.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QTMP-_DSlpGA"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Johansen Tests: Trace Test and Eigenvalue Test Demonstration**\n",
     "\n",
@@ -246,9 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-yyw2bT5lpBz"
-   },
+   "metadata": {},
    "source": [
     "In figure 1, we show the hypothesis test setup for trace test and maximum eigenvalue test. $r$ is the rank of $\\Pi$. We can see both null hypotheses start from rank = $0$, i.e., there is no cointegration. If we reject test 1, we move on to test 2. If we reject test 2, we move on to test 3 until we cannot reject null hypothesis or until we reach $K-1$ rank. $K$ is the total number of time series in the time series vector for testing. Once we stop, we can decide what the rank is and how many linear combinations or co-integrating relationships exist. \n",
     "\n",
@@ -257,18 +233,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "K2VXE3cblo-V"
-   },
+   "metadata": {},
    "source": [
     "## **4. Johansen Test Application: AUDUSD, NZDUSD, and CADUSD**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fJ2obTdrlo5k"
-   },
+   "metadata": {},
    "source": [
     "In this section, we will use what we learned from last section to find the number of co-integrating relationships among AUDUSD, NZDUSD, and CADUSD foreign exchange rates from 2016 to 2021. In this example, we will use software to conduct the test. Let’s draw the time plot of the three time series first. \n"
    ]
@@ -298,9 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qLI9WogLlotX"
-   },
+   "metadata": {},
    "source": [
     "In figure 2, we can see all three time series seem to move together. Before running a cointegration test, we would like to check CADUSD to see if it is stationary. Let’s run ADF on CADUSD.\n"
    ]
@@ -336,9 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LEf6popTloky"
-   },
+   "metadata": {},
    "source": [
     "From figure 3, we can see that the CADUSD level has a unit root whereas the CADUSD first difference is stationary. Hence, we can say CADUSD is $I(1)$. Now, we can proceed to conduct a Johansen test for cointegration. We will use a trace test in this example. \n",
     "\n",
@@ -371,9 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ER7MzKs0locw"
-   },
+   "metadata": {},
    "source": [
     "From figure 4, we can see all the information criteria select lag 1 for the level of the VAR model. \n",
     "\n",
@@ -424,9 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "WZoogn21loVq"
-   },
+   "metadata": {},
    "source": [
     "Figure 5 shows the result of the Johansen trace test. The top part in Figure 5 shows the result for three tests: $H_0$: rank = $0$, $H_0$: rank = $1$, and $H_0$: rank = $2$. Let’s use 5% as our decision point. For $H_0$: rank = $0$ we can see the test statistic is 32.8897 and the 5% critical value is 29.7961. We reject $H_0$ and say the rank is not $0$ or a cointegration relationship would exist. Next, we investigate $H_0$: rank = $1$. The test statistic is 14.7392 and the 5% critical value is 15.4943. Hence, we cannot reject $H_0$: rank = $1$. There is one linear combination of three time series variables that is stationary. The coefficients of the linear combination are in the second part under '*Cointegration relations for loading-coefficients-column 1*' heading. We can write the linear combination as follows:\n",
     "\n",
@@ -466,9 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wSQBkkmVloM2"
-   },
+   "metadata": {},
    "source": [
     "From figure 6, we can see the deviation from long-term equilibrium is moving within a channel. Let’s take a look at the ADF test for the deviation.\n"
    ]
@@ -494,9 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "h8XLc_EGloDu"
-   },
+   "metadata": {},
    "source": [
     "From figure 7, we can see that we easily reject that the deviation has a unit root because the test statistic (-4.198) is below 5% critical value (-1.94). \n"
    ]
@@ -514,46 +474,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "CGGfPTj3loAD"
-   },
+   "metadata": {},
    "source": [
     "## **6. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dsfrWJ4Mln8o"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we expanded our cointegration analysis to multiple time series. We first talked about the meaning of cointegration in the case of multiple time series. We then introduced the vector error correction model (VECM) as a foundation to understand the analysis of cointegration in multiple time series. We discussed the rank of $\\Pi$ coefficient matrix and the meanings of different ranks. We then introduced Johansen cointegration tests. We talked about two types of Johansen cointegration tests: trace test and maximum eigenvalue test. We showed how both tests are set up. We finished the lesson with one application of the Johansen trace test and demonstrated how to read the test results. This lesson concludes module 6. In the next module, we will introduce another model: agent-based modeling. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NsyFnCT1ln4O"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "flE1WZO8ln0c"
-   },
+   "metadata": {},
    "source": [
     "- Johansen, Søren. \"A Statistical Analysis of Integration for I(2) Variables.\" Econometric Theory, vol. 11, no. 1, 1995, pp. 25–59.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -583,8 +532,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
