--- a/module-7/lesson-1/Financial_Econometrics_Module_7_Lesson_1.ipynb
+++ b/module-7/lesson-1/Financial_Econometrics_Module_7_Lesson_1.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **MONTE CARLO SIMULATION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ea7D_sAkslKB"
-   },
+   "metadata": {},
    "source": [
     "*In this module, we are going to explore some new modeling techniques in financial econometrics. We will introduce agent-based modeling and classification. They are different from traditional regression based analysis. They are both relatively new methods compared to regression analysis. However, they have gained a lot of interest recently. In this lesson, we will first introduce some concepts that will help us understand agent-based modeling later. Specifically, we will discuss deterministic models and stochastic models. Then, we will introduce Monte Carlo simulation.*"
    ]
@@ -50,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "7776be64-63b7-4223-a147-f123e65b712a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
@@ -64,18 +54,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "plavCIk9slFW"
-   },
+   "metadata": {},
    "source": [
     "## **1. Deterministic Models**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hbqLn4AKslAx"
-   },
+   "metadata": {},
    "source": [
     "**Deterministic models** are models that do not have a random term. Let’s look at one example. Assume you put \\$10 dollars in an investment account at the beginning of each month. The account would give you a **fixed annual interest** of 40% compounding monthly. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
     "\n",
@@ -86,9 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rp0sdFNDCSBv"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Deterministic Model: Cumulative Account Balance with Monthly $10 Dollars Investment and Fixed Annual Interest**\n"
    ]
@@ -96,10 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "138c41f4-1385-403a-8330-dd523752a4e2",
-    "outputId": "ab0a32d3-78fd-4737-ded2-5e79833ca32b"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Deterministic Model\n",
@@ -124,9 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xz3SBz0Osk0y"
-   },
+   "metadata": {},
    "source": [
     "Figure 1 shows the cumulative account balance at the end of each month. With this model, we can accurately predict how much money is in the account at each month's end. There is no uncertainty within this model. If one invests \\\\$10 dollars at the beginning of every month, one will get \\\\$149.46 dollars by the end of the year. One can be 100% sure how much money will be in the account after one year if the amount of monthly investment is known in advance. \n",
     "\n",
@@ -135,18 +114,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "G-a2MaNRskwt"
-   },
+   "metadata": {},
    "source": [
     "## **2. Stochastic Models**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "x8bv_HDlskst"
-   },
+   "metadata": {},
    "source": [
     "**A stochastic model** is a model that has a random and unknown component in it. Let’s go back to the example in the last section. Assume you put \\$10 dollars in an investment account at the beginning of each month. However, now the account would give you a **variable annual interest** adjusting and compounding monthly. The annual interest rate is a random variable and, for instance, follows a normal distribution with mean 40%. We cannot know the definitive numbers of all future interest revenues from the investment at time 0. There is uncertainty in predicting the future cumulative account balance. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
     "\n",
@@ -159,9 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-xyhGwhUChFc"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Stochastic Model: Cumulative Account Balance with a Monthly $10 Dollar Investment and Variable Annual Interest**\n"
    ]
@@ -169,10 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "95b9c509-5f5a-4af4-af99-f482872addda",
-    "outputId": "938b101e-e80a-4339-ba6d-2c7550946f9a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Stochastic model 1\n",
@@ -196,18 +166,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "awdjHKMfskkF"
-   },
+   "metadata": {},
    "source": [
     "From figure 2, we can see the trend in the stochastic model is going up and is similar to the case for the deterministic model. However, a stochastic model has a squiggly line instead of a smooth line as in a deterministic model. This squiggly pattern comes from the fact that the variable annual interest rates applied to each month are different. Unlike a deterministic model, at time 0, the stochastic model cannot predict a precise number for what the account balance will be by the end of the year. We know the variable annual interest comes from a normal distribution with a mean of 40%, but we do not know the definite numbers. What we can do is sample 12 numbers from the distribution and apply them to the model to predict the account balance in a year. This is what we did in this example. However, if we repeat the same prediction process—sample another 12 numbers from the distribution and apply them to the model—we will very likely get another predicted account balance in a year. Every time we repeat the prediction process, we get a different account balance. The key difference between the deterministic model and stochastic model is that the prediction from the deterministic model is always the same no matter how many times one repeats the prediction process. However, the prediction outcome will be different from a stochastic model each time a researcher repeats the prediction process as shown in the following plot.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eImCIfulC052"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: Three Different Prediction Paths for a Stochastic Investment Account Balance Model**\n"
    ]
@@ -215,10 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "2d144575-a9e5-4e5a-a375-b3cab76b7b44",
-    "outputId": "6fc29e1a-9468-420d-df2b-9c0a1faf9b92"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Three different prediction paths\n",
@@ -260,9 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nAWihLVIskb-"
-   },
+   "metadata": {},
    "source": [
     "In figure 3, we show three predicted cumulative account balance paths of the stochastic model. As you can see, all three of them follow the same trend in general with different variations. Their predicted outcomes for cumulative account balances by the end of a year are also different, as the plot indicates. This is the key difference between a deterministic model and a stochastic model. In a stochastic model, for each prediction activity, because of the random component in the model, you get a new line when you have a new set of sampled input data. In a deterministic model, no matter how many times you run prediction activities, you should always get the same line.\n",
     "\n",
@@ -271,27 +232,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "72UMvMQwskXz"
-   },
+   "metadata": {},
    "source": [
     "## **3. Monte Carlo Simulation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "czfzKXZdskTw"
-   },
+   "metadata": {},
    "source": [
     "### **3.1 An Overview of Monte Carlo Simulation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tCh3IymmskPi"
-   },
+   "metadata": {},
    "source": [
     "In the last section, we learned that a stochastic model would generate a different prediction outcome for each prediction run due to the random component within the model. The prediction outcome of a stochastic model is not definite. We can generate samples from independent random variables in a stochastic model and apply them to the model to derive one predicted outcome. In the last section, we drew three sets of sampled data to generate three predicted lines in figure3. We can repeat the process multiple times, and we will get multiple predicted cumulative account balances. These predicted outcomes will form a distribution. We can calculate the average and use the average as our final prediction for the cumulative account balance. However, how accurate is this averaged cumulative account balance? We can use the variance derived from the distribution from sampled data to conduct statistical tests to check the accuracy of the averaged outcome. This technique is called Monte Carlo (MC) simulation. \n",
     "\n",
@@ -302,18 +257,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "EgzkeTX0skLw"
-   },
+   "metadata": {},
    "source": [
     "### **3.2 Law of Large Numbers and Central Limit Theorem**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0VzOq5rbskHh"
-   },
+   "metadata": {},
    "source": [
     "Let’s quickly review LLN and CLT first. Assume we have a sequence of identically and independently distributed n random variables $x_1, x_2, \\cdots, x_n$. All the random variables have mean $\\mu$ and variance $\\sigma^2$. Let’s define the average of the sequence as follows:\n",
     "\n",
@@ -330,18 +281,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "CRWsYOfsskDY"
-   },
+   "metadata": {},
    "source": [
     "### **3.3 Estimators for Unknown Stochastic Model Outcome Expected Value and Variance**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bjEh71ujsj_Y"
-   },
+   "metadata": {},
    "source": [
     "According to the law of large numbers, the average of a very large sample is a good approximation of the unknown model outcome, meaning $\\mu$. Hence, if we run random samplings for $m$ times to get $m$ model outcomes and $m$ is large enough, the sample average\n",
     "\n",
@@ -377,9 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MIJrzrv1sj7k"
-   },
+   "metadata": {},
    "source": [
     "### **3.4 Monte Carlo Simulation Application: Investment Account Balance Stochastic Model**\n",
     "\n",
@@ -389,9 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "E3JoiMgasj2y"
-   },
+   "metadata": {},
    "source": [
     "Let’s use our investment account balance stochastic model as an example to run Monte Carlo simulation. The stochastic model is as follows:\n",
     "\n",
@@ -413,9 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Kb5MxWQ0DG81"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: MC Simulation with 100 Trials, 1,000 Trials, 100,000 Trials and 1 Million Trials**\n"
    ]
@@ -423,12 +364,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "96743fbd-129e-49bf-80ec-4c6b207c841a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Monte Carlo Simulation\n",
+    "\n",
     "\n",
     "# Helper function that plots histogram and prints statistics\n",
     "def Hist(trials):\n",
@@ -467,10 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "1f0cf87e-2314-4e77-bca0-71b55284d7b0",
-    "outputId": "458a97ba-e756-40b9-c9f8-cdb94daf6d0b"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot four histograms\n",
@@ -536,9 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ot0CXqansjmt"
-   },
+   "metadata": {},
    "source": [
     "Figure 4 shows the histograms of predicted account balance distribution with a different number of trials. We can see as the number of trials increases, the shape of the histogram will become more concentrated.\n",
     "\n",
@@ -547,28 +482,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MSn1O1pssji0"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "jLygOoqMsjeu"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced some new concepts to set the foundation for learning agent-based modeling later. We first discussed deterministic models, that is, models without any random component or uncertainty within the model. When one uses a deterministic model for prediction, the prediction outcome is certain. Then, we considered stochastic models, i.e., models with a random component. Because of the randomness, if one runs simulations many times and uses simulation results, the predictions obtained will in general be different for different simulations. In order to analyze multiple prediction outputs, we introduced the concept of Monte Carlo simulation. A Monte Carlo simulation repeatedly samples data from the model to generate predicted outcomes and perform inference about the model. With these concepts in hand, we move on to introduce agent-based modeling in the next lesson.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -598,8 +526,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
