--- a/module-7/lesson-2/Financial_Econometrics_Module_7_Lesson_2.ipynb
+++ b/module-7/lesson-2/Financial_Econometrics_Module_7_Lesson_2.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **AGENT-BASED MODELING I**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,27 +34,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Qkg2A5SHwsZZ"
-   },
+   "metadata": {},
    "source": [
     "*In this lesson and the next one, we will be talking about a new and popular model to analyze complex systems: Agent-Based Modeling (ABM). One of the key differences of agent-based modeling is it models individuals or agents' behavior in the system instead of the aggregated behavior of all individuals in traditional modeling approaches. Since agent-based modeling analyzes the impact of each individual’s actions in the system, this is a computer-intensive method. In this lesson, we will talk about the general concept, the component properties, and the model structure in agent-based modeling. We then provide a very simple example to give some idea of how agent-based modeling works. This lesson and the next lesson will cover our agent-based modeling topic.*"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4mkKYARCwsUj"
-   },
+   "metadata": {},
    "source": [
     "## **1. Agent-Based Modeling Overview**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JKL_7temwsP0"
-   },
+   "metadata": {},
    "source": [
     "**Agent-based model and simulation (ABM or ABMS)** aims to model a complex system and obtain insights from this system. The complex system contains autonomous but diverse agents and an environment where agents can interact with each other. Each agent has their own behavioral characteristics and their behaviors will evolve from interacting with other agents and learning their behaviors. ABM uses a Monte Carlo simulation to simulate the complex system by following the rules set up for agents' attributes, the environment, ways of agents' interactions, and possibly agents' learning mechanisms. The researcher can then conduct analysis on the simulated results. \n",
     "\n",
@@ -75,18 +63,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zBEifr55wsKx"
-   },
+   "metadata": {},
    "source": [
     "## **2. Thomas Schelling’s Model of Segregation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ElEm3VzNwsFs"
-   },
+   "metadata": {},
    "source": [
     "American economist Thomas Schelling (1997) introduced a model to analyze why people of similar backgrounds, like ethnicity, race, or socioeconomic status tend to live close to each other. The model shows that even with people who do not mind living with people from other backgrounds, over time, people still choose to move to area with people of the same background. We will use the following simplified version of the segregation model with two different groups of people as our base model to explain agent-based modeling. \n",
     "\n",
@@ -95,9 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "z7xMHnyzwsBI"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: Segregation Grid with Group X and Group Y**\n",
     "\n",
@@ -106,9 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rKbcDhHdwr9e"
-   },
+   "metadata": {},
    "source": [
     "In figure 1, we can see there are three types of cell status on the grid: the ones occupied by X, the ones occupied by Y and the empty ones. A person is always surrounded by any of these three types. In the segregation model, this person will get satisfaction from how many people from the same group live around them. If this person is not satisfied with the current location, this person will move. The model result states that even if the person’s satisfaction level is not high, there will still be highly segregated communities in society. \n",
     "\n",
@@ -117,9 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "XzX6BQ0kwr31"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2: Moore Neighborhood Example with $r = 0$**\n",
     "\n",
@@ -128,18 +106,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7RqrMMLqwrye"
-   },
+   "metadata": {},
    "source": [
     "From figure 2, we identify neighbors for Person A as people living adjacent to Person A. This means there are no other neighbors between Person A and their neighbors. This is the Moore Neighborhood with $r = 0$. We can extend the idea to $r = 1$. The following figure shows the case when $r=1$.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-jgzBwEUwrul"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3: Moore Neighborhood Example with $r = 1$**\n",
     "\n",
@@ -148,9 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tc32j0DRwrpm"
-   },
+   "metadata": {},
    "source": [
     "We can see from Figure 3 when $r = 1$ not only is the person adjacent to Person A a neighbor but also the person that is one neighbor away from Person A is also a neighbor. We can use the same logic and identify neighbors when $r = 2$. In this lesson, we are going to use $r = 0$ as our neighbor identification rule.\n",
     "\n",
@@ -159,9 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6YcQe8DbwrlL"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4: Neighbors for Y in the Pink Cell**\n",
     "\n",
@@ -170,9 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Cs72gRRkwrf6"
-   },
+   "metadata": {},
    "source": [
     "In figure 4, the Y in pink cell has three neighbors. Two of the three are from the same group. Hence, this agent Y has 2/3 = 66% of neighbors from their own group. If the satisfaction benchmark were $s$ = 25%, then agent Y who is located in the pink cell will be satisfied and will not move. However, if the satisfaction benchmark were $s$ = 75% instead, then agent Y will not be satisfied and will move. \n",
     "\n",
@@ -193,9 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HduuSVoywrWM"
-   },
+   "metadata": {},
    "source": [
     "Figure 5 shows the grid of the initial stage of the simulation and the grid of the final stage of the simulation for a satisfaction benchmark of 0.6. The red and blue cells on the grid represent group X and Y respectively, and the white cells are empty cells. We can see in the finishing stage of the grid that there are red and blue clusters around the grid. It means there is a certain degree of segregation formed autonomously from group X and Y. This is one way to present the simulation result. We will dive deeper to show more ways to present the result with this example in the next lesson.\n",
     "\n",
@@ -204,18 +170,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "c1TRMg4lwrRN"
-   },
+   "metadata": {},
    "source": [
     "## **3. Agent-Based Model Components and Structure**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "R9hTZ6Y-wrMV"
-   },
+   "metadata": {},
    "source": [
     "A typical agent-based model will have the following three key components:\n",
     "\n",
@@ -226,9 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zvZ9u1VYwrHi"
-   },
+   "metadata": {},
    "source": [
     "**Figure 6: Plot of Typical Components in an Agent-Based Model**\n",
     "\n",
@@ -237,55 +197,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "cda85-PJwrCy"
-   },
+   "metadata": {},
    "source": [
     "In figure 5, we show a scheme of a typical agent-based model. A researcher has to identify these three components, set up the model and write a computer program for interactions among agents and between agents and the environment. Once the above steps are ready, the researcher will simulate the model using a Monte Carlo simulation repeatedly to obtain a sufficient amount of simulated results. The researcher will then analyze the results and look for any emerging insights. The simulation process usually works through a timeline assigned before running the simulation. However, this is not necessarily the only case: The simulation can also run according to an activity or event-based schedule. Since ABM is a simulation-based model, this modeling structure does not provide a forecasting function as traditional models do. The focus of agent-based modeling is more on discovering emergent insights from simulated outcomes than on prediction.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pCLMtX1ywq99"
-   },
+   "metadata": {},
    "source": [
     "## **4. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LFS9B3Zswq4P"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we introduced agent-based modeling (ABM). We first gave an overview of ABM. We then also introduced the segregation model as an example of ABM. We finished this lesson with the overview of three key components in ABM. In the next lesson, we will continue our introduction of ABM. We will talk in more detail about the three components and ABM results. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xruf1PKPwqzJ"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ErI-bJRmwquE"
-   },
+   "metadata": {},
    "source": [
     "- Schelling, Thomas C. \"Dynamic Models of Segregation.\" The Journal of Mathematical Sociology, vol. 1, no. 2, 1997, 143–186.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -315,8 +262,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
