--- a/module-7/lesson-3/Financial_Econometrics_Module_7_Lesson_3.ipynb
+++ b/module-7/lesson-3/Financial_Econometrics_Module_7_Lesson_3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **AGENT-BASED MODELING II**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "j11oF5Hyzxi4"
-   },
+   "metadata": {},
    "source": [
     "*In the last lesson, we went through the overview of the agent-based model (ABM) and introduced the segregation model as an example. In this lesson, we will continue our discussion of ABM. We will go into more detail on the three components of ABM. Then, we will talk about the types of results and model validation of ABM. We will finish the lesson with a demonstration of the programming procedure for an ABM example.*"
    ]
@@ -63,36 +55,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fg-YORvkzxdN"
-   },
+   "metadata": {},
    "source": [
     "## **1. Three components of Agent-Based Models**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rYm22mjKzxXu"
-   },
+   "metadata": {},
    "source": [
     "### **1.1  Agent Characteristics**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rQaIZkpizxR9"
-   },
+   "metadata": {},
    "source": [
     "Like we stated in the previous lesson, an agent can be a consumer, a trader, an organization, or even a virus. Agents are assumed to be autonomous decision makers and behave according to the rules set out for them. Agents can be heterogeneous, i.e., different agents can have different behavioral rules and attributes. In order to create an agent for the model, a researcher would usually have to assign attributes and interaction rules among each agent and the other agents and the interactions between agents and the environment. We also need to define each agent’s goal(s). Figure 1 illustrates what type of information is needed to describe a generic agent.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zJ9vhv9GzxLM"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1: The Construct of an Agent**\n",
     "\n",
@@ -101,9 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "a742ikAZzwr4"
-   },
+   "metadata": {},
    "source": [
     "In the figure, we can see that there are static attributes and dynamic attributes. A static attribute is an attribute that will not change during the process of simulation, such as a consumer’s name or a stock trader’s company, etc. The dynamic attributes of an agent are attributes that will evolve during the simulation process. Agents'  memory is one example. An agent’s memory at the initial stage can be different from their memory at different points in time as the simulation progresses. The memory is updated as the simulation operates. The neighbors of an agent are also a dynamic attribute. The neighbors around the agent during the very early stages can change as the simulation progresses and agents are allowed to move around. \n",
     "\n",
@@ -112,18 +94,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1a49clNQzwZz"
-   },
+   "metadata": {},
    "source": [
     "### **1.2. Topology**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ENIWz-VczwUA"
-   },
+   "metadata": {},
    "source": [
     "The next component of ABM is a scheme or a mechanism called **topology**. Topology is a set of rules describing an agent’s behaviors, relationship with other agents, method of interacting with other agents and the environment, and possibly the agent’s method to adapt after learning new information about other agents or the environment. It also provides guidelines on how an agent makes decisions. \n",
     "\n",
@@ -132,18 +110,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fRrNBrMlzwOU"
-   },
+   "metadata": {},
    "source": [
     "### **1.3. Environment**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tduE0ac4zwI0"
-   },
+   "metadata": {},
    "source": [
     "Agents interact with their current environment. As such, the environment not only provides information to track an agent’s location but can also be used for modeling. The environment can also serve as shocks that are administrated to the model. These shocks will affect agents' behaviors or topology rules. There can be endless shocks to the system. A researcher needs to have good subject knowledge to choose appropriate shocks to simulate.\n",
     "\n",
@@ -152,18 +126,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BdQHpPnUzwDG"
-   },
+   "metadata": {},
    "source": [
     "## **2. ABM Results**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "O8mgBYAwzv9p"
-   },
+   "metadata": {},
    "source": [
     "Once we have set up our agent-based model, we will use Monte Carlo to simulate the model repeatedly to generate multiple simulated outcomes to obtain the distribution of the outcomes and then summarize the outcomes. \n",
     "\n",
@@ -191,27 +161,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ebgeyotAzvy4"
-   },
+   "metadata": {},
    "source": [
     "Figure 2 exhibits two plots from the simulations. The grid on the left is the final grid after simulation. We can see that there are clear clusters of segregated groups. On the right is the timelapse plot to show in which round of the simulation that all people are satisfied. We can see the simulation reaches all agent satisfaction around the 30th round. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fR41hhXwzvtX"
-   },
+   "metadata": {},
    "source": [
     "## **3. Model Validation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bbGUjobgzvnc"
-   },
+   "metadata": {},
    "source": [
     "Since agent-based modeling is a simulation-based modeling approach, it is difficult to validate the accuracy of the model. Unexpected results can come out of the simulation due to initial input data selection for the simulation or coding issue. Here are a few steps we can take to avoid the above issues.\n",
     "\n",
@@ -232,18 +196,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "IyfoPrtQzviD"
-   },
+   "metadata": {},
    "source": [
     "## **4. Application: Computer Program for Segregation Model**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "UZqcsEtDzvct"
-   },
+   "metadata": {},
    "source": [
     "In the previous sections, we talked about the theory of agent-based models and we used segregation model as an example to illustrate how agent-based model works. Since another important part of agent-based model is programming, we will provide the programming code for segregation models in this section. There are few of dedicated Python packages out there that automate building of the Agent Based Models with the further purpose of their usability or applications in various research fields such as Economics, Biology, Chemistry, etc. Here we implement the code in poor Python script. Python code in this lesson is based on the code developed by Geraint Ian Palmer (2017). This Python implementation employs object-oriented programming (OOP) features.\n",
     "\n",
@@ -543,9 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "03cUxEyv2b5y"
-   },
+   "metadata": {},
    "source": [
     "In this piece of code above we have applied `worlds06.play(threshold=0.00)`. The processes involved in this operation can be summarized as follows: \n",
     "\n",
@@ -574,9 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "stmT-6sT2y3R"
-   },
+   "metadata": {},
    "source": [
     "The plot above shows the final distribution of agents with the satisfaction benchmark = 0.6 on the left. We can see that there are clear clusters of the same group of agents who live close to each other. The plot on the right shows the percentage of happy agents among all agents at the end of each round. We can see that, after about 20th round, almost all agents are happy with their locations and there were almost no relocation actions. \n",
     "\n",
@@ -631,46 +587,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NTF_ijL02ytZ"
-   },
+   "metadata": {},
    "source": [
     "## **5. Conclusion**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RSjTq6VY2ynk"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we continued our analysis of agent-based modeling. We discussed in detail the three components of ABM. We then talked about the types of result we usually get from ABM. Furthermore, we also touched upon the validation methods of ABM. We ended ABM with our segregation model with computer code to give students a better idea of how to implement an ABM. In the next lesson, we will move to a new topic: Classification.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MzrXHFfn2yiw"
-   },
+   "metadata": {},
    "source": [
     "## **References**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qpQQOGWO2bsq"
-   },
+   "metadata": {},
    "source": [
     "- Geraint Ian Palmer, \"Schelling's segregation model\", Aug 19 2017, http://www.geraintianpalmer.org.uk/2017/08/19/schelling-segregation/\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -701,8 +646,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
