--- a/module-7/lesson-4/Financial_Econometrics_Module_7_Lesson_4.ipynb
+++ b/module-7/lesson-4/Financial_Econometrics_Module_7_Lesson_4.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfW_Ou-KVGAa"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## FINANCIAL ECONOMETRICS\n",
@@ -15,18 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fxyw4X77VO2I"
-   },
+   "metadata": {},
    "source": [
     "# **SUPERVISED LEARNING AND UNSUPERVISED LEARNING MODELS**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TAQ1bo80VOqJ"
-   },
+   "metadata": {},
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -40,27 +34,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0bq-Iq_Q3X7L"
-   },
+   "metadata": {},
    "source": [
     "*In this lesson, we are going to explore basic concepts in machine learning. We will have a new module dedicated to the topic of machine learning, but in this lesson we are going to provide a high-level overview of machine learning and introduce several basic concepts in this field. We will leave the in-depth discussion of various machine learning topics for the next module. We will start by introducing the concepts of supervised learning and unsupervised learning. Then we will present one model from the supervised learning group and one model from the unsupervised learning group. The model from supervised learning group will be about classification and, specifically, it will rely on discriminant analysis. The model from the unsupervised group, on the other hand,  will be based on cluster analysis. We will delve into a deeper discussion about discriminant analysis while for cluster analysis we will limit ourselves to a brief overview.  Cluster analysis will receive a deeper coverage in the Machine Learning class.*"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "FvJx1UKH3X2M"
-   },
+   "metadata": {},
    "source": [
     "## **1. Supervised Learning**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rpmJp-kp3Xwm"
-   },
+   "metadata": {},
    "source": [
     "**Supervised Learning** means that a model is constructed to predict data with label. What does it mean in plain English? For example, if there 10 cats, 10 dogs and 10 chickens in the assigned dataset,  for these 30 animals, we also have a description of their feature variables, like the shape of their noses, the shape of their mouth, fur type, body type etc… We would like to build a model using feature variables as input variables to predict if an animal is a cat, a dog or a chicken. Once the model is created, we are able to feed the features of a certain animal to this model and the model tells us what this animal is. This simple modeling concept is the same concept of a more complicated facial recognition model used in Apple’s iPhone. \n",
     "\n",
@@ -75,18 +63,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "RWRF8jOY3Xsm"
-   },
+   "metadata": {},
    "source": [
     "## **2. Unsupervised Learning**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "W_b8j2Uu3Xo0"
-   },
+   "metadata": {},
    "source": [
     "Sometimes, for a data project, we may not have a target variable or an output variable that we want to predict. Instead, we would like to analyze the data and see if we can group the data according to a particular pattern, similarity or features etc... We can also say that with unlabeled data, we would like to use the information we have from the data to assign it to certain groups. Models that aim at grouping unlabeled data are defined as **Unsupervised Learning**.  These models need to find the hidden pattern within the data in order to separate the data into group elements. \n",
     "\n",
@@ -99,18 +83,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gFQG5EKo3Xi8"
-   },
+   "metadata": {},
    "source": [
     "## **3. Discriminant Analysis**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "f6MQs4Mp3Xd7"
-   },
+   "metadata": {},
    "source": [
     "**Discriminant analysis (DA)** is a type of model used for supervised learning modeling. DA is used to predict the category of the subject given certain input data about the subject. One example we talked about in last section is to predict if an animal is a cat, a dog or a chicken given this animal’s feature information. Hence, we also call DA a **Classification** model. A DA model is only used for analysis with categorical output. \n",
     "\n",
@@ -119,9 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8xaT5zF83XaD"
-   },
+   "metadata": {},
    "source": [
     "**Figure 1. Scatter Plot of Active Traders and Passive Traders**\n",
     "\n",
@@ -130,27 +108,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kpS7fGMc3XUb"
-   },
+   "metadata": {},
    "source": [
     "In Figure 1, we can see that active traders usually have higher number of trades but short during for position holding and passive traders do the reverse. However, how can we use these two input variables to better predict the type of a trader? We can use DA in this case. Specifically, we will use **Linear Discriminant Analysis (LDA)**. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dgS4wf0T3XQv"
-   },
+   "metadata": {},
    "source": [
     "### **3.1. Linear Discriminant Analysis (LDA): Theory**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1502d-_e3XK0"
-   },
+   "metadata": {},
    "source": [
     "**Linear Discriminant Analysis (LDA)** provides a method to assign or classify a subject whose type is unknown to a type based on particular input data for this subject. In our example above, if we have a trader that we don’t know whether he/she is an active or a passive trader, but we have the data regarding this trader’s holding duration and number of trades, we can use LDA to predict if this trader is an active trader or a passive trader. \n",
     "\n",
@@ -183,9 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "amjDymCM3XFn"
-   },
+   "metadata": {},
    "source": [
     "**Figure 2. Scatter Plot for Input Variables X and Y and Output Variable K with 3 Types**\n",
     "\n",
@@ -194,9 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oZcNyHGG3XAJ"
-   },
+   "metadata": {},
    "source": [
     "Figure 2 illustrates what we just discussed about. $\\bar{X},\\bar{Y}$ are the sample means in each type. $\\sum$ is the variance-covariance matrix in each type. We require the following assumptions so we can apply LDA.\n",
     "\n",
@@ -229,18 +197,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nmVTe4ub3W8T"
-   },
+   "metadata": {},
    "source": [
     "### **3.2. Linear Discriminant Analysis (LDA): An Application**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HZsvcnJ13W22"
-   },
+   "metadata": {},
    "source": [
     "In this section, we provide a simple example of an application of  LDA. Let’s continue with our trader type example introduced earlier.\n",
     "\n",
@@ -263,18 +227,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "mm3Q-Npn3WyB"
-   },
+   "metadata": {},
    "source": [
     "## **4. Cluster Analysis**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "pRSlGZFM3Wso"
-   },
+   "metadata": {},
    "source": [
     "In this section, we will talk about  a popular method in unsupervised learning modeling group: **Cluster Analysis**. Unlike classification analysis, there is no categorical output variable in the dataset for cluster analysis. Cluster analysis analyze unlabeled dataset to find similarity among data points and create clusters from the data accordingly. One example is that you have 100 stocks and for each stock we know: company name, type of company, annual sales, margin, historical price, PE ratios etc… With all this information, we would like to segment the 100 stocks into clusters of similar characteristics. We don’t have any preset view on these 100 stocks and we just want to use the available data to see if the data can offer insights on similarity in these stocks. \n",
     "\n",
@@ -283,27 +243,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2p6aZn9T3Wo6"
-   },
+   "metadata": {},
    "source": [
     "### **4.1. Hierarchical Clustering**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qE98RsQ33Wjg"
-   },
+   "metadata": {},
    "source": [
     "Hierarchical Clustering begins with treating each data point as a cluster. It then uses a **linkage function** to decide which two data points are close to each other and combine them as a new cluster. Hierarchical clustering repeats the process until all data points are in one cluster. During this merge process, we can draw the following hierarchical clustering dendrogram. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "iRqqLM9U3WfV"
-   },
+   "metadata": {},
    "source": [
     "**Figure 3. Dendrogram Example**\n",
     "\n",
@@ -312,18 +266,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "01kLrSj53WaA"
-   },
+   "metadata": {},
    "source": [
     "Figure 3 shows an example for dendrogram. We can see the process for Hierarchical clustering is to start from the bottom and merge data points that are closest to each other. It then continues to merge the new clusters with other data points or clusters until it forms a big cluster for all data points. The next step is to decide how many clusters to form for these data points.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Htfy_uYr3WWA"
-   },
+   "metadata": {},
    "source": [
     "**Figure 4. Dendrogram with Possible Cluster Choices**\n",
     "\n",
@@ -332,9 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KXm3JRY63WRG"
-   },
+   "metadata": {},
    "source": [
     "Choosing how many clusters to accept is more of an art than a science. In Figure 4, we show two options for the same dendrogram. The dendrogram on the left is divided in  3 clusters and the dendrogram on the right is divided in 2 clusters. We first draw a red line across the dendrogram. On the left dendrogram, the red line cuts across 3 vertical lines. All the data points connected to this vertical line forms a cluster. 3 vertical lines form 3 clusters as shown in Figure 4. We do the same thing for the dendrogram on the right except this time we draw the red line higher. Because we draw the red line higher it only cuts across 2 vertical lines. 2 vertical lines form 2 clusters. All the data points connected to a vertical line belong to the same cluster. \n",
     "\n",
@@ -343,18 +291,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dL8SUUOG3WMz"
-   },
+   "metadata": {},
    "source": [
     "### **4.2. $K$-Means Procedure**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "9K9kx6BN3WIK"
-   },
+   "metadata": {},
    "source": [
     "Another popular clustering analysis method is **$K$-Means Procedure**. $K$ in $K$-Means means the number of clusters to choose. For this method, we need to pre-select how many clusters we would like to have. Usually, we would select a few options and run through $K$-Means for each option. Then then we would conduct common features investigation for the cluster result as we describe in Hierarchical clustering. For example, for a clustering project, one could choose 3 clusters, 4 clusters and 5 clusters to run $K$-Means. One would run 3-cluster $K$-Means procedure, generate 3 clusters, investigate the features in 3 clusters to see if there are distinct differences among clusters and take a note. Then one would move to a 4-cluster $K$-Means procedure and repeat the same exercise until all cluster options are done. Then choose the number of clusters that provide the most insights for the project goal.\n",
     "\n",
@@ -374,28 +318,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zOqcJxbN3WDZ"
-   },
+   "metadata": {},
    "source": [
     "## **6. CONCLUSION**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1fS6jFId3V-m"
-   },
+   "metadata": {},
    "source": [
     "In this lesson, we gave a high-level overview of the basics of Machine Learning. We first introduced the relevant definitions and discussed the differences between supervising learning and unsupervised learning. Then we introduced one modeling method for each category. For supervised learning, we talked about classification,  looked at linear discriminant analysis and provided one application of how it can be used in finance. Then we introduced cluster analysis for unsupervised learning. We gave a brief overview of hierarchical clustering and K-means procedure. This lesson offers some idea of what is covered in the Machine Learning class. This lesson completes the  Financial Econometrics class.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "Copyright 2023 WorldQuant University. This\n",
@@ -425,8 +362,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
